--- a/laxyam/padyam/purANam/nArAyaNIyam/011.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/011.md
@@ -3,61 +3,140 @@ title: ०११
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्रमेण सर्गे परिवर्धमाने कदापि दिव्याः सनकादयस्ते ।  
 भवद्विलोकाय विकुण्ठलोकं प्रपेदिरे मारुतमन्दिरेश ॥ १॥
+</details>
+<details><summary>मूलम्</summary>
+
+क्रमेण सर्गे परिवर्धमाने कदापि दिव्याः सनकादयस्ते ।  
+भवद्विलोकाय विकुण्ठलोकं प्रपेदिरे मारुतमन्दिरेश ॥ १॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मनोज्ञनौश्रेयसकाननाद्यैरनेकवापमिणिमन्दिरैश्च ।  
 अनोपमं तं भवतो निकेतं मुनीश्वराः प्रापुरतीतकक्ष्याः ॥ २ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+मनोज्ञनौश्रेयसकाननाद्यैरनेकवापमिणिमन्दिरैश्च ।  
+अनोपमं तं भवतो निकेतं मुनीश्वराः प्रापुरतीतकक्ष्याः ॥ २ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवद्दिदृक्षून्भवनं विविक्षून्द्वाःस्थौ जयस्थान् विजयोऽप्यरुन्धाम् ।  
 तेषां च चित्ते पदमाप कोपः सर्वं भवत्प्रेरणयैव भूमन् ॥ ३॥
+</details>
+<details><summary>मूलम्</summary>
+
+भवद्दिदृक्षून्भवनं विविक्षून्द्वाःस्थौ जयस्थान् विजयोऽप्यरुन्धाम् ।  
+तेषां च चित्ते पदमाप कोपः सर्वं भवत्प्रेरणयैव भूमन् ॥ ३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वैकुण्ठलोकानुचितप्रचेष्तौ कष्टौ युवां दैत्यगतिं भजेतम् ।  
 इति प्रशप्तौ भवदाश्रयौ तौ हरिस्मृतिर्नोऽस्त्विति नेमतुस्तान् ॥ ४॥
+</details>
+<details><summary>मूलम्</summary>
+
+वैकुण्ठलोकानुचितप्रचेष्तौ कष्टौ युवां दैत्यगतिं भजेतम् ।  
+इति प्रशप्तौ भवदाश्रयौ तौ हरिस्मृतिर्नोऽस्त्विति नेमतुस्तान् ॥ ४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तेदेतदाज्ञाय भवानवाप्तः सहैव लक्ष्म्या बहिरंबुजाक्ष ।  
 खगेश्वरांसार्पितचारुबाहुरानन्दयंस्तानभिराममूर्त्या ॥ ५॥
+</details>
+<details><summary>मूलम्</summary>
+
+तेदेतदाज्ञाय भवानवाप्तः सहैव लक्ष्म्या बहिरंबुजाक्ष ।  
+खगेश्वरांसार्पितचारुबाहुरानन्दयंस्तानभिराममूर्त्या ॥ ५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रसाद्य गीर्भिः स्तुवतो मुनीन्द्राननन्यनाथावथ पार्षदौ तौ  
 संरम्भयोगेन भवैस्त्रिभिर्मामुपेतमित्यात्तकृपां न्यगादीः ॥ ६॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रसाद्य गीर्भिः स्तुवतो मुनीन्द्राननन्यनाथावथ पार्षदौ तौ  
+संरम्भयोगेन भवैस्त्रिभिर्मामुपेतमित्यात्तकृपां न्यगादीः ॥ ६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वदीयभृत्यावथ काश्यपात्तौ सुरारिवीरावुदितौ दितौ द्वौ ।  
 सन्ध्यासमुत्पादनकष्टचेष्टौ यमौ च लोकस्य यमाविवान्यौ ॥ १७॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वदीयभृत्यावथ काश्यपात्तौ सुरारिवीरावुदितौ दितौ द्वौ ।  
+सन्ध्यासमुत्पादनकष्टचेष्टौ यमौ च लोकस्य यमाविवान्यौ ॥ १७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हिरण्यपूर्वः कशिपुः किलैकः पुरो हिरण्याक्ष इति प्रतीतः ।  
 उभौ भवन्नाथमशेषलोकं रुषा न्यरुन्धां निजवासनान्धौ ॥ ८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+हिरण्यपूर्वः कशिपुः किलैकः पुरो हिरण्याक्ष इति प्रतीतः ।  
+उभौ भवन्नाथमशेषलोकं रुषा न्यरुन्धां निजवासनान्धौ ॥ ८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तयोर्हिरण्याक्षमहासुरेन्द्रो रणाय धावन्ननवाप्तवैरी ।  
 भवत्प्रियां क्ष्मां सलिले निमज्य चचार गर्वाद्विनदन् गदावान् ॥ ९॥
+</details>
+<details><summary>मूलम्</summary>
+
+तयोर्हिरण्याक्षमहासुरेन्द्रो रणाय धावन्ननवाप्तवैरी ।  
+भवत्प्रियां क्ष्मां सलिले निमज्य चचार गर्वाद्विनदन् गदावान् ॥ ९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो जलेशात्सदृशं भवन्तं निशम्य बभ्राम गवेषयंस्त्वाम् ।  
 भक्तैकदृश्यः स कृपानिधे त्वं निरुन्धि रोगान् मरुदालयेश ॥ १०॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततो जलेशात्सदृशं भवन्तं निशम्य बभ्राम गवेषयंस्त्वाम् ।  
+भक्तैकदृश्यः स कृपानिधे त्वं निरुन्धि रोगान् मरुदालयेश ॥ १०॥
+</details>
+
