--- a/laxyam/padyam/purANam/nArAyaNIyam/019.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/019.md
@@ -3,61 +3,140 @@ title: ०१९
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पृथोस्तु नप्ता पृथुधर्मकर्मठः प्राचीनबर्हिर्युवतौ शतदॄतौ ।  
 प्रचेतसो नाम सुचेतसः सुतानजीजनत्त्वत्करुणाङ्कुरानिव ॥ १९१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+पृथोस्तु नप्ता पृथुधर्मकर्मठः प्राचीनबर्हिर्युवतौ शतदॄतौ ।  
+प्रचेतसो नाम सुचेतसः सुतानजीजनत्त्वत्करुणाङ्कुरानिव ॥ १९१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पितुः सिसृक्षानिरतस्य शासनाद्भवत्तपस्याभिरता दशापि ते ।  
 पयोनिधिं पश्चिममेत्य तत्तटे सरोवरं सन्ददृशुर्मनोहरम् ॥ १९२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+पितुः सिसृक्षानिरतस्य शासनाद्भवत्तपस्याभिरता दशापि ते ।  
+पयोनिधिं पश्चिममेत्य तत्तटे सरोवरं सन्ददृशुर्मनोहरम् ॥ १९२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदा भवत्तीर्थमिदं समागतो भवो भवत्सेवकदर्शनादृतः ।  
 प्रकाशमासाद्य पुरः प्रचेतसामुपादिशद्भक्ततमस्तवस्तवम् ॥ १९३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदा भवत्तीर्थमिदं समागतो भवो भवत्सेवकदर्शनादृतः ।  
+प्रकाशमासाद्य पुरः प्रचेतसामुपादिशद्भक्ततमस्तवस्तवम् ॥ १९३ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्तवं जपन्तस्तममी जलान्तरे भवन्तमासेविषतायुतं समाः ।  
 भवत्सुखास्वादरसादमीष्वियान्बभूव कलो ध्रुववन्न शीघ्रता ॥ १९४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्तवं जपन्तस्तममी जलान्तरे भवन्तमासेविषतायुतं समाः ।  
+भवत्सुखास्वादरसादमीष्वियान्बभूव कलो ध्रुववन्न शीघ्रता ॥ १९४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तपोभिरेषामतिमात्रवर्धिभिः स यज्ञहिंसानिरतोऽपि पावितः ।  
 पिताऽपि तेषां गृहयातनारदप्रदर्शितात्मा भवदात्मतां ययौ ॥ १९५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+तपोभिरेषामतिमात्रवर्धिभिः स यज्ञहिंसानिरतोऽपि पावितः ।  
+पिताऽपि तेषां गृहयातनारदप्रदर्शितात्मा भवदात्मतां ययौ ॥ १९५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कृपाबलेनैव पुरः प्रचेतसां प्रकाशमागाः पतगेन्द्रवाहनः ।  
 विराजि चक्रादिवरायुधांशुभिः भुजाभिरष्टाभिरुदञ्चितद्युतिः ॥ १९६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कृपाबलेनैव पुरः प्रचेतसां प्रकाशमागाः पतगेन्द्रवाहनः ।  
+विराजि चक्रादिवरायुधांशुभिः भुजाभिरष्टाभिरुदञ्चितद्युतिः ॥ १९६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रचेतसां तावदयाचतामपिः त्वमेव कारुण्यभराद्वारानदाः ।  
 भवद्विचिन्ताऽपि शिवायदेहिनां भवत्वसौ रुद्रनुतिश्च कामदा ॥ १९७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रचेतसां तावदयाचतामपिः त्वमेव कारुण्यभराद्वारानदाः ।  
+भवद्विचिन्ताऽपि शिवायदेहिनां भवत्वसौ रुद्रनुतिश्च कामदा ॥ १९७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अवाप्य कान्तां तनयां महीरुहां तया रमध्वं दशलक्षवत्सरीम् ।  
 सुतोऽस्तु दक्षो ननु तत्क्षणाच्च मां प्रयास्यथेति न्यगदो मुदैव तान् ॥ १९८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अवाप्य कान्तां तनयां महीरुहां तया रमध्वं दशलक्षवत्सरीम् ।  
+सुतोऽस्तु दक्षो ननु तत्क्षणाच्च मां प्रयास्यथेति न्यगदो मुदैव तान् ॥ १९८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततश्च ते भूतलरोधिनस्तरून्कृधा दहन्तो द्रुहिणेन वारिताः ।  
 द्रुमैश्च दत्तां तनयामवाप्य तां त्वदुक्तकालं सुखिनोऽभिरेमिरे ॥ १९९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततश्च ते भूतलरोधिनस्तरून्कृधा दहन्तो द्रुहिणेन वारिताः ।  
+द्रुमैश्च दत्तां तनयामवाप्य तां त्वदुक्तकालं सुखिनोऽभिरेमिरे ॥ १९९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अवाप्य दक्षं च सुतं कृताध्वराः प्रचेतसो नारदलब्धयाधिया ।  
 अवापुरानन्दपदं तथाविधस्त्वमीश वातालयनाथ पाहिमाम् ॥ १९१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अवाप्य दक्षं च सुतं कृताध्वराः प्रचेतसो नारदलब्धयाधिया ।  
+अवापुरानन्दपदं तथाविधस्त्वमीश वातालयनाथ पाहिमाम् ॥ १९१० ॥
+</details>
+
