--- a/laxyam/padyam/purANam/nArAyaNIyam/044.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/044.md
@@ -3,61 +3,140 @@ title: ०४४
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गूढं वसुदेवगिरा कर्तुं ते निष्क्रियस्य संस्कारान् ।  
 हृद्गतहोरातत्वो गर्गमुनिस्त्वद्गृहं विभो गतवान् ॥ ४४१॥
+</details>
+<details><summary>मूलम्</summary>
+
+गूढं वसुदेवगिरा कर्तुं ते निष्क्रियस्य संस्कारान् ।  
+हृद्गतहोरातत्वो गर्गमुनिस्त्वद्गृहं विभो गतवान् ॥ ४४१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नन्दोऽथ नन्दितात्मा वृन्दिष्टं मानयन्नमुं यमिनाम् ।  
 मन्दस्मितार्द्रमूचे त्वत्संस्कारान् विधातुमुत्सुकधीः ॥ ४४२॥
+</details>
+<details><summary>मूलम्</summary>
+
+नन्दोऽथ नन्दितात्मा वृन्दिष्टं मानयन्नमुं यमिनाम् ।  
+मन्दस्मितार्द्रमूचे त्वत्संस्कारान् विधातुमुत्सुकधीः ॥ ४४२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदुवंशाचार्यत्वात् सुनिभृतमिदमार्य कार्यमिति कथयन् ।  
 गर्गो निर्गतपुलकश्चक्रे तव साग्रजस्य नामानि ॥ ४४३॥
+</details>
+<details><summary>मूलम्</summary>
+
+यदुवंशाचार्यत्वात् सुनिभृतमिदमार्य कार्यमिति कथयन् ।  
+गर्गो निर्गतपुलकश्चक्रे तव साग्रजस्य नामानि ॥ ४४३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कथमस्य नाम कुर्वे सहस्रनाम्नो ह्यनन्तनाम्नो वा ।  
 इति नूनं गर्गमुनिश्चक्रे तव नाम नाम रहसि विभो ॥ ४४४॥
+</details>
+<details><summary>मूलम्</summary>
+
+कथमस्य नाम कुर्वे सहस्रनाम्नो ह्यनन्तनाम्नो वा ।  
+इति नूनं गर्गमुनिश्चक्रे तव नाम नाम रहसि विभो ॥ ४४४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कृषिधातुणकाराभ्यां सत्तानन्दात्मतां किलाभिलपत् ।  
 जगदघकर्षित्वं वा कथयदृषिः कृष्णनाम ते व्यतनोत् ॥ ४४५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कृषिधातुणकाराभ्यां सत्तानन्दात्मतां किलाभिलपत् ।  
+जगदघकर्षित्वं वा कथयदृषिः कृष्णनाम ते व्यतनोत् ॥ ४४५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्यांश्च नामभेदान् व्याकुर्वन्नग्रजे च रामादीन् ।  
 अतिमानुषानुभावं न्यगदत्त्वामप्रकाशयन्पित्रे ॥ ४४६॥
+</details>
+<details><summary>मूलम्</summary>
+
+अन्यांश्च नामभेदान् व्याकुर्वन्नग्रजे च रामादीन् ।  
+अतिमानुषानुभावं न्यगदत्त्वामप्रकाशयन्पित्रे ॥ ४४६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्निह्यति यत्सव पुत्रे मुह्यति स न मायिकैः पुनश्शोकैः ।  
 दृह्यति यस्स तु नश्येदित्यवदत्ते महत्त्वमृषिवर्यः ॥ ४४७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्निह्यति यत्सव पुत्रे मुह्यति स न मायिकैः पुनश्शोकैः ।  
+दृह्यति यस्स तु नश्येदित्यवदत्ते महत्त्वमृषिवर्यः ॥ ४४७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जेष्यति बहुतरदैत्यान् नेष्यति निजबन्धुलोकममलपदम् ।  
 श्रोष्यति सुविमलकीर्तीरस्येति भवद्विभूतिमृषिरूचे ॥ ४४८॥
+</details>
+<details><summary>मूलम्</summary>
+
+जेष्यति बहुतरदैत्यान् नेष्यति निजबन्धुलोकममलपदम् ।  
+श्रोष्यति सुविमलकीर्तीरस्येति भवद्विभूतिमृषिरूचे ॥ ४४८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अमुनैव सर्वदुर्गं तरितास्थ कृतास्थमत्र तिष्ठध्वम् ।  
 हरिरेवेत्यनभिलपन्नित्यादि त्वामवर्णयत् स मुनिः ॥ ४४९॥
+</details>
+<details><summary>मूलम्</summary>
+
+अमुनैव सर्वदुर्गं तरितास्थ कृतास्थमत्र तिष्ठध्वम् ।  
+हरिरेवेत्यनभिलपन्नित्यादि त्वामवर्णयत् स मुनिः ॥ ४४९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गर्गेऽथ निर्गतेऽस्मिन् नन्दितनन्दादिनन्द्यमानस्त्वम् ।  
 मद्गदमुद्गतकरुणो निर्गमय श्रीमरुत्पुराधीश ॥ ४४१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+गर्गेऽथ निर्गतेऽस्मिन् नन्दितनन्दादिनन्द्यमानस्त्वम् ।  
+मद्गदमुद्गतकरुणो निर्गमय श्रीमरुत्पुराधीश ॥ ४४१०॥
+</details>
+
