--- a/laxyam/padyam/purANam/nArAyaNIyam/070.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/070.md
@@ -3,50 +3,108 @@ title: ०७०
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति त्वयि रसाकुलं रमितवल्लभे वल्लवाः  
 कदापि पुनरम्बिकाकमितुरम्बिकाकानने ।  
 समेत्य भवता समं निशि निषेव्य दिव्योत्सवं  
 सुखं सुषुवुरग्रसीद्व्रजपमुग्रनागस्तदा ॥ ७०१॥
+</details>
+<details><summary>मूलम्</summary>
+
+इति त्वयि रसाकुलं रमितवल्लभे वल्लवाः  
+कदापि पुनरम्बिकाकमितुरम्बिकाकानने ।  
+समेत्य भवता समं निशि निषेव्य दिव्योत्सवं  
+सुखं सुषुवुरग्रसीद्व्रजपमुग्रनागस्तदा ॥ ७०१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समुन्मुखमथोन्मुकैरभिहतेऽपि तस्मिन्बला  
 दमुञ्चति भवत्पदे न्यपति पाहि पाहीति तैः ।  
 तदा खलु पदा भवान्समुपगम्य पस्पर्श तं  
 बभौ स च निजां तनुं समुपसाद्य वैद्याधरीम् ॥ ७०२॥
+</details>
+<details><summary>मूलम्</summary>
+
+समुन्मुखमथोन्मुकैरभिहतेऽपि तस्मिन्बला  
+दमुञ्चति भवत्पदे न्यपति पाहि पाहीति तैः ।  
+तदा खलु पदा भवान्समुपगम्य पस्पर्श तं  
+बभौ स च निजां तनुं समुपसाद्य वैद्याधरीम् ॥ ७०२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुदर्शनधर प्रभो ननु सुदर्शनाख्योऽस्म्यहं  
 मुनीन्क्वचिदपाहसं त इह मां व्यधुर्वाहसम् ।  
 भवत्पदसमर्पणादमलतां गतोऽस्मीत्यसौ  
 स्तुवन्निजपदं ययौ व्रजपदं च गोपा मुदा ॥ ७०३॥
+</details>
+<details><summary>मूलम्</summary>
+
+सुदर्शनधर प्रभो ननु सुदर्शनाख्योऽस्म्यहं  
+मुनीन्क्वचिदपाहसं त इह मां व्यधुर्वाहसम् ।  
+भवत्पदसमर्पणादमलतां गतोऽस्मीत्यसौ  
+स्तुवन्निजपदं ययौ व्रजपदं च गोपा मुदा ॥ ७०३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कदापि खलु सीरिणा विहरति त्वयि स्त्रीजनै  
 र्जहार्धनदानुगः स किल शङ्खचूडोऽबलाः ।  
 अतिद्रुतमनुद्रुतस्तमथ मुक्तनारीजनं  
 रुरोजिथ शिरोमणिं हलभृते च तस्याददाः ॥ ७०४॥
+</details>
+<details><summary>मूलम्</summary>
+
+कदापि खलु सीरिणा विहरति त्वयि स्त्रीजनै  
+र्जहार्धनदानुगः स किल शङ्खचूडोऽबलाः ।  
+अतिद्रुतमनुद्रुतस्तमथ मुक्तनारीजनं  
+रुरोजिथ शिरोमणिं हलभृते च तस्याददाः ॥ ७०४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दिनेषु च सुहृज्जनैः सह वनेषु लीलापरं  
 मनोभवमनोहरं रसितवेणुनादामृतम् ।  
 भवन्तममरीदृशाममृतपारणादायिनं  
 विचिन्त्य किमु नालपन् विरहतापिता गोपिकाः ॥ ७०५॥
+</details>
+<details><summary>मूलम्</summary>
+
+दिनेषु च सुहृज्जनैः सह वनेषु लीलापरं  
+मनोभवमनोहरं रसितवेणुनादामृतम् ।  
+भवन्तममरीदृशाममृतपारणादायिनं  
+विचिन्त्य किमु नालपन् विरहतापिता गोपिकाः ॥ ७०५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भोजराजभृतकस्त्वथ कश्चित्कष्टदुष्टपथदृष्टिररिष्टः ।  
 निष्ठुराकृतिरपष्ठुनिनादस्तिष्ठते स्म भवते वृषरूपी ॥ ७०६॥
+</details>
+<details><summary>मूलम्</summary>
+
+भोजराजभृतकस्त्वथ कश्चित्कष्टदुष्टपथदृष्टिररिष्टः ।  
+निष्ठुराकृतिरपष्ठुनिनादस्तिष्ठते स्म भवते वृषरूपी ॥ ७०६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_07.mp3"></div>
 
@@ -57,13 +115,28 @@ title: ०७०
 भद्ररूपमपि दैत्यमभद्रं मर्दयन्नमदयः सुरलोकम् ॥ ७०८॥
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चित्रमद्य भगवन् वृषघातात्सुस्थिराजनि वृषस्थितिरुर्व्याम् ।  
 वर्धते च वृषचेतसि भूयान्मोद इत्यभिनुतोऽसि सुरस्त्वम् ॥ ७०९॥
+</details>
+<details><summary>मूलम्</summary>
+
+चित्रमद्य भगवन् वृषघातात्सुस्थिराजनि वृषस्थितिरुर्व्याम् ।  
+वर्धते च वृषचेतसि भूयान्मोद इत्यभिनुतोऽसि सुरस्त्वम् ॥ ७०९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 औक्षकाणि परिधावत दूरं वीक्ष्यतामयमिहोक्षविभेदी ।  
 इत्थमात्तहसितैः सह गोपैर्गेहगस्त्वमव वातपुरेश ॥ ७०१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+औक्षकाणि परिधावत दूरं वीक्ष्यतामयमिहोक्षविभेदी ।  
+इत्थमात्तहसितैः सह गोपैर्गेहगस्त्वमव वातपुरेश ॥ ७०१०॥
+</details>
+
