--- a/laxyam/padyam/purANam/nArAyaNIyam/082.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/082.md
@@ -3,75 +3,168 @@ title: ०८२
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रद्युम्नो रौक्मिणेयः स खलु तव कला शम्बरेणाहृतस्तं  
 हत्वा रत्या सहाप्तो निजपुरमहरद्रुक्मिकन्यां च धन्याम् ।  
 तत्पुत्रोऽथानिरुद्धो गुणनिधिरवहद्रोचनां रुक्मिपौत्रीं  
 तत्रोद्वाहे गतस्त्वं न्यवधि मुसलिना रुक्म्यपि द्यूतवैरात् ॥ ८२१॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रद्युम्नो रौक्मिणेयः स खलु तव कला शम्बरेणाहृतस्तं  
+हत्वा रत्या सहाप्तो निजपुरमहरद्रुक्मिकन्यां च धन्याम् ।  
+तत्पुत्रोऽथानिरुद्धो गुणनिधिरवहद्रोचनां रुक्मिपौत्रीं  
+तत्रोद्वाहे गतस्त्वं न्यवधि मुसलिना रुक्म्यपि द्यूतवैरात् ॥ ८२१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बाणस्य सा बलिसुतस्य सहस्रबाहोर्माहेश्वरस्य महिता दुहिता किलोषा ।  
 त्वत्पौत्रमेनमनिरुद्धमदृष्टपूर्वं स्वप्नेऽनुभूय भगवन् विरहातुराऽभूत् ॥ ८२२॥
+</details>
+<details><summary>मूलम्</summary>
+
+बाणस्य सा बलिसुतस्य सहस्रबाहोर्माहेश्वरस्य महिता दुहिता किलोषा ।  
+त्वत्पौत्रमेनमनिरुद्धमदृष्टपूर्वं स्वप्नेऽनुभूय भगवन् विरहातुराऽभूत् ॥ ८२२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 योगिन्यतीव कुशला खलु चित्रलेखा  
 तस्याः सखी विलिखती तरुणानशेषान् ।  
 तत्रानिरुद्धमुषया विदितं निशाया  
 मानेष्ट योगबलतो भवतो निकेतात् ॥ ८२३॥
+</details>
+<details><summary>मूलम्</summary>
+
+योगिन्यतीव कुशला खलु चित्रलेखा  
+तस्याः सखी विलिखती तरुणानशेषान् ।  
+तत्रानिरुद्धमुषया विदितं निशाया  
+मानेष्ट योगबलतो भवतो निकेतात् ॥ ८२३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कन्यापुरे दयितया सुखमारमन्तं चैनं कथञ्चन बबन्धुषि शर्वबन्धौ ।  
 श्रीनारदोक्ततदुदन्तदुरन्तरोषैस्त्वं तस्य शोणितपुरं यदुभिर्न्यरुन्धाः ॥ ८२४॥
+</details>
+<details><summary>मूलम्</summary>
+
+कन्यापुरे दयितया सुखमारमन्तं चैनं कथञ्चन बबन्धुषि शर्वबन्धौ ।  
+श्रीनारदोक्ततदुदन्तदुरन्तरोषैस्त्वं तस्य शोणितपुरं यदुभिर्न्यरुन्धाः ॥ ८२४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुरीपालः शैलप्रियदुहितृनाथोऽस्य भगवान्  
 समं भूतव्रातैर्यदुबलमशङ्कं निरुरुधे ।  
 महाप्राणो बाणो जटिति युयुधानेन युयुधे  
 गुहः प्रद्युम्नेन त्वमपि पुरहन्त्रा जघटिषे ॥ ८२५॥
+</details>
+<details><summary>मूलम्</summary>
+
+पुरीपालः शैलप्रियदुहितृनाथोऽस्य भगवान्  
+समं भूतव्रातैर्यदुबलमशङ्कं निरुरुधे ।  
+महाप्राणो बाणो जटिति युयुधानेन युयुधे  
+गुहः प्रद्युम्नेन त्वमपि पुरहन्त्रा जघटिषे ॥ ८२५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निरुद्धाशेषास्त्रे मुमुहुषि तवास्त्रेण गिरिशे  
 द्रुता भूता भीताः प्रमथकुलवीराः प्रमथिताः ।  
 परास्कन्दत्स्कन्दः कुसुमशरबाणैश्च सचिवः  
 स कुम्भाण्डो भाण्डं नवमिव बलेनाशु बिभिदे ॥ ८२६॥
+</details>
+<details><summary>मूलम्</summary>
+
+निरुद्धाशेषास्त्रे मुमुहुषि तवास्त्रेण गिरिशे  
+द्रुता भूता भीताः प्रमथकुलवीराः प्रमथिताः ।  
+परास्कन्दत्स्कन्दः कुसुमशरबाणैश्च सचिवः  
+स कुम्भाण्डो भाण्डं नवमिव बलेनाशु बिभिदे ॥ ८२६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चापानां पञ्चशत्या प्रसभमुपगते छिन्नचापेऽथ बाणे  
 व्यर्थे याते समेतो ज्वरपतिरशनैरज्वरि त्वज्ज्वरेण ।  
 ज्ञानी स्तुत्वाथ दत्त्वा तव चरितजुषां विज्वरं सज्वरोऽगात्  
 प्रायोऽन्तर्ज्ञानवन्तोऽपि च बहुतमसा रौद्रचेष्टा हि रौद्राः ॥ ८२७॥
+</details>
+<details><summary>मूलम्</summary>
+
+चापानां पञ्चशत्या प्रसभमुपगते छिन्नचापेऽथ बाणे  
+व्यर्थे याते समेतो ज्वरपतिरशनैरज्वरि त्वज्ज्वरेण ।  
+ज्ञानी स्तुत्वाथ दत्त्वा तव चरितजुषां विज्वरं सज्वरोऽगात्  
+प्रायोऽन्तर्ज्ञानवन्तोऽपि च बहुतमसा रौद्रचेष्टा हि रौद्राः ॥ ८२७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बाणं नानायुधोग्रं पुनरभिपतितं दुर्पदोषाद्वितन्वन्  
 निर्लूनाशेषदोषं सपदि बुबुधुषा शङ्करेणोपगीतः ।  
 तद्वाचा शिष्टबाहुद्वितयमुभयतो निर्भयं तत्प्रियं तं  
 मुक्त्वा तद्दत्तमानो निजपुरमगमः सानिरुद्धः सहोषः ॥ ८२८॥
+</details>
+<details><summary>मूलम्</summary>
+
+बाणं नानायुधोग्रं पुनरभिपतितं दुर्पदोषाद्वितन्वन्  
+निर्लूनाशेषदोषं सपदि बुबुधुषा शङ्करेणोपगीतः ।  
+तद्वाचा शिष्टबाहुद्वितयमुभयतो निर्भयं तत्प्रियं तं  
+मुक्त्वा तद्दत्तमानो निजपुरमगमः सानिरुद्धः सहोषः ॥ ८२८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मुहुस्तावच्छक्रं वरुणमजयो नन्दहरणे  
 यमं बालानीतौ दवदहनपानेऽनिलसखम् ।  
 विधिं वत्सस्तेये गिरिशमिह बाणस्य समरे  
 विभो विश्वोत्कर्षी तदयमवतारो जयति ते ॥ ८२९॥
+</details>
+<details><summary>मूलम्</summary>
+
+मुहुस्तावच्छक्रं वरुणमजयो नन्दहरणे  
+यमं बालानीतौ दवदहनपानेऽनिलसखम् ।  
+विधिं वत्सस्तेये गिरिशमिह बाणस्य समरे  
+विभो विश्वोत्कर्षी तदयमवतारो जयति ते ॥ ८२९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 द्विजरुषा कृकलासवपुर्धरं नृगनृपं त्रिदिवालयमापयन् ।  
 निजजने द्विजभक्तिमनुत्तमामुपदिशन् पवनेश्वर पाहि माम् ॥ ८२१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+द्विजरुषा कृकलासवपुर्धरं नृगनृपं त्रिदिवालयमापयन् ।  
+निजजने द्विजभक्तिमनुत्तमामुपदिशन् पवनेश्वर पाहि माम् ॥ ८२१० ॥
+</details>
+
