--- a/laxyam/padyam/purANam/nArAyaNIyam/001.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/001.md
@@ -5,90 +5,170 @@ unicode_script: devanagari
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_01.mp3"></div>
 
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सान्द्रानन्दावबोधात्मकमनुपमितं कालदेशावधिभ्यां  
 निर्मुक्तं नित्यमुक्तं निगमशतसहस्रेण निर्भास्यमानम् ।  
 अस्पष्टं दृष्टमात्रे पुनरुरुपुरुषार्थात्मकं ब्रह्म तत्वम्  
 तत्तावद् भाति साक्षाद् गुरुपवनपुरे हन्त भाग्यं जनानाम् ॥१॥  
+</details>
+<details><summary>मूलम्</summary>
+
+सान्द्रानन्दावबोधात्मकमनुपमितं कालदेशावधिभ्यां  
+निर्मुक्तं नित्यमुक्तं निगमशतसहस्रेण निर्भास्यमानम् ।  
+अस्पष्टं दृष्टमात्रे पुनरुरुपुरुषार्थात्मकं ब्रह्मतत्त्वं  
+तत्तावद्भाति साक्षाद्गुरुपवनपुरे हन्त भाग्यं जनानाम् ॥ १-१॥
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_02.mp3"></div>
 
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं दुर्लभ्यवस्तुन्यपि सुलभतया हस्तलब्धे यदन्यत्  
 तन्वा वाचा धिया वा भजति बत जनः क्षुद्रतैव स्फुटेयम् ।  
 एते तावद् वयं तु स्थिरतरमनसा विश्वपीडापहत्यै  
 निश्शेषात्मानमेनं गुरुपवनपुराधीशमेवाश्रयामः ॥२॥  
+</details>
+<details><summary>मूलम्</summary>
+
+एवं दुर्लभ्यवस्तुन्यपि सुलभतया हस्तलब्धे यदन्यत्  
+तन्वा वाचा धिया वा भजति बत जनः क्षुद्रतैव स्फुटेयम् ।  
+एते तावद्वयं तु स्थिरतरमनसा विश्वपीडापहत्यै  
+निश्शेषात्मानमेनं गुरुपवनपुराधीशमेवाश्रयामः ॥ १-२॥
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_03.mp3"></div>
 
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्त्वं यत् तत्पराभ्याम् अपरिकलनतो निर्मलं तेन तावद्  
 भूतैर् भूतेन्द्रियैस् ते वपुरिति बहुशः श्रूयते व्यासवाक्यम् ।  
 तत् स्वच्छत्वाद् यद् अच्छादित-परसुख-चिद्-गर्भ-निर्भासरूपं  
 तस्मिन् धन्या रमन्ते श्रुतिमतिमधुरे सुग्रहे विग्रहे ते ॥३॥  
+</details>
+<details><summary>मूलम्</summary>
+
+सत्त्वं यत्तत्पुराभ्यामपरिकलनतो निर्मलं तेन तावद्-  
+भूतैर्भूतेन्द्रियैस्ते वपुरिति बहुशः श्रूयते व्यासवाक्यम् ।  
+तत्स्वच्छत्वाद्यदच्छादितपरसुखचिद्गर्भनिर्भासरूपं  
+तस्मिन् धन्या रमन्ते श्रुतिमतिमधुरे सुग्रहे विग्रहे ते ॥ १-३॥
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_04.mp3"></div>
 
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निष्कम्पे नित्यपूर्णे निरवधि परमानन्दपीयूषरूपे  
 निर्लीनानेकमुक्तावलिसुभगतमे निर्मलब्रह्मसिन्धौ ।+++(मुक्तशब्दे श्लेषः।)+++  
 कल्लोलोल्लासतुल्यं खलु विमलतरं सत्त्वमाहुस् तदात्मा  
 कस्मान् नो निष्कलस्+++(=कलयितुं कठिनः)+++ त्वं सकल इति वचस् त्वत्कलास्व्+++(=त्वदंशावतारेषु)+++ एव भूमन् ॥४॥+++(५)+++  
+</details>
+<details><summary>मूलम्</summary>
+
+निष्कम्पे नित्यपूर्णे निरवधि परमानन्दपीयूषरूपे  
+निर्लीनानेकमुक्तावलिसुभगतमे निर्मलब्रह्मसिन्धौ ।  
+कल्लोलोल्लासतुल्यं खलु विमलतरं सत्त्वमाहुस्तदात्मा  
+कस्मान्नो निष्कलस्त्वं सकल इति वचस्त्वत्कलास्वेव भूमन् ॥ १-४॥
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_05.mp3"></div>
 
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निर्व्यापारोऽपि निष्कारणमज भजसे यत्क्रियाम् ईक्षणाख्यां  
 तेनैवोदेति लीना प्रकृतिर् असतिकल्पाऽपि कल्पादिकाले ।  
 तस्याः संशुद्धमंशं कमपि तम् अतिरोधायकं सत्त्वरूपं  
 स त्वं धृत्वा दधासि स्वमहिमविभवाऽकुण्ठ+++(=ऽमन्द)+++ वैकुण्ठ रूपम् ॥५॥ +++(र५)+++  
+</details>
+<details><summary>मूलम्</summary>
+
+निर्व्यापारोऽपि निष्कारणमज भजसे यत्क्रियामीक्षणाख्यां  
+तेनैवोदेति लीना प्रकृतिरसतिकल्पाऽपि कल्पादिकाले ।  
+तस्याः संशुद्धमंशं कमपि तमतिरोधायकं सत्त्वरूपं  
+स त्वं धृत्वा दधासि स्वमहिमविभवाकुण्ठ वैकुण्ठरूपम् ॥ १-५॥
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_06.mp3"></div>
 
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्ते प्रत्यग्र-धारा+++(जल)+++धर-ललित-कलाया+++(कुसुम)+++ऽऽवली-केलिकारं+++(\~ तत्तुल्यम्)+++  
 लावण्यस्यैकसारं सुकृतिजनदृशां पूर्णपुण्यावतारम् ।  
 लक्ष्मी-निश्शङ्कलीला-निलयनम् अमृतस्यन्दसन्दोहम् अन्तः  
 सिञ्चत् सञ्चिन्तकानां **वपुर् अनुकलये** मारुतागारनाथ ॥६॥  
+</details>
+<details><summary>मूलम्</summary>
+
+तत्ते प्रत्यग्रधाराधरललितकलायावलीकेलिकारं  
+लावण्यस्यैकसारं सुकृतिजनदृशां पूर्णपुण्यावतारम् ।  
+लक्ष्मीनिश्शङ्कलीलानिलयनममृतस्यन्दसन्दोहमन्तः  
+सिञ्चत्सञ्चिन्तकानां वपुरनुकलये मारुतागारनाथ ॥ १-६॥
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_07.mp3"></div>
 
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कष्टा ते सृष्टिचेष्टा बहुतरभवखेदावहा जीवभाजाम्  
 इत्येवं पूर्वम् आलोचितम् अजित मया, +++(किन्तु)+++ नैवम् +++(इत्य्)+++ अद्याभिजाने ।  
 नो चेज्जीवाः कथं वा मधुरतरमिदं त्वद्वपुश्चिद्-रसार्द्रं  
 नेत्रैः श्रोत्रैश्च पीत्वा परम-रस-सुधाम्भोधिपूरे रमेरन् ॥७॥+++(५)+++  
+</details>
+<details><summary>मूलम्</summary>
+
+कष्टा ते सृष्टिचेष्टा बहुतरभवखेदावहा जीवभाजा-  
+मित्येवं पूर्वमालोचितमजित मया नैवमद्याभिजाने ।  
+नो चेज्जीवाः कथं वा मधुरतरमिदं त्वद्वपुश्चिद्रसार्द्रं  
+नेत्रैः श्रोत्रैश्च पीत्वा परमरससुधाम्भोधिपूरे रमेरन् ॥ १-७॥
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_08.mp3"></div>
 
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नम्राणां सन्निधत्ते सततमपि पुरस् तैर् अनभ्यर्थितान् अप्यर्थान्  
 अप्यर्थान् कामान् अजस्रं वितरति परमानन्दसान्द्रां गतिं +++(मोक्षाख्यं)+++ च ।  
 इत्थं निश्शेषलभ्यो निरवधिकफलः पारिजातो हरे त्वं  
 क्षुद्रं तं शक्रवाटी-द्रुमम् अभिलषति व्यर्थम् अर्थिव्रजो ऽयम् ॥८॥+++(४)+++  
+</details>
+<details><summary>मूलम्</summary>
+
+नम्राणां सन्निधत्ते सततमपि पुरस्तैरनभ्यार्थितान-  
+प्यर्थान् कामानजस्रं वितरति परमानन्दसान्द्रां गतिं च ।  
+इत्थं निश्शेषलभ्यो निरवधिकफलः पारिजातो हरे त्वं  
+क्षुद्रं तं शक्रवाटीद्रुममभिलषति व्यर्थमर्थिव्रजोऽयम् ॥ १-८॥
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_09.mp3"></div>
 
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कारुण्यात् कामम् अन्यं ददति खलु परे, स्वात्मदस् त्वं विशेषाद्  
 ऐश्वर्याद् ईशते ऽन्ये जगति परजने, स्वात्मनो ऽपीश्वरस्त्वम् ।  
 त्वय्य् उच्चैर् आरमन्ति प्रतिपदमधुरे चेतनाः स्फीतभाग्यास्  
 त्वं चाऽऽत्माराम एवेत्य् अतुलगुणगणाधार शौरे नमस्ते ॥९॥+++(४)+++  
+</details>
+<details><summary>मूलम्</summary>
+
+कारुण्यात्काममन्यं ददति खलु परे स्वात्मदस्त्वं विशेषा-  
+दैश्वर्यादीशतेऽन्ये जगति परजने स्वात्मनोऽपीश्वरस्त्वम् ।  
+त्वय्युच्चैरारमन्ति प्रतिपदमधुरे चेतनाः स्फीतभाग्यास्-  
+त्वं चात्माराम एवेत्यतुलगुणगणाधार शौरे नमस्ते ॥ १-९॥
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_10.mp3"></div>
 
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऐश्वर्यं शङ्करादीश्वरविनियमनं विश्वतेजोहराणां  
 तेजस् संहारि वीर्यं विमलमपि यशो निस्पृहैश् चोपगीतम् ।  
 अङ्गासङ्गा सदा श्रीर् अखिलविद् असि न क्वापि ते सङ्गवार्ता  
 तद् वातागारवासिन् मुरहर भगवच् छब्दमुख्याश्रयोऽसि ॥१०॥+++(३)+++   
+</details>
+<details><summary>मूलम्</summary>
+
+ऐश्वर्यं शङ्करादीश्वरविनियमनं विश्वतेजोहराणां  
+तेजस्संहारि वीर्यं विमलमपि यशो निस्पृहैश्चोपगीतम् ।  
+अङ्गासङ्गा सदा श्रीरखिलविदसि न क्वापि ते सङ्गवार्ता  
+तद्वातागारवासिन् मुरहर भगवच्छब्दमुख्याश्रयोऽसि ॥ १-१०॥
+</details>
