--- a/laxyam/padyam/purANam/nArAyaNIyam/002.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/002.md
@@ -3,80 +3,179 @@ title: ००२ वपुषि भक्तिः
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सूर्यस्पर्धिकिरीटम् ऊर्ध्वतिलक-प्रोद्भासिफालान्तरं  
 कारुण्याकुलनेत्रम् आर्द्रहसितोल्लासं सुनासापुटम् ।  
 गण्डोद्यन्मकराभकुण्डलयुगं कण्ठोज्वलत्कौस्तुभं  
 **त्वद्रूपं** वनमाल्य-हार-पटल-श्रीवत्स-दीप्रं **भजे** ॥ १॥
+</details>
+<details><summary>मूलम्</summary>
+
+सूर्यस्पर्धिकिरीटमूर्ध्वतिलकप्रोद्भासिफालान्तरं  
+कारुण्याकुलनेत्रमार्द्रहसितोल्लासं सुनासापुटम् ।  
+गण्डोद्यन्मकराभकुण्डलयुगं कण्ठोज्ज्वलत्कौस्तुभं  
+त्वद्रूपं वनमाल्यहारपटलश्रीवत्सदीप्रं भजे ॥ २-१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 केयूराङ्गद-कङ्कणोत्तम-महा-रत्नाङ्गुलीयाङ्कित-  
 श्रीमद्-बाहुचतुष्क-सङ्गत-गदाशङ्खाऽरि+++(=चक्र)+++-पङ्केरुहाम् ।  
 काञ्चित् काञ्चन-काञ्चि-लाञ्च्छित-लसत्-पीताम्बरालम्बिनीम्  
 **आलम्बे** विमलाम्बुज-द्युतिपदां **मूर्तिं** तवार्तिच्छिदम् ॥ २॥
+</details>
+<details><summary>मूलम्</summary>
+
+केयूराङ्गदकङ्कणोत्तममहारत्नाङ्गुलीयाङ्कित-  
+श्रीमद्बाहुचतुष्कसङ्गतगदाशङ्खारिपङ्केरुहाम् ।  
+काञ्चित्काञ्चिनकाञ्चिलाञ्छितलसत्पीताम्बरालम्बिनी-  
+मालम्बे विमलाम्बुजद्युतिपदां मूर्तिं तवार्तिच्छिदम् ॥ २-२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत् त्रैलोक्यमहीयसो ऽपि महितं सम्मोहनं मोहनात्  
 कान्तं कान्तिनिधानतो ऽपि मधुरं माधुर्यधुर्यादपि ।  
 सौन्दर्योत्तरतो ऽपि सुन्दरतरं त्वद्रूपम् आश्चर्यतोऽ  
 प्य्+आश्चर्यं भुवने **न कस्य कुतुकं पुष्णाति** विष्णो विभो ॥ ३॥+++(र५)+++
+</details>
+<details><summary>मूलम्</summary>
+
+यत्त्रैलोक्यमहीयसोऽपि महितं सम्मोहनं मोहनात्  
+कान्तं कान्तिनिधानतोऽपि मधुरं माधुर्यधुर्यादपि ।  
+सौन्दर्योत्तरतोऽपि सुन्दरतरं त्वद्रूपमाश्चर्यतोऽ-  
+प्याश्चर्यं भुवने न कस्य कुतुकं पुष्णाति विष्णो विभो ॥ २-३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत् तादृङ् मधुरात्मकं तव वपुः सम्प्राप्य संपन्मयी  
 सा देवी परमोत्सुका चिरतरं नाऽस्ते स्वभक्तेष्वपि ।  
 **तेनास्या बत** कष्टमच्युत विभो त्वद्रूप-मानोज्ञक+++(=मनोज्ञ+वुञ्)+++-  
 प्रेमस्थैर्यमयाद् अचापलबलाच् **चापल्यवार्तोदभूत्** ॥ ४॥+++(५)+++
+</details>
+<details><summary>मूलम्</summary>
+
+तत्तादृङ्मधुरात्मकं तव वपुः सम्प्राप्य सम्पन्मयी  
+सा देवी परमोत्सुका चिरतरं नाऽस्ते स्वभक्तेष्वपि ।  
+तेनास्या बत कष्टमच्युत विभो त्वद्रूपमानोज्ञक-  
+प्रेमस्थैर्यमयादचापलबलाच्चापल्यवार्तोदभूत् ॥ २-४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 लक्ष्मीस् तावक-रामणीयक-हृतैवेयं परेष्वस्थिरे-  
 त्यस्मिन्न् **अन्यदपि प्रमाणमधुना वक्ष्यामि** लक्ष्मीपते ।  
 ये त्वद्ध्यान-गुणानुकीर्तन-रसासक्ता हि भक्ता जनास्  
 **तेष्वेषा वसति स्थिरैव** दयित-प्रस्ताव-दत्तादरा ॥ ५॥+++(५)+++
+</details>
+<details><summary>मूलम्</summary>
+
+लक्ष्मीस्तावकरामणीयकहृतैवेयं परेष्वस्थिरे-  
+त्यस्मिन्नन्यदपि प्रमाणमधुना वक्ष्यामि लक्ष्मीपते ।  
+ये त्वद्ध्यानगुणानुकीर्तनरसासक्ता हि भक्ता जना-  
+स्तेष्वेषा वसति स्थिरैव दयितप्रस्तावदत्तादरा ॥ २-५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवंभूत-मनोज्ञता-नवसुधा-निष्यन्द-सन्दोहनं  
 **त्वद्रूपं** पर-चिद्-रसायन-मयं चेतो-हरं श्रृण्वताम् ।  
 **सद्यः प्रेरयते मतिं मदयते** रोमाञ्चयत्यङ्गकं  
 व्यासिञ्चत्यपि शीत-बाष्प-विसरैर् आनन्दमूर्च्छोद्भवैः ॥ ६॥
+</details>
+<details><summary>मूलम्</summary>
+
+एवम्भूतमनोज्ञतानवसुधानिष्यन्दसन्दोहनं  
+त्वद्रूपं परचिद्रसायनमयं चेतोहरं शृण्वताम् ।  
+सद्यः प्रेरयते मतिं मदयते रोमाञ्चयत्यङ्गकं  
+व्यासिञ्चत्यपि शीतबाष्पविसरैरानन्दमूर्च्छोद्भवैः ॥ २-६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवम्भूततया हि **भक्त्यभिहितो योगः** स योगद्वयात्  
 कर्मज्ञान-मयाद् **भृशोत्तमतरो** योगीश्वरैर् **गीयते** ।  
 सौन्दर्यैक-रसात्मके त्वयि खलु प्रेम-प्रकर्षात्मिका  
 **भक्तिर् निश्रमम् एव** विश्वपुरुषैर् **लभ्या** रमावल्लभ ॥ ७॥+++(र५)+++
+</details>
+<details><summary>मूलम्</summary>
+
+एवम्भूततया हि भक्त्यभिहितो योगः स योगद्वयात्  
+कर्मज्ञानमयाद्भृशोत्तमतरो योगीश्वरैर्गीयते ।  
+सौन्दर्यैकरसात्मके त्वयि खलु प्रेमप्रकर्षात्मिका  
+भक्तिर्निश्रममेव विश्वपुरुषैर्लभ्या रमावल्लभ ॥ ७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निष्कामं नियत-स्वधर्म-चरणं यत् कर्मयोगाभिधं  
 तद् दूरेत्य+++(=दूरगम्य)+++फलं यद् +औपनिषद--ज्ञानोपलभ्यं पुनः ।  
 तत्त्व-व्यक्ततया सुदुर्गमतरं चित्तस्य तस्माद् विभो  
 **त्वत्प्रेमात्मक-भक्तिर् एव** सततं स्वदीयसी **श्रेयसी** ॥ ८॥
+</details>
+<details><summary>मूलम्</summary>
+
+निष्कामं नियतस्वधर्मचरणं यत्कर्मयोगाभिधं  
+तद्दूरेत्यफलं यदौपनिषदज्ञानोपलभ्यं पुनः ।  
+तत्त्वव्यक्ततया सुदुर्गमतरं चित्तस्य तस्माद्विभो  
+त्वत्प्रेमात्मकभक्तिरेव सततं स्वादीयसी श्रेयसी ॥ २-८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अत्यायास-कराणि कर्मपटलान्य् आचर्य निर्यन्मला  
 **बोधे भक्तिपथे** ऽथवाऽऽप्य् **उचितताम् आयान्ति**, किं तावता ।  
 क्लिष्ट्वा तर्कपथे परं तव **वपुर्** ब्रह्माख्यम् अन्ये पुनश्  
 **चित्तार्द्रत्वम् ऋते** विचिन्त्य बहुभिः **सिध्यन्ति** जन्मान्तरैः ॥ ९ ॥
+</details>
+<details><summary>मूलम्</summary>
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_10.mp3"></div>
+अत्यायासकराणि कर्मपटलान्याचर्य निर्यन्मला  
+बोधे भक्तिपथेऽथवाप्युचिततामायान्ति किं तावता ।  
+क्लिष्ट्वा तर्कपथे परं तव वपुर्ब्रह्माख्यमन्ये पुन-  
+श्चित्तार्द्रत्वमृते विचिन्त्य बहुभिः सिध्यन्ति जन्मान्तरैः ॥ २-९॥
+</details>
+
+
+
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_10.mp3"></div><details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 **त्वद्-भक्तिस्** तु कथा-रसामृत-झरी-निर्मज्जनेन स्वयं  
 सिद्ध्यन्ती, विमल-प्रषोध-पदवीम् अक्लेशतस् तन्वती ।  
 सद्यः सिद्धिकरी **जयत्य्** अयि विभो **सैवाऽस्तु मे** त्वत्पद-  
 प्रेम-प्रौढि-रसार्द्रता द्रुततरं वातालयाधीश्वर ॥ १०॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वद्भक्तिस्तु कथारसामृतझरीनिर्मज्जनेन स्वयं  
+सिद्ध्यन्ती विमलप्रबोधपदवीमक्लेशतस्तन्वती ।१  
+सद्यः सिद्धिकरी जयत्ययि विभो सैवास्तु मे त्वत्पद-  
+प्रेमप्रौढिरसार्द्रता द्रुततरं वातालयाधीश्वर ॥ २-१०॥
+</details>
+
