--- a/laxyam/padyam/purANam/nArAyaNIyam/006.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/006.md
@@ -3,81 +3,180 @@ title: ००६
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं चतुर्दशजगन्मयतां गतस्य  
 पातालमीश तव पादतलं वदन्ति।  
 पादोर्ध्वदेशमपि देव रसातलं ते  
 गुल्फद्वयं खलु महातलमद्भुतात्मन् ॥ १॥
+</details>
+<details><summary>मूलम्</summary>
+
+एवं चतुर्दशजगन्मयतां गतस्य  
+पातालमीश तव पादतलं वदन्ति।  
+पादोर्ध्वदेशमपि देव रसातलं ते  
+गुल्फद्वयं खलु महातलमद्भुतात्मन् ॥ १॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जङ्घे तलातलमथो सुतलं च जानू  
 किञ्चोरुभागयुगलं वितलातले द्वे।  
 क्षोणीतलं जघनमम्बरमङ्ग नाभि  
 र्वक्षश्च शक्रनिलयस्तव चक्रपाणे ॥ २॥
+</details>
+<details><summary>मूलम्</summary>
+
+जङ्घे तलातलमथो सुतलं च जानू  
+किञ्चोरुभागयुगलं वितलातले द्वे।  
+क्षोणीतलं जघनमम्बरमङ्ग नाभि  
+र्वक्षश्च शक्रनिलयस्तव चक्रपाणे ॥ २॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ग्रीवा महस्तव मुखं च जनस्तपस्तु  
 फालं शिरस्तव समस्तमयस्य सत्यम।  
 एवं जगन्मयतनो जगदाश्चितैर  
 प्यन्यैर्निबद्धवपुषे भगवन्नमस्ते ॥ ३॥
+</details>
+<details><summary>मूलम्</summary>
+
+ग्रीवा महस्तव मुखं च जनस्तपस्तु  
+फालं शिरस्तव समस्तमयस्य सत्यम।  
+एवं जगन्मयतनो जगदाश्चितैर  
+प्यन्यैर्निबद्धवपुषे भगवन्नमस्ते ॥ ३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्ब्रह्मरन्ध्रपदमीश्वर विश्वकन्द  
 छन्दांसि केशव घनास्तव केशपाशाः।  
 उल्लासिचिल्लियुगलं दृहिणस्य गेहं  
 पक्ष्माणि रात्रिदिवसौ सविता च नेत्रे ॥ ४॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वद्ब्रह्मरन्ध्रपदमीश्वर विश्वकन्द  
+छन्दांसि केशव घनास्तव केशपाशाः।  
+उल्लासिचिल्लियुगलं दृहिणस्य गेहं  
+पक्ष्माणि रात्रिदिवसौ सविता च नेत्रे ॥ ४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निश्शेषविश्वरचना च कटाक्षमोक्षः  
 कर्णौ दिशोऽश्वियुगलं तव नासिके द्वे।  
 लोभत्रपे च भगवन्नधरोत्तरोष्ठौ  
 तारागणश्च दशनाः शमनश्च दंष्ट्रा ॥ ५॥
+</details>
+<details><summary>मूलम्</summary>
+
+निश्शेषविश्वरचना च कटाक्षमोक्षः  
+कर्णौ दिशोऽश्वियुगलं तव नासिके द्वे।  
+लोभत्रपे च भगवन्नधरोत्तरोष्ठौ  
+तारागणश्च दशनाः शमनश्च दंष्ट्रा ॥ ५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 माया विलासहसितं श्वसितं समीरो  
 जिह्वा जलं वचनमीश शकुन्तपङ्क्तिः।  
 सिद्धादयस्स्वरगणा मुखरन्ध्रमग्नि  
 र्देवा भुजाः स्तनयुगं तव धर्मदेवः ॥ ६॥
+</details>
+<details><summary>मूलम्</summary>
+
+माया विलासहसितं श्वसितं समीरो  
+जिह्वा जलं वचनमीश शकुन्तपङ्क्तिः।  
+सिद्धादयस्स्वरगणा मुखरन्ध्रमग्नि  
+र्देवा भुजाः स्तनयुगं तव धर्मदेवः ॥ ६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पृष्ठं त्वधर्म इह देव मनस्सुधांशु  
 रयक्तमेव हृदयांबुजमम्बुजाक्ष।  
 कुक्षिस्समुद्रनिवहा वसनं तु सन्ध्ये  
 शेफः प्रजापतिरसौ वृषणौ च मित्रः ॥ ७॥
+</details>
+<details><summary>मूलम्</summary>
+
+पृष्ठं त्वधर्म इह देव मनस्सुधांशु  
+रयक्तमेव हृदयांबुजमम्बुजाक्ष।  
+कुक्षिस्समुद्रनिवहा वसनं तु सन्ध्ये  
+शेफः प्रजापतिरसौ वृषणौ च मित्रः ॥ ७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रोणिस्थलं मृगगणाः पदयोर्नखास्ते  
 हस्त्युष्ट्रसैन्धवमुखा गमनं तु कालः।  
 विप्रादिवर्णभवनं वदनाब्जबाहु  
 च्आरूरुयुग्मचरणं करुणांबुधे ते ॥ ८॥
+</details>
+<details><summary>मूलम्</summary>
+
+श्रोणिस्थलं मृगगणाः पदयोर्नखास्ते  
+हस्त्युष्ट्रसैन्धवमुखा गमनं तु कालः।  
+विप्रादिवर्णभवनं वदनाब्जबाहु  
+च्आरूरुयुग्मचरणं करुणांबुधे ते ॥ ८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संसारचक्रमयि चक्रधर क्रियास्ते  
 वीर्यं महासुरगणोऽस्थिकुलानि शैलाः।  
 नाड्यस्सरित्समुदयस्तरवश्च रोम  
 जीयादिदं वपुरनिर्वचनीयमीश ॥ ९॥
+</details>
+<details><summary>मूलम्</summary>
+
+संसारचक्रमयि चक्रधर क्रियास्ते  
+वीर्यं महासुरगणोऽस्थिकुलानि शैलाः।  
+नाड्यस्सरित्समुदयस्तरवश्च रोम  
+जीयादिदं वपुरनिर्वचनीयमीश ॥ ९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ईदृग्जगन्मयवपुस्तव कर्मभाजां  
 कर्मावसानसमये स्मरणीयमाहुः।  
 तस्यान्तरात्मवपुषे विमलात्मने ते  
 वातालयाधिप नमोऽस्तु निरुन्धि रोगान् ॥ १०॥
+</details>
+<details><summary>मूलम्</summary>
+
+ईदृग्जगन्मयवपुस्तव कर्मभाजां  
+कर्मावसानसमये स्मरणीयमाहुः।  
+तस्यान्तरात्मवपुषे विमलात्मने ते  
+वातालयाधिप नमोऽस्तु निरुन्धि रोगान् ॥ १०॥
+</details>
+
