--- a/laxyam/padyam/purANam/nArAyaNIyam/008.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/008.md
@@ -3,105 +3,234 @@ title: ००८
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं तावत्प्राकृतप्रक्षयान्ते  
 ब्राह्मे कल्पे ह्यादिमे लब्धजन्मा ।  
 ब्रह्मा भूयस्त्वत्त एवाप्य वेदान्  
 सृष्टिं चक्रे पूर्वकल्पोपमानाम् ॥ १॥
+</details>
+<details><summary>मूलम्</summary>
+
+एवं तावत्प्राकृतप्रक्षयान्ते  
+ब्राह्मे कल्पे ह्यादिमे लब्धजन्मा ।  
+ब्रह्मा भूयस्त्वत्त एवाप्य वेदान्  
+सृष्टिं चक्रे पूर्वकल्पोपमानाम् ॥ १॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोऽयं चतुर्युगसहस्रमितान्यहानि  
 तावन्मिताश्च रजनीर्बहुशो निनाय ।  
 निद्रात्यसौ त्वयि निलीय समं स्वसृष्टैर्  
 नैमित्तिकप्रलयमाहुरतोऽस्य रात्रिम् ॥ २॥
+</details>
+<details><summary>मूलम्</summary>
+
+सोऽयं चतुर्युगसहस्रमितान्यहानि  
+तावन्मिताश्च रजनीर्बहुशो निनाय ।  
+निद्रात्यसौ त्वयि निलीय समं स्वसृष्टैर्  
+नैमित्तिकप्रलयमाहुरतोऽस्य रात्रिम् ॥ २॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अस्मादृशां पुनरहर्मुखकृत्यतुल्यां  
 सृष्टिं करोत्यनुदिनं स भवत्प्रसादात् ।  
 प्राग्ब्रह्मकल्पजनुषां च परायुषां तु  
 सुप्तप्रबोधनसमाऽस्ति तदाऽपि सृष्टिः ॥ ३॥
+</details>
+<details><summary>मूलम्</summary>
+
+अस्मादृशां पुनरहर्मुखकृत्यतुल्यां  
+सृष्टिं करोत्यनुदिनं स भवत्प्रसादात् ।  
+प्राग्ब्रह्मकल्पजनुषां च परायुषां तु  
+सुप्तप्रबोधनसमाऽस्ति तदाऽपि सृष्टिः ॥ ३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पञ्चाशदब्दमधुना स्ववयोऽर्धरूपम्  
 एकं परार्धमतिवृत्य हि वर्ततेऽसौ ।  
 तत्रान्त्यरात्रिजनितान्कथयामि भूमन्  
 पश्चाद्दिनावतरणे च भवद्विलासान् ॥ ४॥
+</details>
+<details><summary>मूलम्</summary>
+
+पञ्चाशदब्दमधुना स्ववयोऽर्धरूपम्  
+एकं परार्धमतिवृत्य हि वर्ततेऽसौ ।  
+तत्रान्त्यरात्रिजनितान्कथयामि भूमन्  
+पश्चाद्दिनावतरणे च भवद्विलासान् ॥ ४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दिनावसानेऽथ सरोजयोनिः  
 सुषुप्तिकामस्त्वयि सन्निलिल्ये ।  
 जगन्ति च त्वज्जठरं समीयु  
 स्तदेदमेकार्णवमास विश्वम् ॥ ५॥
+</details>
+<details><summary>मूलम्</summary>
+
+दिनावसानेऽथ सरोजयोनिः  
+सुषुप्तिकामस्त्वयि सन्निलिल्ये ।  
+जगन्ति च त्वज्जठरं समीयु  
+स्तदेदमेकार्णवमास विश्वम् ॥ ५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तवैव वेषे फणिराज शेषे  
 जलैकशेषे भुवने स्म शेषे ।  
 आनन्दसान्द्रानुभवस्वरूपः  
 स्वयोगनिद्रापरिमुद्रितात्मा ॥ ६॥
+</details>
+<details><summary>मूलम्</summary>
+
+तवैव वेषे फणिराज शेषे  
+जलैकशेषे भुवने स्म शेषे ।  
+आनन्दसान्द्रानुभवस्वरूपः  
+स्वयोगनिद्रापरिमुद्रितात्मा ॥ ६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कालाख्यशक्तिं प्रलयावसाने  
 प्रबोधयेत्यादिशता किलादौ ।  
 त्वया प्रसुप्तं परिसुप्तशक्ति  
 व्रजेन तत्राखिलजीवधाम्ना ॥ ७॥
+</details>
+<details><summary>मूलम्</summary>
+
+कालाख्यशक्तिं प्रलयावसाने  
+प्रबोधयेत्यादिशता किलादौ ।  
+त्वया प्रसुप्तं परिसुप्तशक्ति  
+व्रजेन तत्राखिलजीवधाम्ना ॥ ७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चतुर्युगाणां च सहस्रमेवं  
 त्वयि प्रसुप्ते पुनरद्वितीये ।  
 कालाख्यशक्तिः प्रथमप्रबुद्धा  
 प्राबोधयत्त्वां किल विश्वनाथ ॥ ८॥
+</details>
+<details><summary>मूलम्</summary>
+
+चतुर्युगाणां च सहस्रमेवं  
+त्वयि प्रसुप्ते पुनरद्वितीये ।  
+कालाख्यशक्तिः प्रथमप्रबुद्धा  
+प्राबोधयत्त्वां किल विश्वनाथ ॥ ८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विबुध्य च त्वं जलगर्भशायिन्  
 विलोक्य लोकानखिलान्प्रलीनान् ।  
 तेष्वेव सूक्ष्मात्मतया निजान्तः  
 स्थितेषु विश्वेषु ददाथ दृष्टिम् ॥ ९॥
+</details>
+<details><summary>मूलम्</summary>
+
+विबुध्य च त्वं जलगर्भशायिन्  
+विलोक्य लोकानखिलान्प्रलीनान् ।  
+तेष्वेव सूक्ष्मात्मतया निजान्तः  
+स्थितेषु विश्वेषु ददाथ दृष्टिम् ॥ ९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततस्त्वदीयादयि नाभिरन्ध्रा  
 दुदञ्चितं किञ्चन दिव्यपद्मम।  
 निलीननिश्शेषपदार्थमाला  
 सङ्क्षेपरूपं मुकुलायमानम् ॥ १०॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततस्त्वदीयादयि नाभिरन्ध्रा  
+दुदञ्चितं किञ्चन दिव्यपद्मम।  
+निलीननिश्शेषपदार्थमाला  
+सङ्क्षेपरूपं मुकुलायमानम् ॥ १०॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदेतदंभोरुहकुड्मलं ते  
 कलेबरात्तोयपथे प्ररूढम् ।  
 बहिर्निरीतं परितः स्फुरद्भिः  
 स्वधामभिर्ध्वान्तमलं न्यकृन्तत् ॥ ११॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदेतदंभोरुहकुड्मलं ते  
+कलेबरात्तोयपथे प्ररूढम् ।  
+बहिर्निरीतं परितः स्फुरद्भिः  
+स्वधामभिर्ध्वान्तमलं न्यकृन्तत् ॥ ११॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_12.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संफुल्लपत्रे नितरां विचित्रे  
 तस्मिन्भवद्वीर्यधृते सरोजे ।  
 स पद्मजन्मा विधिराविरासीत्  
 स्वयंप्रबुद्धाखिलवेदराशिः ॥ १२॥
+</details>
+<details><summary>मूलम्</summary>
+
+संफुल्लपत्रे नितरां विचित्रे  
+तस्मिन्भवद्वीर्यधृते सरोजे ।  
+स पद्मजन्मा विधिराविरासीत्  
+स्वयंप्रबुद्धाखिलवेदराशिः ॥ १२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_13.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अस्मिन्परात्मन् ननु पद्मकल्पे  
 त्वमित्थमुत्थापितपद्मयोनिः ।  
 अनन्तभूमा मम रोगराशिं  
 निरुन्धि वातालयवास विष्णो ॥ १३॥
+</details>
+<details><summary>मूलम्</summary>
+
+अस्मिन्परात्मन् ननु पद्मकल्पे  
+त्वमित्थमुत्थापितपद्मयोनिः ।  
+अनन्तभूमा मम रोगराशिं  
+निरुन्धि वातालयवास विष्णो ॥ १३॥
+</details>
+
