--- a/laxyam/padyam/purANam/nArAyaNIyam/012.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/012.md
@@ -3,81 +3,180 @@ title: ०१२
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वायम्भुवो मनुरथो जनसर्गशीलो  
 दृष्ट्वा महीमसमये सलिले निमग्नाम् ।  
 स्रष्टारमाप शरणं भवदङ्घ्रिसेवा  
 तुष्टाशयं मुनिजनैः सह सत्यलोके ॥ १॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्वायम्भुवो मनुरथो जनसर्गशीलो  
+दृष्ट्वा महीमसमये सलिले निमग्नाम् ।  
+स्रष्टारमाप शरणं भवदङ्घ्रिसेवा  
+तुष्टाशयं मुनिजनैः सह सत्यलोके ॥ १॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कष्टं प्रजाः सृजति मय्यवन्र्निमग्ना  
 स्थानं सरोजभव कल्पय तत्प्रजानाम् ।  
 इत्येवमेष कथितो मनुना स्वयम्भू  
 रम्भोरुहाक्ष तव पादयुगं व्यचिन्तीत् ॥ २॥
+</details>
+<details><summary>मूलम्</summary>
+
+कष्टं प्रजाः सृजति मय्यवन्र्निमग्ना  
+स्थानं सरोजभव कल्पय तत्प्रजानाम् ।  
+इत्येवमेष कथितो मनुना स्वयम्भू  
+रम्भोरुहाक्ष तव पादयुगं व्यचिन्तीत् ॥ २॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हा हा विभो जलमहं न्यपिबं पुरस्ताद्  
 अद्यापि मज्जति मही किमहं करोमि ।  
 इत्थं त्वदङ्घ्रियुगलं शरणं यतोऽस्य  
 नासापुटात्समभवः शिशुकोलरूपी ॥ ३॥
+</details>
+<details><summary>मूलम्</summary>
+
+हा हा विभो जलमहं न्यपिबं पुरस्ताद्  
+अद्यापि मज्जति मही किमहं करोमि ।  
+इत्थं त्वदङ्घ्रियुगलं शरणं यतोऽस्य  
+नासापुटात्समभवः शिशुकोलरूपी ॥ ३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अङ्गुष्ठमात्रवपुरुत्पतितः पुरस्तात्  
 भूयोऽथ कुम्भिसदृशः समजृम्भथास्त्वम् ।  
 अभ्रे तथाविधमुदीक्ष्य भवन्तमुच्चैर्  
 विस्मेरतां विधिरगात्सह सूनुभिः स्वैः ॥ ४॥
+</details>
+<details><summary>मूलम्</summary>
+
+अङ्गुष्ठमात्रवपुरुत्पतितः पुरस्तात्  
+भूयोऽथ कुम्भिसदृशः समजृम्भथास्त्वम् ।  
+अभ्रे तथाविधमुदीक्ष्य भवन्तमुच्चैर्  
+विस्मेरतां विधिरगात्सह सूनुभिः स्वैः ॥ ४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कोऽसावचिन्त्यमहिमा किटिरुत्थितो मे  
 नासापुटात्किमु भवेदजितस्य माया ।  
 इत्थं विचिन्तयति धातरिशैलमात्रः  
 सद्यो भवन्किल जगर्ज्जिथ घोरघोरम् ॥ ५॥
+</details>
+<details><summary>मूलम्</summary>
+
+कोऽसावचिन्त्यमहिमा किटिरुत्थितो मे  
+नासापुटात्किमु भवेदजितस्य माया ।  
+इत्थं विचिन्तयति धातरिशैलमात्रः  
+सद्यो भवन्किल जगर्ज्जिथ घोरघोरम् ॥ ५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तं ते निनादमुपकर्ण्य जनस्तपःस्थाः  
 सत्यस्थिताश्च मुनयो नुनुवुर्भवन्तम् ।  
 तत्स्तोत्रहर्षुलमनाः परिणद्य भूय  
 स्तोयाशयं विपुलमूर्तिरवातरस्त्वम् ॥ ६॥
+</details>
+<details><summary>मूलम्</summary>
+
+तं ते निनादमुपकर्ण्य जनस्तपःस्थाः  
+सत्यस्थिताश्च मुनयो नुनुवुर्भवन्तम् ।  
+तत्स्तोत्रहर्षुलमनाः परिणद्य भूय  
+स्तोयाशयं विपुलमूर्तिरवातरस्त्वम् ॥ ६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऊर्ध्वप्रसारिपरिधूम्राविधूतरोमा  
 प्रोत्क्षिप्तवालधिरवाङ्मुखघोरघोणः ।  
 तूर्णप्रदीर्णजलदः परिघूर्णदक्ष्णा  
 स्तोतॄन्मुनीन् शिशिरयन्नवतेरिथ त्वम् ॥ ७॥
+</details>
+<details><summary>मूलम्</summary>
+
+ऊर्ध्वप्रसारिपरिधूम्राविधूतरोमा  
+प्रोत्क्षिप्तवालधिरवाङ्मुखघोरघोणः ।  
+तूर्णप्रदीर्णजलदः परिघूर्णदक्ष्णा  
+स्तोतॄन्मुनीन् शिशिरयन्नवतेरिथ त्वम् ॥ ७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्तर्जलं तदनु सङ्कुलनक्रचक्रं  
 भ्राम्यत्तिमिङ्गिलकुलं कलुषोर्मिमालम् ।  
 आविश्य भीषणरवेण रसातलस्था  
 नाकम्पयन्वसुमतीमगवेषयस्त्वम् ॥ ८॥
+</details>
+<details><summary>मूलम्</summary>
+
+अन्तर्जलं तदनु सङ्कुलनक्रचक्रं  
+भ्राम्यत्तिमिङ्गिलकुलं कलुषोर्मिमालम् ।  
+आविश्य भीषणरवेण रसातलस्था  
+नाकम्पयन्वसुमतीमगवेषयस्त्वम् ॥ ८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृष्ट्वाऽथ दैत्यहतकेन रसातलान्ते  
 संवेशितां झटिति कूटकिटिर्विभो त्वम् ।  
 आपातुकानविगणय्य सुरारिखेटान्  
 दंष्ट्राङ्कुरेण वसुधामदधाः सलीलम् ॥ ९॥
+</details>
+<details><summary>मूलम्</summary>
+
+दृष्ट्वाऽथ दैत्यहतकेन रसातलान्ते  
+संवेशितां झटिति कूटकिटिर्विभो त्वम् ।  
+आपातुकानविगणय्य सुरारिखेटान्  
+दंष्ट्राङ्कुरेण वसुधामदधाः सलीलम् ॥ ९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभ्युद्धरन्नथ धरां दशनाग्रलग्न  
 मुस्ताङ्कुराङ्कित इवाधिकपीवरात्मा ।  
 उद्धातघोरसलिलाज्जलधेरुदञ्चन्  
 क्तीडावराहवपुरीश्वर पाहि रोगात् ॥ १०॥
+</details>
+<details><summary>मूलम्</summary>
+
+अभ्युद्धरन्नथ धरां दशनाग्रलग्न  
+मुस्ताङ्कुराङ्कित इवाधिकपीवरात्मा ।  
+उद्धातघोरसलिलाज्जलधेरुदञ्चन्  
+क्तीडावराहवपुरीश्वर पाहि रोगात् ॥ १०॥
+</details>
+
