--- a/laxyam/padyam/purANam/nArAyaNIyam/016.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/016.md
@@ -3,81 +3,180 @@ title: ०१६
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षो विरिञ्चतनयोऽथ मनोस्तनूजां  
 लब्ध्वा प्रसूतिमिह षोडश चाप कन्याः ।  
 धर्मे त्रयोदश ददौ पितृषु स्वधां च  
 स्वाहां हविर्भुजि सतीं गिरिशे त्वदंशे ॥१॥
+</details>
+<details><summary>मूलम्</summary>
+
+दक्षो विरिञ्चतनयोऽथ मनोस्तनूजां  
+लब्ध्वा प्रसूतिमिह षोडश चाप कन्याः ।  
+धर्मे त्रयोदश ददौ पितृषु स्वधां च  
+स्वाहां हविर्भुजि सतीं गिरिशे त्वदंशे ॥१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मूर्तिर्हि धर्मगृहिणी सुषुवे भवन्तं  
 नारायणं नरसखं महितानुभावम् ।  
 यज्जन्मनि प्रमुदिताः कृततुर्यघोषाः  
 पुष्पोत्करान्प्रववृषुर्नुनुवुः सुरौघाः ॥२॥
+</details>
+<details><summary>मूलम्</summary>
+
+मूर्तिर्हि धर्मगृहिणी सुषुवे भवन्तं  
+नारायणं नरसखं महितानुभावम् ।  
+यज्जन्मनि प्रमुदिताः कृततुर्यघोषाः  
+पुष्पोत्करान्प्रववृषुर्नुनुवुः सुरौघाः ॥२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दैत्यं सहस्रकवचं कवचैः परीतं  
 साहस्रवत्सरतपस्समराभिलव्यैः ।  
 पर्यायनीर्मिततपस्समरौ भवन्तौ  
 शिष्टैककङ्कटममुं न्यहतां सललिम् ॥३॥
+</details>
+<details><summary>मूलम्</summary>
+
+दैत्यं सहस्रकवचं कवचैः परीतं  
+साहस्रवत्सरतपस्समराभिलव्यैः ।  
+पर्यायनीर्मिततपस्समरौ भवन्तौ  
+शिष्टैककङ्कटममुं न्यहतां सललिम् ॥३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्वाचरन्नुपदिशन्नपि मोक्षधर्मं  
 त्वं भ्रातृमान् बदरिकाश्रममध्यवात्सीः ।  
 शक्रोऽथ ते शमतपोबलनिस्सहात्मा  
 दिव्याङ्गनापरिवृतं प्रजिघाय मारम् ॥४॥
+</details>
+<details><summary>मूलम्</summary>
+
+अन्वाचरन्नुपदिशन्नपि मोक्षधर्मं  
+त्वं भ्रातृमान् बदरिकाश्रममध्यवात्सीः ।  
+शक्रोऽथ ते शमतपोबलनिस्सहात्मा  
+दिव्याङ्गनापरिवृतं प्रजिघाय मारम् ॥४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कामो वसन्तमलयानिलबन्धुशाली  
 कान्ताकटाक्षविशिखैर्विकसद्विलासैः ।  
 विध्यन्मुहुर्मुहुरकम्पमुदीक्ष्य च त्वां  
 भीतस्त्वायाथ जगदे मृदुहासभाजा ॥५॥
+</details>
+<details><summary>मूलम्</summary>
+
+कामो वसन्तमलयानिलबन्धुशाली  
+कान्ताकटाक्षविशिखैर्विकसद्विलासैः ।  
+विध्यन्मुहुर्मुहुरकम्पमुदीक्ष्य च त्वां  
+भीतस्त्वायाथ जगदे मृदुहासभाजा ॥५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भीत्यालमङ्गजवसन्तसुराङ्गना वो  
 मन्मानसन्त्विह जुषुध्वमिति ब्रुवाणः ।  
 त्वं विस्मयेन परितः स्तुवतामथैषां  
 प्रादर्शयः स्वपरिचारककातराक्षीः ॥६॥
+</details>
+<details><summary>मूलम्</summary>
+
+भीत्यालमङ्गजवसन्तसुराङ्गना वो  
+मन्मानसन्त्विह जुषुध्वमिति ब्रुवाणः ।  
+त्वं विस्मयेन परितः स्तुवतामथैषां  
+प्रादर्शयः स्वपरिचारककातराक्षीः ॥६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्मोहनाय मिलिता मदनादयस्ते  
 त्वद्दासिकापरिमलैः किल मोहमापुः ।  
 दत्तां त्वया च जगृहुस्त्रपयैव सर्व  
 स्वर्वासिगर्वशमनीं पुनरुर्वशीं ताम् ॥७॥
+</details>
+<details><summary>मूलम्</summary>
+
+सम्मोहनाय मिलिता मदनादयस्ते  
+त्वद्दासिकापरिमलैः किल मोहमापुः ।  
+दत्तां त्वया च जगृहुस्त्रपयैव सर्व  
+स्वर्वासिगर्वशमनीं पुनरुर्वशीं ताम् ॥७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृष्ट्वोर्वशीं त्वं कथां च निशम्य शक्रः  
 पर्याकुलोऽजनि भवन्महिमावमर्शात् ।  
 एवं प्रशान्तरमणीयतरोऽवतारस्  
 त्वत्तोऽधिको वरद कृष्णतनुस्त्वमेव ॥८॥
+</details>
+<details><summary>मूलम्</summary>
+
+दृष्ट्वोर्वशीं त्वं कथां च निशम्य शक्रः  
+पर्याकुलोऽजनि भवन्महिमावमर्शात् ।  
+एवं प्रशान्तरमणीयतरोऽवतारस्  
+त्वत्तोऽधिको वरद कृष्णतनुस्त्वमेव ॥८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षस्तु धातुरतिलालनया रजोन्धो  
 नात्यादृतस्त्वयि च कष्टमशान्तिरासीत् ।  
 येन व्यरुन्ध स भवत्तनुमेव शर्वं  
 यज्ञो च वैरपिशुने स्वसुतां व्यमानीत् ॥९॥
+</details>
+<details><summary>मूलम्</summary>
+
+दक्षस्तु धातुरतिलालनया रजोन्धो  
+नात्यादृतस्त्वयि च कष्टमशान्तिरासीत् ।  
+येन व्यरुन्ध स भवत्तनुमेव शर्वं  
+यज्ञो च वैरपिशुने स्वसुतां व्यमानीत् ॥९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कृद्धेशमर्दितमखः स तु कृत्तशीर्षो  
 देवप्रसादितहरादथ लब्धजीवः ।  
 त्वत्पूरितक्रतुवरः पुनराप शान्तिं  
 स त्वं प्रशान्तिकर पाहि मरुत्पुरेश ॥१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+कृद्धेशमर्दितमखः स तु कृत्तशीर्षो  
+देवप्रसादितहरादथ लब्धजीवः ।  
+त्वत्पूरितक्रतुवरः पुनराप शान्तिं  
+स त्वं प्रशान्तिकर पाहि मरुत्पुरेश ॥१०॥
+</details>
+
