--- a/laxyam/padyam/purANam/nArAyaNIyam/017.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/017.md
@@ -3,89 +3,198 @@ title: ०१७
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तानपादनृपतेर्मनुनन्दनस्य  
 जाया बभूव सुरुचिर्नितरामभीष्टा ।  
 अन्या सुनीतिरिति भर्तुरनादृता सा  
 त्वामेव नित्यमगतिः शरणं गताऽभूत् ॥ १॥
+</details>
+<details><summary>मूलम्</summary>
+
+उत्तानपादनृपतेर्मनुनन्दनस्य  
+जाया बभूव सुरुचिर्नितरामभीष्टा ।  
+अन्या सुनीतिरिति भर्तुरनादृता सा  
+त्वामेव नित्यमगतिः शरणं गताऽभूत् ॥ १॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अङ्के पितुः सुरुचिपुत्रकमुत्तमं तं  
 दृष्ट्वा ध्रुवः किल सुनीतिसुतोऽधिरोक्ष्यन् ।  
 आचिक्षिपे किल शिशुः सुतरां सुरुच्या  
 दुस्सन्त्यजा खलु भवद्विमुखैरसूया ॥ २॥
+</details>
+<details><summary>मूलम्</summary>
+
+अङ्के पितुः सुरुचिपुत्रकमुत्तमं तं  
+दृष्ट्वा ध्रुवः किल सुनीतिसुतोऽधिरोक्ष्यन् ।  
+आचिक्षिपे किल शिशुः सुतरां सुरुच्या  
+दुस्सन्त्यजा खलु भवद्विमुखैरसूया ॥ २॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वन्मोहिते पितरि पश्यति दारवश्ये  
 दूरं दुरुक्तिनिहतः स गतो निजाम्बाम् ।  
 साऽपि स्वकर्मगतिसन्तरणाय पुंसां  
 त्वत्पादमेव शरणं शिशवे शशंस ॥ ३॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वन्मोहिते पितरि पश्यति दारवश्ये  
+दूरं दुरुक्तिनिहतः स गतो निजाम्बाम् ।  
+साऽपि स्वकर्मगतिसन्तरणाय पुंसां  
+त्वत्पादमेव शरणं शिशवे शशंस ॥ ३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आकर्ण्य सोऽपि भवदर्चनिश्चितात्मा  
 मानी निरेत्य नगरात्किल पञ्चवर्षः ।  
 सन्दृष्टनारदनिवेदितमन्त्रमार्गस्  
 त्वामारराध तपसा मधुकाननान्ते ॥ ४॥
+</details>
+<details><summary>मूलम्</summary>
+
+आकर्ण्य सोऽपि भवदर्चनिश्चितात्मा  
+मानी निरेत्य नगरात्किल पञ्चवर्षः ।  
+सन्दृष्टनारदनिवेदितमन्त्रमार्गस्  
+त्वामारराध तपसा मधुकाननान्ते ॥ ४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ताते विषण्णहृदये नगरीं गतेन  
 श्रीनारदेन परिसान्त्वितचित्तवृत्तौ ।  
 बालस्त्वदर्पितमनाः क्रमवर्धितेन  
 निन्ये कठोरतपसा किल पञ्च मासान् ॥ ५॥
+</details>
+<details><summary>मूलम्</summary>
+
+ताते विषण्णहृदये नगरीं गतेन  
+श्रीनारदेन परिसान्त्वितचित्तवृत्तौ ।  
+बालस्त्वदर्पितमनाः क्रमवर्धितेन  
+निन्ये कठोरतपसा किल पञ्च मासान् ॥ ५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्तपोबलनिरुच्छ्वसिते दिगन्ते  
 देवार्थितस्त्वमुदयत्करुणार्द्रचेताः ।  
 त्वद्रूपचिद्रसनिलीनमतेः पुरस्ता  
 दाविर्बभूविथ विभो गरुडाधिरूढः ॥ ६॥
+</details>
+<details><summary>मूलम्</summary>
+
+तावत्तपोबलनिरुच्छ्वसिते दिगन्ते  
+देवार्थितस्त्वमुदयत्करुणार्द्रचेताः ।  
+त्वद्रूपचिद्रसनिलीनमतेः पुरस्ता  
+दाविर्बभूविथ विभो गरुडाधिरूढः ॥ ६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्दर्शनप्रमदभारतरङ्गितं तं  
 दृग्भ्यां निमग्नमिव रूपरसायने ते ।  
 तुष्टूषमाणमवगम्य कपोलदेशे  
 संस्पृष्टवानसि दरेण तथाऽऽदरेण ॥ ७॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वद्दर्शनप्रमदभारतरङ्गितं तं  
+दृग्भ्यां निमग्नमिव रूपरसायने ते ।  
+तुष्टूषमाणमवगम्य कपोलदेशे  
+संस्पृष्टवानसि दरेण तथाऽऽदरेण ॥ ७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावद्विबोधविमलं प्रणुवन्तमेन  
 माभाषथास्त्वमवगम्य तदीयभावम् ।  
 राज्यं चिरं समनुभूय भजस्व भूयः  
 सर्वोत्तरं ध्रुव पदं विनिवृत्तिहीनम् ॥ ८॥
+</details>
+<details><summary>मूलम्</summary>
+
+तावद्विबोधविमलं प्रणुवन्तमेन  
+माभाषथास्त्वमवगम्य तदीयभावम् ।  
+राज्यं चिरं समनुभूय भजस्व भूयः  
+सर्वोत्तरं ध्रुव पदं विनिवृत्तिहीनम् ॥ ८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इत्यूचिषि त्वयि गते नृपनन्दनोऽसौ  
 आनन्दिताखिलजनो नगरीमुपेतः ।  
 रेमे चिरं भवदनुग्रहपूर्णकामस्  
 ताते गते च वनमादृतराज्यभारः ॥ ९॥
+</details>
+<details><summary>मूलम्</summary>
+
+इत्यूचिषि त्वयि गते नृपनन्दनोऽसौ  
+आनन्दिताखिलजनो नगरीमुपेतः ।  
+रेमे चिरं भवदनुग्रहपूर्णकामस्  
+ताते गते च वनमादृतराज्यभारः ॥ ९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यक्षेण देव निहते पुनरुत्तमेऽस्मिन्  
 यक्षैः स युद्धनिरतो विरतो मनूक्त्या ।  
 शान्त्या प्रसन्नहृदयाद्धनदादुपेतात्  
 त्वद्भक्तिमेव सुदृढामवृणोन्महात्मा ॥ १०॥
+</details>
+<details><summary>मूलम्</summary>
+
+यक्षेण देव निहते पुनरुत्तमेऽस्मिन्  
+यक्षैः स युद्धनिरतो विरतो मनूक्त्या ।  
+शान्त्या प्रसन्नहृदयाद्धनदादुपेतात्  
+त्वद्भक्तिमेव सुदृढामवृणोन्महात्मा ॥ १०॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्ते भवत्पुरुषनीतविमानयातो  
 मात्रा समं ध्रुवपदे मुदितोऽयमास्ते ।  
 एवं स्वभृत्यजनपालनलोलधीस्त्वं  
 वातालयाधिप निरुन्धि ममामयौघान् ॥ ११॥
+</details>
+<details><summary>मूलम्</summary>
+
+अन्ते भवत्पुरुषनीतविमानयातो  
+मात्रा समं ध्रुवपदे मुदितोऽयमास्ते ।  
+एवं स्वभृत्यजनपालनलोलधीस्त्वं  
+वातालयाधिप निरुन्धि ममामयौघान् ॥ ११॥
+</details>
+
