--- a/laxyam/padyam/purANam/nArAyaNIyam/020.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/020.md
@@ -3,61 +3,140 @@ title: ०२०
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रियव्रतस्य प्रियपुत्रभूतादाग्नीध्रराजादुदितो हि नाभिः ।  
 त्वां दृष्टवानिष्टदमिष्टमध्ये तवैव तुष्ट्यै कृतयज्ञकर्मा ॥ २०१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रियव्रतस्य प्रियपुत्रभूतादाग्नीध्रराजादुदितो हि नाभिः ।  
+त्वां दृष्टवानिष्टदमिष्टमध्ये तवैव तुष्ट्यै कृतयज्ञकर्मा ॥ २०१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभिष्टुतस्तत्र मुनीश्वरैस्त्वं राज्ञा स्वतुल्यं सुतमर्थ्यमानः ।  
 स्वयं जनिष्येऽहमिति ब्रुवाणस्तिरोदधा बर्हिषि विश्वमूर्ते ॥ २०२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अभिष्टुतस्तत्र मुनीश्वरैस्त्वं राज्ञा स्वतुल्यं सुतमर्थ्यमानः ।  
+स्वयं जनिष्येऽहमिति ब्रुवाणस्तिरोदधा बर्हिषि विश्वमूर्ते ॥ २०२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नाभिप्रियायामथ मेरुदेव्यां त्वमंशतोऽभूरृषभाभिधानः ।  
 अलोकसामान्यगुणप्रभावप्रभाविताशेषजनप्रमोदः ॥ २०३॥
+</details>
+<details><summary>मूलम्</summary>
+
+नाभिप्रियायामथ मेरुदेव्यां त्वमंशतोऽभूरृषभाभिधानः ।  
+अलोकसामान्यगुणप्रभावप्रभाविताशेषजनप्रमोदः ॥ २०३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वयि त्रिलोकीभृति राज्य्भारं निधाय नाभिः सह मेरुदेव्या ।  
 तपोवनं प्राप्य भवन्निषेवी गतः किलानन्दपदं पदं ते ॥ २०४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वयि त्रिलोकीभृति राज्य्भारं निधाय नाभिः सह मेरुदेव्या ।  
+तपोवनं प्राप्य भवन्निषेवी गतः किलानन्दपदं पदं ते ॥ २०४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इन्द्रस्त्वदुत्कर्षकृतादमर्षाद्ववर्ष नास्मिन्नजनाभवर्षे ।  
 यदा तदा त्वं निजयोगशक्त्या स्ववर्षमेनद्व्यदधाः सुवर्षम् ॥ २०५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+इन्द्रस्त्वदुत्कर्षकृतादमर्षाद्ववर्ष नास्मिन्नजनाभवर्षे ।  
+यदा तदा त्वं निजयोगशक्त्या स्ववर्षमेनद्व्यदधाः सुवर्षम् ॥ २०५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जितेन्द्रदत्तां कमनीं जयन्तीमथोद्वहन्नात्मरताशयोऽपि ।  
 अजीजनत्तत्र शतं तनूजान्येषां क्षितीशो भरतोऽग्रजन्मा ॥ २०६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+जितेन्द्रदत्तां कमनीं जयन्तीमथोद्वहन्नात्मरताशयोऽपि ।  
+अजीजनत्तत्र शतं तनूजान्येषां क्षितीशो भरतोऽग्रजन्मा ॥ २०६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नवाभवन्योगिवरा नवान्ये त्वपालयन्भारतवर्षखण्डान् ।  
 सैका त्वशीतिस्तव शेषपुत्रास्तपोबलाद्भूसुरभूयमीयुः ॥ २०७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+नवाभवन्योगिवरा नवान्ये त्वपालयन्भारतवर्षखण्डान् ।  
+सैका त्वशीतिस्तव शेषपुत्रास्तपोबलाद्भूसुरभूयमीयुः ॥ २०७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उक्त्वा सुतेभ्योऽथ मुनीन्द्रमध्ये विरक्तिभक्त्यन्वितमुक्तिमार्गम् ।  
 स्वयं गतः पारमहंस्यवृत्तिमधा जडोन्मत्तपिशाचचर्याम् ॥ २०८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+उक्त्वा सुतेभ्योऽथ मुनीन्द्रमध्ये विरक्तिभक्त्यन्वितमुक्तिमार्गम् ।  
+स्वयं गतः पारमहंस्यवृत्तिमधा जडोन्मत्तपिशाचचर्याम् ॥ २०८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 परात्मभूतोऽपि परोपदेशं कुर्वन्भवन्सर्वनिरस्यमानः ।  
 विकारहीनो विचचार कृत्स्नां महीमहीनात्मरसाभिलीनः ॥ २०९॥
+</details>
+<details><summary>मूलम्</summary>
+
+परात्मभूतोऽपि परोपदेशं कुर्वन्भवन्सर्वनिरस्यमानः ।  
+विकारहीनो विचचार कृत्स्नां महीमहीनात्मरसाभिलीनः ॥ २०९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शयुव्रतं गोमृगकाकचर्यां चिरं चरन्नाप्य परं स्वरूपम् ।  
 दवाहृताङ्गः कुटकाचले त्वं तापान्ममापाकुरु वातनाथ ॥ २०१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+शयुव्रतं गोमृगकाकचर्यां चिरं चरन्नाप्य परं स्वरूपम् ।  
+दवाहृताङ्गः कुटकाचले त्वं तापान्ममापाकुरु वातनाथ ॥ २०१० ॥
+</details>
+
