--- a/laxyam/padyam/purANam/nArAyaNIyam/021.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/021.md
@@ -3,97 +3,216 @@ title: ०२१
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मध्योद्भवओ भुव इलावृतनाम्नि वर्षे  
 गौरीप्रधानवनिताजनमात्रभाजि ।  
 शर्वेण मन्त्रनुतिभिः सुमुपास्यमानं  
 सङ्कर्षणात्मकमधीश्वर संश्रये त्वाम् ॥ २११॥
+</details>
+<details><summary>मूलम्</summary>
+
+मध्योद्भवओ भुव इलावृतनाम्नि वर्षे  
+गौरीप्रधानवनिताजनमात्रभाजि ।  
+शर्वेण मन्त्रनुतिभिः सुमुपास्यमानं  
+सङ्कर्षणात्मकमधीश्वर संश्रये त्वाम् ॥ २११॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भद्राश्वनामक इलावृतपूर्ववर्षे  
 भद्रश्रवोभिरृषिभिः परिणूयमानम् ।  
 कल्पान्तगूढनिगमोद्धरणप्रवीणं  
 ध्यायामि देव हयशीर्षतनुं भवन्तम् ॥ २१२॥
+</details>
+<details><summary>मूलम्</summary>
+
+भद्राश्वनामक इलावृतपूर्ववर्षे  
+भद्रश्रवोभिरृषिभिः परिणूयमानम् ।  
+कल्पान्तगूढनिगमोद्धरणप्रवीणं  
+ध्यायामि देव हयशीर्षतनुं भवन्तम् ॥ २१२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ध्यायामि दक्षिणगते हरिवर्षवर्षे  
 प्राह्लादमुख्यपुरुषैः परिषेव्यमाणम् ।  
 उत्तुङ्गशान्तधवलाकृतिमेकशुद्ध  
 ज्ञानप्रदं नरहरिं भगवन् भवन्तम् ॥ २१३॥
+</details>
+<details><summary>मूलम्</summary>
+
+ध्यायामि दक्षिणगते हरिवर्षवर्षे  
+प्राह्लादमुख्यपुरुषैः परिषेव्यमाणम् ।  
+उत्तुङ्गशान्तधवलाकृतिमेकशुद्ध  
+ज्ञानप्रदं नरहरिं भगवन् भवन्तम् ॥ २१३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वर्षे प्रतीचि ललितात्मनि केतुमाले  
 लीलाविशेषललितस्मितशोभनाङ्गम् ।  
 लक्ष्म्या प्रजापतिसुतैश्च निषेव्यमाणं  
 तस्याः प्रियाय धृतकामतनुं भजे त्वाम् ॥ २१४॥
+</details>
+<details><summary>मूलम्</summary>
+
+वर्षे प्रतीचि ललितात्मनि केतुमाले  
+लीलाविशेषललितस्मितशोभनाङ्गम् ।  
+लक्ष्म्या प्रजापतिसुतैश्च निषेव्यमाणं  
+तस्याः प्रियाय धृतकामतनुं भजे त्वाम् ॥ २१४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रम्येह्युदीचि खलु रम्यकनाम्नि वर्षे  
 तद्वर्षनाथमनुवर्यसपर्यमाणम् ।  
 भक्तैकवत्सलममत्सरहृत्सु भान्तं  
 मत्स्याकृतिं भुवननाथ भजे भवन्तम् ॥ २१५॥
+</details>
+<details><summary>मूलम्</summary>
+
+रम्येह्युदीचि खलु रम्यकनाम्नि वर्षे  
+तद्वर्षनाथमनुवर्यसपर्यमाणम् ।  
+भक्तैकवत्सलममत्सरहृत्सु भान्तं  
+मत्स्याकृतिं भुवननाथ भजे भवन्तम् ॥ २१५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वर्षं हिरण्मयसमाह्वयमौत्तराह  
 मासीनमद्रिधृतिकर्मठकामठाङ्गम् ।  
 संसेवते पितृगणप्रवरोऽर्यमायं  
 तं त्वां भजामि भगवन् परचिन्मयात्मन् ॥ २१६॥
+</details>
+<details><summary>मूलम्</summary>
+
+वर्षं हिरण्मयसमाह्वयमौत्तराह  
+मासीनमद्रिधृतिकर्मठकामठाङ्गम् ।  
+संसेवते पितृगणप्रवरोऽर्यमायं  
+तं त्वां भजामि भगवन् परचिन्मयात्मन् ॥ २१६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 किं चोत्तरेषु कुरुषु प्रियया धरण्या  
 संसेवितो महितमन्त्रनुतिप्रभेदैः ।  
 दंष्ट्राग्रघृष्टघनपृष्ठगरिष्ठवर्ष्मा  
 त्वं पाहि विज्ञनुतयज्ञवराहमूर्ते ॥ २१७॥
+</details>
+<details><summary>मूलम्</summary>
+
+किं चोत्तरेषु कुरुषु प्रियया धरण्या  
+संसेवितो महितमन्त्रनुतिप्रभेदैः ।  
+दंष्ट्राग्रघृष्टघनपृष्ठगरिष्ठवर्ष्मा  
+त्वं पाहि विज्ञनुतयज्ञवराहमूर्ते ॥ २१७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 याम्यां दिशं भजति किंपुरुषाख्यवर्षे  
 संसेवितो हनुमता दृढभक्तिभाजा ।  
 सीताभिरामपरमाद्भुतरूपशाली  
 रामात्मकः परिलसन्परिपाहि विष्णो ॥ २१८॥
+</details>
+<details><summary>मूलम्</summary>
+
+याम्यां दिशं भजति किंपुरुषाख्यवर्षे  
+संसेवितो हनुमता दृढभक्तिभाजा ।  
+सीताभिरामपरमाद्भुतरूपशाली  
+रामात्मकः परिलसन्परिपाहि विष्णो ॥ २१८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रीनारदेन सह भारतखण्डमुख्यैस्  
 त्वं सांख्ययोगनुतिभिः समुपास्यमानः ।  
 आकल्पकालमिह साधुजनाभिरक्षी  
 नारायणो नरसखः परिपाहि भूमन् ॥ २१९॥
+</details>
+<details><summary>मूलम्</summary>
+
+श्रीनारदेन सह भारतखण्डमुख्यैस्  
+त्वं सांख्ययोगनुतिभिः समुपास्यमानः ।  
+आकल्पकालमिह साधुजनाभिरक्षी  
+नारायणो नरसखः परिपाहि भूमन् ॥ २१९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्लाक्षेऽर्करूपमयि शाल्मल इन्दुरूपं  
 द्वीये भजन्ति कुशनामनि वह्निरूपम् ।  
 क्रौञ्चेऽम्बुरूपमथ वायुमयं च शाके  
 त्वां ब्रह्मरूपमयि पुष्करनाम्नि लोकाः ॥ २११०॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्लाक्षेऽर्करूपमयि शाल्मल इन्दुरूपं  
+द्वीये भजन्ति कुशनामनि वह्निरूपम् ।  
+क्रौञ्चेऽम्बुरूपमथ वायुमयं च शाके  
+त्वां ब्रह्मरूपमयि पुष्करनाम्नि लोकाः ॥ २११०॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वैर्ध्रुवीदिभिरुडुप्रकरैर्ग्रहैश्च  
 पुच्छादिकेष्ववयवेष्वभिकल्प्यमानैः ।  
 त्वं शिंशुमारवपुषा महतामुपास्यः  
 सन्ध्यासु रुन्धि नरकं मम सिन्धुशायैन् ॥ २१११॥
+</details>
+<details><summary>मूलम्</summary>
+
+सर्वैर्ध्रुवीदिभिरुडुप्रकरैर्ग्रहैश्च  
+पुच्छादिकेष्ववयवेष्वभिकल्प्यमानैः ।  
+त्वं शिंशुमारवपुषा महतामुपास्यः  
+सन्ध्यासु रुन्धि नरकं मम सिन्धुशायैन् ॥ २१११॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_12.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पातालमूलभुवि शेषतनुं भवन्तं  
 लोकैककुण्डलविराजिसहस्रशीर्षम् ।  
 नीलाम्बरं धृतहलं भुजगाङ्गनाभिर्  
 जुष्टं भजे हर गदान्गुरुगेहनाथ ॥ २११२॥
+</details>
+<details><summary>मूलम्</summary>
+
+पातालमूलभुवि शेषतनुं भवन्तं  
+लोकैककुण्डलविराजिसहस्रशीर्षम् ।  
+नीलाम्बरं धृतहलं भुजगाङ्गनाभिर्  
+जुष्टं भजे हर गदान्गुरुगेहनाथ ॥ २११२॥
+</details>
+
