--- a/laxyam/padyam/purANam/nArAyaNIyam/022.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/022.md
@@ -3,67 +3,154 @@ title: ०२२
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अजामिलो नाम महीसुरः पुरा चरन्विभो धर्म पथान् गृहाश्रमी ।  
 गुरोर्गिरा काननमेत्य दृष्टवान्सुघृष्टशीलां कुलटां मदाकुलाम् ॥ २२१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अजामिलो नाम महीसुरः पुरा चरन्विभो धर्म पथान् गृहाश्रमी ।  
+गुरोर्गिरा काननमेत्य दृष्टवान्सुघृष्टशीलां कुलटां मदाकुलाम् ॥ २२१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वतः प्रशान्तोऽपि तदाहृताशयः स्वधर्ममुत्सृज्य तया समारमन् ।  
 अधर्मकारी दशमी भवन्पुनर्दधौ भवन्नामयुते सुते रतिम् ॥ २२२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्वतः प्रशान्तोऽपि तदाहृताशयः स्वधर्ममुत्सृज्य तया समारमन् ।  
+अधर्मकारी दशमी भवन्पुनर्दधौ भवन्नामयुते सुते रतिम् ॥ २२२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स मृत्युकाले यमराजकिङ्करान् भयङ्करांस्त्रीनभिलक्षयन्भिया ।  
 पुरा मनाक्त्वत्स्मृतिवासनाबलाज्जुहाव नारायणनामकं सुतम् ॥ २२३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+स मृत्युकाले यमराजकिङ्करान् भयङ्करांस्त्रीनभिलक्षयन्भिया ।  
+पुरा मनाक्त्वत्स्मृतिवासनाबलाज्जुहाव नारायणनामकं सुतम् ॥ २२३ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दुराशयस्यापि तदात्वनिर्गतत्वदीयनामाक्षरमात्रवैभवात् ।  
 पुरोऽभिपेतुर्भवदीयपार्षदाश्चतुर्भुजाः पीतपटा मनोरमाः ॥ २२४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+दुराशयस्यापि तदात्वनिर्गतत्वदीयनामाक्षरमात्रवैभवात् ।  
+पुरोऽभिपेतुर्भवदीयपार्षदाश्चतुर्भुजाः पीतपटा मनोरमाः ॥ २२४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अमुं च संपाश्य विकर्षतो भतान् विमुञ्चतेत्यारुरुधुर्बलादमी ।  
 निवारितास्ते च भवज्जनैस्तदा तदीयपापं निखिलं न्यवेदयन् ॥ २२५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अमुं च संपाश्य विकर्षतो भतान् विमुञ्चतेत्यारुरुधुर्बलादमी ।  
+निवारितास्ते च भवज्जनैस्तदा तदीयपापं निखिलं न्यवेदयन् ॥ २२५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवन्तु पापानि कथं तु निष्कृते कृतेऽपि भो दण्डनमस्ति पण्दिताः ।  
 न निष्कृतिः किईं विदिता भवादृशामिति प्रभो त्वत्पुरुषा बभाषिरे ॥ २२६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+भवन्तु पापानि कथं तु निष्कृते कृतेऽपि भो दण्डनमस्ति पण्दिताः ।  
+न निष्कृतिः किईं विदिता भवादृशामिति प्रभो त्वत्पुरुषा बभाषिरे ॥ २२६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रुतिस्मृतिभ्यां विहिता व्रतादयः पुनन्ति पापं न लुनन्ति वासनाम् ।  
 अनन्तसेवा तु निकृन्तति द्वयीमिति प्रभो त्वत्पुरुषा बभाषिरे ॥ २२७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+श्रुतिस्मृतिभ्यां विहिता व्रतादयः पुनन्ति पापं न लुनन्ति वासनाम् ।  
+अनन्तसेवा तु निकृन्तति द्वयीमिति प्रभो त्वत्पुरुषा बभाषिरे ॥ २२७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनेन भो जन्मसहस्रकोटिभिः कृतेषु पापेष्वपि निष्कृतिः कृता ।  
 तदग्रहीन्नाम भयाकुलो हरेरिति प्रभो त्वत्पुरुषा बभाषिरे ॥ २२८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अनेन भो जन्मसहस्रकोटिभिः कृतेषु पापेष्वपि निष्कृतिः कृता ।  
+तदग्रहीन्नाम भयाकुलो हरेरिति प्रभो त्वत्पुरुषा बभाषिरे ॥ २२८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नृणामबुद्ध्यापि मुकुन्दकीर्तनं दहत्यघौघान्महिमास्य तादृशः ।  
 यथाग्निरेधांसि यथौषधं गदानिति प्रभो त्वत्पुरुषा बभाषिरे ॥ २२९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+नृणामबुद्ध्यापि मुकुन्दकीर्तनं दहत्यघौघान्महिमास्य तादृशः ।  
+यथाग्निरेधांसि यथौषधं गदानिति प्रभो त्वत्पुरुषा बभाषिरे ॥ २२९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इतीरितैर्याम्यभटैरपासृते भवद्भटानां च गणे तिरोहिते ।  
 भवत्स्मृतिं कञ्चन कालमाचरन्भवत्पदं प्रापि भवद्भटैरसौ ॥ २२१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+इतीरितैर्याम्यभटैरपासृते भवद्भटानां च गणे तिरोहिते ।  
+भवत्स्मृतिं कञ्चन कालमाचरन्भवत्पदं प्रापि भवद्भटैरसौ ॥ २२१० ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वकिङ्गरावेदनशङ्कितो यमस्त्वदङ्घ्रिभक्तेषु न गम्यतामिति ।  
 स्वकीयभृत्यानशिशिक्षदुच्चकैः स देव वातालय पाहि माम् ॥ २२११ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्वकिङ्गरावेदनशङ्कितो यमस्त्वदङ्घ्रिभक्तेषु न गम्यतामिति ।  
+स्वकीयभृत्यानशिशिक्षदुच्चकैः स देव वातालय पाहि माम् ॥ २२११ ॥
+</details>
+
