--- a/laxyam/padyam/purANam/nArAyaNIyam/023.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/023.md
@@ -3,89 +3,198 @@ title: ०२३
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राचेतस्तु भगवन्नपरोऽपि दक्षस्  
 त्वत्सेवनं व्यधित सर्गविवृद्धिकामः ।  
 आविर्बभूविथ तदा लसदष्टबाहुस्  
 तस्मै वरं ददिथ तां च वधूमसिक्नीम् ॥ २३१॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्राचेतस्तु भगवन्नपरोऽपि दक्षस्  
+त्वत्सेवनं व्यधित सर्गविवृद्धिकामः ।  
+आविर्बभूविथ तदा लसदष्टबाहुस्  
+तस्मै वरं ददिथ तां च वधूमसिक्नीम् ॥ २३१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्यात्मजास्त्वयुतमीश पुनः सहस्रं  
 श्रीनारदस्य वचसा तव मार्गमापुः ।  
 नैकत्रवासमृषये स मुमोच शापं  
 भक्तोत्तमस्त्वृषिरनुग्नहमेव मेने ॥ २३२॥
+</details>
+<details><summary>मूलम्</summary>
+
+तस्यात्मजास्त्वयुतमीश पुनः सहस्रं  
+श्रीनारदस्य वचसा तव मार्गमापुः ।  
+नैकत्रवासमृषये स मुमोच शापं  
+भक्तोत्तमस्त्वृषिरनुग्नहमेव मेने ॥ २३२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 षष्ट्या ततो दुहितृभिः सृजतः कुलौघान्  
 दौहित्रसूनुरथ तस्य स विश्वरूपः ।  
 त्वत्स्तोत्रवर्मितमजापयदिन्द्रमाजौ  
 देव त्वदीयमहिमा खलु सर्वजैत्रः ॥ २३३॥
+</details>
+<details><summary>मूलम्</summary>
+
+षष्ट्या ततो दुहितृभिः सृजतः कुलौघान्  
+दौहित्रसूनुरथ तस्य स विश्वरूपः ।  
+त्वत्स्तोत्रवर्मितमजापयदिन्द्रमाजौ  
+देव त्वदीयमहिमा खलु सर्वजैत्रः ॥ २३३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राक्शूरसेनविषये किल चित्रकेतुः  
 पुत्राग्रही नृपतिरङ्गिरसः प्रभावात् ।  
 लब्ध्वैकपुत्रमथ तत्र हते सपत्नी  
 संघैरमुह्यदवशस्तव माययासौ ॥ २३४॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्राक्शूरसेनविषये किल चित्रकेतुः  
+पुत्राग्रही नृपतिरङ्गिरसः प्रभावात् ।  
+लब्ध्वैकपुत्रमथ तत्र हते सपत्नी  
+संघैरमुह्यदवशस्तव माययासौ ॥ २३४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तं नारदस्तु सममङ्गिरसा दयालुः  
 सम्प्राप्य तावदुपदर्श्य सुतस्य जीवम् ।  
 कस्यास्मि पुत्र इति तस्य गिरा विमोहं  
 त्यक्त्वा त्वदर्चनविधौ नृपतिं न्ययुङ्क्त ॥ २३५॥
+</details>
+<details><summary>मूलम्</summary>
+
+तं नारदस्तु सममङ्गिरसा दयालुः  
+सम्प्राप्य तावदुपदर्श्य सुतस्य जीवम् ।  
+कस्यास्मि पुत्र इति तस्य गिरा विमोहं  
+त्यक्त्वा त्वदर्चनविधौ नृपतिं न्ययुङ्क्त ॥ २३५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्तोत्रं च मन्त्रमपि नारदतोऽथ लब्ध्वा  
 तोषाय शेषवपुषो ननु ते तपस्यन् ।  
 विद्याधराधिपतितां स हि सप्तरात्रे  
 लब्ध्वाप्यकुण्टःअमतिरन्वभजद्भवन्तम् ॥ २३६॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्तोत्रं च मन्त्रमपि नारदतोऽथ लब्ध्वा  
+तोषाय शेषवपुषो ननु ते तपस्यन् ।  
+विद्याधराधिपतितां स हि सप्तरात्रे  
+लब्ध्वाप्यकुण्टःअमतिरन्वभजद्भवन्तम् ॥ २३६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्मै मृणालधवलेन सहस्रशीर्ष्णा  
 रूपेण बद्धनुतिसिद्धगणावृतेन ।  
 प्रादुर्भवन्नचिरतो नुतिभिः प्रसन्नो  
 दत्त्वात्मतत्वमनुगृह्य तिरोदधाथ ॥ २३७॥
+</details>
+<details><summary>मूलम्</summary>
+
+तस्मै मृणालधवलेन सहस्रशीर्ष्णा  
+रूपेण बद्धनुतिसिद्धगणावृतेन ।  
+प्रादुर्भवन्नचिरतो नुतिभिः प्रसन्नो  
+दत्त्वात्मतत्वमनुगृह्य तिरोदधाथ ॥ २३७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्भक्तमौलिरथ सोऽपि च लक्षलक्षं  
 वर्षाणि हर्षुलमना भुवनेषु कामम् ।  
 संगापयन्गुणगणं तव सुन्दरीभिः  
 सङ्गातिरेकरहितो ललितं चचार ॥ २३८॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वद्भक्तमौलिरथ सोऽपि च लक्षलक्षं  
+वर्षाणि हर्षुलमना भुवनेषु कामम् ।  
+संगापयन्गुणगणं तव सुन्दरीभिः  
+सङ्गातिरेकरहितो ललितं चचार ॥ २३८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अत्यन्तसङ्गविलयाय भवत्प्रणुन्नो  
 नूनं स रूप्यगिरिमाप्य महत्समाजे ।  
 निश्शङ्कमङ्ककृतवल्लभमङ्गजारिम्  
 तं शङ्करं परिहसन्नुमयाभिशेपे ॥ २३९॥
+</details>
+<details><summary>मूलम्</summary>
+
+अत्यन्तसङ्गविलयाय भवत्प्रणुन्नो  
+नूनं स रूप्यगिरिमाप्य महत्समाजे ।  
+निश्शङ्कमङ्ककृतवल्लभमङ्गजारिम्  
+तं शङ्करं परिहसन्नुमयाभिशेपे ॥ २३९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निस्सम्भ्रमस्त्वयमयाचितशापमोक्षो  
 वृत्रासुरत्वमुपगम्य सुरेन्द्रयोधी ।  
 भक्त्यात्मतत्त्वकथनैस्समरे विचित्रं  
 शत्रोरपि भ्रममपास्य गतः पदं ते ॥ २३१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+निस्सम्भ्रमस्त्वयमयाचितशापमोक्षो  
+वृत्रासुरत्वमुपगम्य सुरेन्द्रयोधी ।  
+भक्त्यात्मतत्त्वकथनैस्समरे विचित्रं  
+शत्रोरपि भ्रममपास्य गतः पदं ते ॥ २३१०॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्सेवनेन दितिरिन्द्रवधोद्यताऽपि  
 तान्प्रत्युतेन्द्रसुहृदो मरुतोऽभिलेभे ।  
 दुष्टाशयेऽपि शुभदैव भवन्निषेवा  
 तत्तादृशस्त्वमव मां पवनालयेश ॥ २३११॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वत्सेवनेन दितिरिन्द्रवधोद्यताऽपि  
+तान्प्रत्युतेन्द्रसुहृदो मरुतोऽभिलेभे ।  
+दुष्टाशयेऽपि शुभदैव भवन्निषेवा  
+तत्तादृशस्त्वमव मां पवनालयेश ॥ २३११॥
+</details>
+
