--- a/laxyam/padyam/purANam/nArAyaNIyam/024.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/024.md
@@ -3,81 +3,180 @@ title: ०२४
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हिरण्याक्षे पोत्रीप्रवरवपुषा देव भवता  
 हते शोकक्रोधग्लपितघृतिरेतस्य सहजः ।  
 हिरण्यप्रारम्भः कशिपुरमररातिसदसि  
 प्रतिज्ञामातेने तव किल वधार्थं मुररिपो ॥ २४१॥
+</details>
+<details><summary>मूलम्</summary>
+
+हिरण्याक्षे पोत्रीप्रवरवपुषा देव भवता  
+हते शोकक्रोधग्लपितघृतिरेतस्य सहजः ।  
+हिरण्यप्रारम्भः कशिपुरमररातिसदसि  
+प्रतिज्ञामातेने तव किल वधार्थं मुररिपो ॥ २४१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विधातारं घोरं स खलु तपसित्वा नचिरतः  
 पुरः साक्षात्कुर्वन्सुरनरमृगाद्यैरनिधनम् ।  
 वरं लब्ध्वा दृप्तो जगदिह भवन्नायकमिदं  
 परिक्षुन्दन्निन्द्रादहरत दिवं त्वामगणयन् ॥ २४२॥
+</details>
+<details><summary>मूलम्</summary>
+
+विधातारं घोरं स खलु तपसित्वा नचिरतः  
+पुरः साक्षात्कुर्वन्सुरनरमृगाद्यैरनिधनम् ।  
+वरं लब्ध्वा दृप्तो जगदिह भवन्नायकमिदं  
+परिक्षुन्दन्निन्द्रादहरत दिवं त्वामगणयन् ॥ २४२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निहन्तुं त्वां भूयस्तव पदमवाप्तस्य च रिपोर्  
 बहिर्दृष्टेरन्तर्दधिथ हृदये सूक्ष्मवपुषा ।  
 नदन्नुच्चैस्तत्राप्यखिलभुवनान्ते च मृगयन्  
 भिया यातं मत्वा स खलु जितकाशी निववृते ॥ २४३॥
+</details>
+<details><summary>मूलम्</summary>
+
+निहन्तुं त्वां भूयस्तव पदमवाप्तस्य च रिपोर्  
+बहिर्दृष्टेरन्तर्दधिथ हृदये सूक्ष्मवपुषा ।  
+नदन्नुच्चैस्तत्राप्यखिलभुवनान्ते च मृगयन्  
+भिया यातं मत्वा स खलु जितकाशी निववृते ॥ २४३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततोऽस्य प्रह्लादः समजनि सुतो गर्भवसतौ  
 मुनेर्वीणापाणेरधिगतभबद्भक्तिमहिमा ।  
 स वै जात्या दैत्यः शिशुरपि समेत्य त्वयि रतिं  
 गतस्त्वद्भक्तानां वरद परमोदाहरणताम् ॥ २४४॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततोऽस्य प्रह्लादः समजनि सुतो गर्भवसतौ  
+मुनेर्वीणापाणेरधिगतभबद्भक्तिमहिमा ।  
+स वै जात्या दैत्यः शिशुरपि समेत्य त्वयि रतिं  
+गतस्त्वद्भक्तानां वरद परमोदाहरणताम् ॥ २४४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुरारीणां हास्यं तव चरणदास्यं निजसुते  
 स दृष्ट्वा दुष्टात्मा गुरुभिरशिशिक्षच्चिरममुम् ।  
 गुरुप्रोक्तं चासाविदमिदमभद्राय दृढमि  
 त्यपाकुर्वन् सर्वं तव चरणभक्त्यैव ववृधे ॥ २४५॥
+</details>
+<details><summary>मूलम्</summary>
+
+सुरारीणां हास्यं तव चरणदास्यं निजसुते  
+स दृष्ट्वा दुष्टात्मा गुरुभिरशिशिक्षच्चिरममुम् ।  
+गुरुप्रोक्तं चासाविदमिदमभद्राय दृढमि  
+त्यपाकुर्वन् सर्वं तव चरणभक्त्यैव ववृधे ॥ २४५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधीतेषु श्रेष्ठं किमिति परिपृष्टेऽथ तनये  
 भवद्भक्तिं वर्यामभिगदति पर्याकुलधृतिः ।  
 गुरुभ्यो रोषित्वा सहजमतिरस्योत्यभिविदन्  
 वधिपायानस्मिन् व्यतत्नुत भवत्पादशरणे ॥ २४६॥
+</details>
+<details><summary>मूलम्</summary>
+
+अधीतेषु श्रेष्ठं किमिति परिपृष्टेऽथ तनये  
+भवद्भक्तिं वर्यामभिगदति पर्याकुलधृतिः ।  
+गुरुभ्यो रोषित्वा सहजमतिरस्योत्यभिविदन्  
+वधिपायानस्मिन् व्यतत्नुत भवत्पादशरणे ॥ २४६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स शूलैराविद्धः सुबहु मथितो दिग्गजगणैर्  
 महासर्पैर्दष्टोऽप्यनशनगराहारविधुतः ।  
 गिरीन्द्रावक्षिप्तोऽप्यहह परमात्मन्नयि विभो  
 त्वयि न्यस्तात्मत्वात् किमपि न निपीडामभजत ॥ २४७॥
+</details>
+<details><summary>मूलम्</summary>
+
+स शूलैराविद्धः सुबहु मथितो दिग्गजगणैर्  
+महासर्पैर्दष्टोऽप्यनशनगराहारविधुतः ।  
+गिरीन्द्रावक्षिप्तोऽप्यहह परमात्मन्नयि विभो  
+त्वयि न्यस्तात्मत्वात् किमपि न निपीडामभजत ॥ २४७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततः शङ्काविष्टः स पुनरतिदुष्टोऽस्य जनको  
 गुरूक्त्या तद्गेह किल वरुणपाशैस्तमरुणत् ।  
 गुरोश्चासान्निध्ये स पुनरनुगान्दैत्यतनयान्  
 भवद्भक्तेस्तत्त्वं परमपि विज्ञानमशिषत् ॥ २४८॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततः शङ्काविष्टः स पुनरतिदुष्टोऽस्य जनको  
+गुरूक्त्या तद्गेह किल वरुणपाशैस्तमरुणत् ।  
+गुरोश्चासान्निध्ये स पुनरनुगान्दैत्यतनयान्  
+भवद्भक्तेस्तत्त्वं परमपि विज्ञानमशिषत् ॥ २४८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पिता षृण्वन्बालप्रकरमखिलं त्वत्स्तुतिपरं  
 रुषान्धः प्राहैनं कुलहतक कस्ते बलमिति ।  
 बलं मे वैकुण्ठस्तव च जगतां चापि स बलं  
 स एव त्रैलोक्यं सकलमिति धीरोऽयमगदीत् ॥ २४९॥
+</details>
+<details><summary>मूलम्</summary>
+
+पिता षृण्वन्बालप्रकरमखिलं त्वत्स्तुतिपरं  
+रुषान्धः प्राहैनं कुलहतक कस्ते बलमिति ।  
+बलं मे वैकुण्ठस्तव च जगतां चापि स बलं  
+स एव त्रैलोक्यं सकलमिति धीरोऽयमगदीत् ॥ २४९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अरे क्वासौ क्वासौ सकलजगदात्मा हरिरिति  
 प्रभिन्ते स्म स्तम्भं चलितकरवालो दितिसुतः ।  
 अतः पश्चाद्विष्णो न हि वदितुमीशोऽस्मि सहसा  
 कृपात्मन् विश्वात्मन् पवनपुरवासिन् मृडय माम् ॥ २४१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+अरे क्वासौ क्वासौ सकलजगदात्मा हरिरिति  
+प्रभिन्ते स्म स्तम्भं चलितकरवालो दितिसुतः ।  
+अतः पश्चाद्विष्णो न हि वदितुमीशोऽस्मि सहसा  
+कृपात्मन् विश्वात्मन् पवनपुरवासिन् मृडय माम् ॥ २४१०॥
+</details>
+
