--- a/laxyam/padyam/purANam/nArAyaNIyam/025.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/025.md
@@ -3,52 +3,112 @@ title: ०२५
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्तम्भे घट्टयतो हिरण्यकशिपोः कर्णौ समाचूर्णय  
 न्नाधूर्णज्जगदण्दकुण्डकुहरो घोरस्तवाभूद्रवः ।  
 श्रुत्वा यं किल दैत्यराजहृदये पूर्वं कदाप्यश्रुतं  
 कम्पः कश्चन सम्पपात्चलितोऽप्यम्भोजभूर्विष्टरात् ॥ २५१॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्तम्भे घट्टयतो हिरण्यकशिपोः कर्णौ समाचूर्णय  
+न्नाधूर्णज्जगदण्दकुण्डकुहरो घोरस्तवाभूद्रवः ।  
+श्रुत्वा यं किल दैत्यराजहृदये पूर्वं कदाप्यश्रुतं  
+कम्पः कश्चन सम्पपात्चलितोऽप्यम्भोजभूर्विष्टरात् ॥ २५१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दैत्ये दिक्षु विसृष्टचक्षुषि महासंराम्भिणी स्तम्भतः  
 सम्भूतं न मृगात्मकं न मनुजाकारं वपुस्ते विभो ।  
 किं किं भीषणमेतदद्भुतमिति व्युद्भ्रान्तचित्तेऽसुरे  
 विस्फूर्जद्धवलोग्ररोमविकसद्वर्ष्मा समाजृम्भथाः ॥ २५२॥
+</details>
+<details><summary>मूलम्</summary>
+
+दैत्ये दिक्षु विसृष्टचक्षुषि महासंराम्भिणी स्तम्भतः  
+सम्भूतं न मृगात्मकं न मनुजाकारं वपुस्ते विभो ।  
+किं किं भीषणमेतदद्भुतमिति व्युद्भ्रान्तचित्तेऽसुरे  
+विस्फूर्जद्धवलोग्ररोमविकसद्वर्ष्मा समाजृम्भथाः ॥ २५२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तप्तस्वर्णसवर्णघूर्णदतिरूक्षाक्षं सटाकेसर  
 प्रोत्कम्पप्रनिकुम्बिताम्बरमहो जीयात्तवेदं वपुः ।  
 व्यात्तव्याप्तमहादरीसखमुखं खङ्गोग्रवद्गन्महा  
 जिह्वानिर्गमदृश्यमानसुमहादंष्ट्रायुगोड्डामरम् ॥ २५३॥
+</details>
+<details><summary>मूलम्</summary>
+
+तप्तस्वर्णसवर्णघूर्णदतिरूक्षाक्षं सटाकेसर  
+प्रोत्कम्पप्रनिकुम्बिताम्बरमहो जीयात्तवेदं वपुः ।  
+व्यात्तव्याप्तमहादरीसखमुखं खङ्गोग्रवद्गन्महा  
+जिह्वानिर्गमदृश्यमानसुमहादंष्ट्रायुगोड्डामरम् ॥ २५३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्सर्पद्वलिभङ्गभीषुणहनुं ह्रस्वस्थवीयस्तर  
 ग्रीवं पीवरदोश्शतोद्गतनखकॄरांशुदूरोद्बणम् ।  
 व्योमोल्लंघिघनाघनोपमघनप्रध्वाननिर्धावित  
 स्पर्धालुप्रकरं नमामि भवतस्तन्नारसिंहं वपुः ॥ २५४॥
+</details>
+<details><summary>मूलम्</summary>
+
+उत्सर्पद्वलिभङ्गभीषुणहनुं ह्रस्वस्थवीयस्तर  
+ग्रीवं पीवरदोश्शतोद्गतनखकॄरांशुदूरोद्बणम् ।  
+व्योमोल्लंघिघनाघनोपमघनप्रध्वाननिर्धावित  
+स्पर्धालुप्रकरं नमामि भवतस्तन्नारसिंहं वपुः ॥ २५४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नूनं विष्णुरयं निहन्म्यमुमिति भ्राम्यद्गदाभीषणं  
 दैत्येन्द्रं समुपाद्रवन्तमधृथा दोर्भ्यां पृथुभ्याममुम् ।  
 वीरो निर्गलितोऽथ खड्गफलकौ गृह्णन्विचित्रश्रमान्  
 व्यावृण्वन्पुनरापपात भुवनग्रासोद्यतं त्वामहो ॥ २५५॥
+</details>
+<details><summary>मूलम्</summary>
+
+नूनं विष्णुरयं निहन्म्यमुमिति भ्राम्यद्गदाभीषणं  
+दैत्येन्द्रं समुपाद्रवन्तमधृथा दोर्भ्यां पृथुभ्याममुम् ।  
+वीरो निर्गलितोऽथ खड्गफलकौ गृह्णन्विचित्रश्रमान्  
+व्यावृण्वन्पुनरापपात भुवनग्रासोद्यतं त्वामहो ॥ २५५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भ्राम्यन्तं दितिहाधमं पुनरपि प्रोद्गृह्य दोर्भ्यां जवाद्  
 द्वारेऽथोरुयुगे निपात्य नखरान्व्युत्न्खाय वक्षोभुवि ।  
 निर्भिन्दन्नधिगर्भनिर्भरगलद्रक्ताम्बु बद्धोत्सवं  
 पायं पायमुदैरयो बहुजगत्संहारिसिंहारवान् ॥ २५६॥
+</details>
+<details><summary>मूलम्</summary>
+
+भ्राम्यन्तं दितिहाधमं पुनरपि प्रोद्गृह्य दोर्भ्यां जवाद्  
+द्वारेऽथोरुयुगे निपात्य नखरान्व्युत्न्खाय वक्षोभुवि ।  
+निर्भिन्दन्नधिगर्भनिर्भरगलद्रक्ताम्बु बद्धोत्सवं  
+पायं पायमुदैरयो बहुजगत्संहारिसिंहारवान् ॥ २५६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_07.mp3"></div>
 
@@ -63,17 +123,36 @@ title: ०२५
 सर्वे शर्वविरिञ्चवासवमुखाः प्रत्येकमस्तोषत ॥ २५८॥
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयोऽप्यक्षतरोषधाम्नि भवति ब्रह्माज्ञया बालके  
 प्रह्लादे पदयोर्नमत्यपभये कारुण्यभाराकुलः ।  
 शान्तस्त्वं करमस्य मूर्ध्नि समधाः स्तोत्रैरथोद्नायत  
 स्तस्याकामधियोऽपि तेनिथ वरं लोकाय चानुग्रहम् ॥ २५९॥
+</details>
+<details><summary>मूलम्</summary>
+
+भूयोऽप्यक्षतरोषधाम्नि भवति ब्रह्माज्ञया बालके  
+प्रह्लादे पदयोर्नमत्यपभये कारुण्यभाराकुलः ।  
+शान्तस्त्वं करमस्य मूर्ध्नि समधाः स्तोत्रैरथोद्नायत  
+स्तस्याकामधियोऽपि तेनिथ वरं लोकाय चानुग्रहम् ॥ २५९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं नाटितरौद्रचेष्टित विभो श्रीतापनीयाभिध  
 श्रुत्यन्तस्फुटगीतसर्वमहिमन्नत्यन्तशुद्धाकृते ।  
 तत्तादृङ्निखिलोत्तरं पुनरहो कस्त्वां परो लंघयेत्  
 प्रह्लादप्रिय हे मरुत्पुरपते सर्वामयात्पाहि माम् ॥ २५१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+एवं नाटितरौद्रचेष्टित विभो श्रीतापनीयाभिध  
+श्रुत्यन्तस्फुटगीतसर्वमहिमन्नत्यन्तशुद्धाकृते ।  
+तत्तादृङ्निखिलोत्तरं पुनरहो कस्त्वां परो लंघयेत्  
+प्रह्लादप्रिय हे मरुत्पुरपते सर्वामयात्पाहि माम् ॥ २५१०॥
+</details>
+
