--- a/laxyam/padyam/purANam/nArAyaNIyam/026.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/026.md
@@ -3,61 +3,140 @@ title: ०२६
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इन्द्रद्युम्नः पाण्ड्यखण्डाधिराजस्त्वद्भक्तात्मा चन्दनाद्रौ कदाचित् ।  
 त्वत्सेवायां मग्नधीरालुलोके नैवागस्त्यं प्राप्तमातिथ्यकामम् ॥ २६१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+इन्द्रद्युम्नः पाण्ड्यखण्डाधिराजस्त्वद्भक्तात्मा चन्दनाद्रौ कदाचित् ।  
+त्वत्सेवायां मग्नधीरालुलोके नैवागस्त्यं प्राप्तमातिथ्यकामम् ॥ २६१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुम्भोद्भूतिस्संभृतक्रोधभारः स्तब्धात्मा त्वं हस्तिभूयं भजेति ।  
 शप्त्वाथैनं प्रत्यगात्सोऽपि लेभे हस्तीन्द्रत्वं त्वत्स्मृतिव्यक्तिधन्यम् ॥ २६२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कुम्भोद्भूतिस्संभृतक्रोधभारः स्तब्धात्मा त्वं हस्तिभूयं भजेति ।  
+शप्त्वाथैनं प्रत्यगात्सोऽपि लेभे हस्तीन्द्रत्वं त्वत्स्मृतिव्यक्तिधन्यम् ॥ २६२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दुग्धाम्भोधेर्मध्यभाजि त्रिकूटे क्रोडञ्छैले यूथपोऽयं वशाभिः ।  
 सर्वान्जन्तूनत्यवर्तिष्ट शक्त्या त्वद्भक्तानां कुत्र नोत्कर्षलाभः ॥ २६३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+दुग्धाम्भोधेर्मध्यभाजि त्रिकूटे क्रोडञ्छैले यूथपोऽयं वशाभिः ।  
+सर्वान्जन्तूनत्यवर्तिष्ट शक्त्या त्वद्भक्तानां कुत्र नोत्कर्षलाभः ॥ २६३ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वेन स्थेम्ना दिव्यदेहत्वशक्त्या सोऽयं खेदानप्रजानन् कदाचित् ।  
 शैलप्रान्ते घर्मतान्तः सरस्यां यूथैः सार्धं त्वत्प्रणुन्नोऽभिरेमे ॥ २६४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्वेन स्थेम्ना दिव्यदेहत्वशक्त्या सोऽयं खेदानप्रजानन् कदाचित् ।  
+शैलप्रान्ते घर्मतान्तः सरस्यां यूथैः सार्धं त्वत्प्रणुन्नोऽभिरेमे ॥ २६४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हूहूस्तावद्देवलस्यापि शापत् ग्राहीभूतस्तज्जले वर्तमानः ।  
 जग्राहैनं हस्तिनं पाददेशे शान्त्यर्थं हि श्रान्तिदोऽसि स्वकानाम् ॥ २६५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+हूहूस्तावद्देवलस्यापि शापत् ग्राहीभूतस्तज्जले वर्तमानः ।  
+जग्राहैनं हस्तिनं पाददेशे शान्त्यर्थं हि श्रान्तिदोऽसि स्वकानाम् ॥ २६५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्सेवाया वैभवाद्दुर्निरोधं युध्यन्तं तं वत्सराणां सहस्रम् ।  
 प्राप्ते काले त्वत्पदैकाग्र्यसिद्ध्यै नक्राक्रान्तं हस्तिवीरं व्यधास्त्वम् ॥ २६६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वत्सेवाया वैभवाद्दुर्निरोधं युध्यन्तं तं वत्सराणां सहस्रम् ।  
+प्राप्ते काले त्वत्पदैकाग्र्यसिद्ध्यै नक्राक्रान्तं हस्तिवीरं व्यधास्त्वम् ॥ २६६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आर्तिव्यक्तप्राक्तनज्ञानभक्तिः शुण्डोत्क्षिप्तैः पुण्डरीकैस्समर्चन् ।  
 पूर्वाभ्यस्तं निर्विशेषात्मनिष्ठं स्तोत्रश्रेष्ठं सोऽन्दगादीत्परात्मन् ॥ २६७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+आर्तिव्यक्तप्राक्तनज्ञानभक्तिः शुण्डोत्क्षिप्तैः पुण्डरीकैस्समर्चन् ।  
+पूर्वाभ्यस्तं निर्विशेषात्मनिष्ठं स्तोत्रश्रेष्ठं सोऽन्दगादीत्परात्मन् ॥ २६७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रुत्वा स्तोत्रं निर्गुणस्थं समस्तं ब्रह्मेशाद्यैर्नाहमित्यप्रयाते ।  
 सर्वात्मा त्वं भूरिकारुण्यवेगात् तार्क्ष्यारूढः प्रेक्षितोऽभूः पुरस्तात् ॥ २६८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+श्रुत्वा स्तोत्रं निर्गुणस्थं समस्तं ब्रह्मेशाद्यैर्नाहमित्यप्रयाते ।  
+सर्वात्मा त्वं भूरिकारुण्यवेगात् तार्क्ष्यारूढः प्रेक्षितोऽभूः पुरस्तात् ॥ २६८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हस्तीन्द्रं तं हस्तपद्मेन धृत्वा चक्रेण त्वं नक्रवर्यं व्यदारीः ।  
 गन्धर्वेऽस्मिन्मुक्तशापे स हस्ती त्वत्सारूप्यं प्राप्य देदीप्यते स्म ॥ २६९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+हस्तीन्द्रं तं हस्तपद्मेन धृत्वा चक्रेण त्वं नक्रवर्यं व्यदारीः ।  
+गन्धर्वेऽस्मिन्मुक्तशापे स हस्ती त्वत्सारूप्यं प्राप्य देदीप्यते स्म ॥ २६९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एतद्वृत्तं त्वां च मां च प्रगे यो गायेत्सोऽयं भूयसे श्रेयसे स्यात् ।  
 इत्युक्त्वैनं तेन सार्धं गतस्त्वं धिष्ण्यं विष्णो पाहि वातालयेश ॥ २६१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+एतद्वृत्तं त्वां च मां च प्रगे यो गायेत्सोऽयं भूयसे श्रेयसे स्यात् ।  
+इत्युक्त्वैनं तेन सार्धं गतस्त्वं धिष्ण्यं विष्णो पाहि वातालयेश ॥ २६१० ॥
+</details>
+
