--- a/laxyam/padyam/purANam/nArAyaNIyam/032.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/032.md
@@ -3,61 +3,140 @@ title: ०३२
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुरा हयग्रीवमहासुरेण षष्ठान्तरान्तोद्यदकाण्डकल्पे ।  
 निद्रोन्मुखब्रह्ममुखात् दृतेषु वेदेष्वधित्सः किल मत्स्यरूपम् ॥ ३२१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+पुरा हयग्रीवमहासुरेण षष्ठान्तरान्तोद्यदकाण्डकल्पे ।  
+निद्रोन्मुखब्रह्ममुखात् दृतेषु वेदेष्वधित्सः किल मत्स्यरूपम् ॥ ३२१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्यव्रतस्य द्रमिडाधिभर्तुर्नदीजले तर्पयतस्तदानीम् ।  
 कराञ्जलौ सञ्ज्वलिताकृतिस्त्वमदृश्यथाः कश्चन बालमीनः ॥ ३२२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+सत्यव्रतस्य द्रमिडाधिभर्तुर्नदीजले तर्पयतस्तदानीम् ।  
+कराञ्जलौ सञ्ज्वलिताकृतिस्त्वमदृश्यथाः कश्चन बालमीनः ॥ ३२२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षिप्तं जले त्वां चकितं विलोक्य निन्येऽन्बुपात्रेण मुनिः स्वगेहम् ।  
 स्वल्पैरहोभिः कलशीं च कूपं वापीं सरश्चानशिषे विभो त्वम् ॥ ३२३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+क्षिप्तं जले त्वां चकितं विलोक्य निन्येऽन्बुपात्रेण मुनिः स्वगेहम् ।  
+स्वल्पैरहोभिः कलशीं च कूपं वापीं सरश्चानशिषे विभो त्वम् ॥ ३२३ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 योगप्रभावाद्भवदाज्ञयैव नीतस्ततस्त्वं मुनिना पयोधिम् ।  
 पृष्टोऽमुना कल्पदिदृक्षुमेनं सप्ताहमास्वेति वदन्नयासीः ॥ ३२४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+योगप्रभावाद्भवदाज्ञयैव नीतस्ततस्त्वं मुनिना पयोधिम् ।  
+पृष्टोऽमुना कल्पदिदृक्षुमेनं सप्ताहमास्वेति वदन्नयासीः ॥ ३२४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राप्ते त्वदुक्तेऽहनि वारिधारापरिप्लुते भूमितले मुनीन्द्रः ।  
 सप्तर्षिभिः सार्धमपारवारिण्युद्घूर्णमानः शरणं ययौ त्वाम् ॥ ३२५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्राप्ते त्वदुक्तेऽहनि वारिधारापरिप्लुते भूमितले मुनीन्द्रः ।  
+सप्तर्षिभिः सार्धमपारवारिण्युद्घूर्णमानः शरणं ययौ त्वाम् ॥ ३२५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धरां त्वदादेशकरीमवाप्तां नौरूपिणीमारुरुहुस्तदा ते ।  
 तत्कम्पकम्प्रेषु च तेषु भूयस्त्वमम्बुधेराविरभूर्महीयान् ॥ ३२६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+धरां त्वदादेशकरीमवाप्तां नौरूपिणीमारुरुहुस्तदा ते ।  
+तत्कम्पकम्प्रेषु च तेषु भूयस्त्वमम्बुधेराविरभूर्महीयान् ॥ ३२६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 झषाकृतिं योजनलक्षदीर्घां दधानमुच्चैस्तरतेजसं त्वाम् ।  
 निरीक्ष्य तुष्टा मुनयस्त्वदुक्त्या त्वत्तुङ्गषृङ्गे तरणिं बबन्धुः ॥ ३२७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+झषाकृतिं योजनलक्षदीर्घां दधानमुच्चैस्तरतेजसं त्वाम् ।  
+निरीक्ष्य तुष्टा मुनयस्त्वदुक्त्या त्वत्तुङ्गषृङ्गे तरणिं बबन्धुः ॥ ३२७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आकृष्टनौको मुनिमण्डलाय प्रदर्शयन्विश्वजगद्विभागान् ।  
 संस्तूयमानो नृवरेण तेन ज्ञानं परं चोपदिशन्नचारीः ॥ ३२८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+आकृष्टनौको मुनिमण्डलाय प्रदर्शयन्विश्वजगद्विभागान् ।  
+संस्तूयमानो नृवरेण तेन ज्ञानं परं चोपदिशन्नचारीः ॥ ३२८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कल्पावधौ सप्त मुनीन्पुरोवत्प्रस्ताप्य सत्यव्रतभूमिपं तम् ।  
 वैवस्वताख्यं मनुमादधानः क्रोधाद्धयग्रीवमभिद्रुतोऽभूः ॥ ३२९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कल्पावधौ सप्त मुनीन्पुरोवत्प्रस्ताप्य सत्यव्रतभूमिपं तम् ।  
+वैवस्वताख्यं मनुमादधानः क्रोधाद्धयग्रीवमभिद्रुतोऽभूः ॥ ३२९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वतुङ्गषृङ्गक्षतवक्षसं तं निपात्य दैत्यं निगमान्गृहीत्वा ।  
 विरिञ्चये प्रीतहृदे ददानः प्रभञ्जनागारपते प्रपायाः ॥ ३२१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्वतुङ्गषृङ्गक्षतवक्षसं तं निपात्य दैत्यं निगमान्गृहीत्वा ।  
+विरिञ्चये प्रीतहृदे ददानः प्रभञ्जनागारपते प्रपायाः ॥ ३२१० ॥
+</details>
+
