--- a/laxyam/padyam/purANam/nArAyaNIyam/033.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/033.md
@@ -3,81 +3,180 @@ title: ०३३
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वैवस्वताख्यमनुपुत्रनभागजात  
 नाभागनामकनरेन्द्रसुतोऽम्बरीषुः ।  
 सप्तार्णवावृतमहीदयितोऽपि रेमे  
 त्वत्सङ्गिषु त्वयि च मग्नमनास्सदैव ॥ ३३१॥
+</details>
+<details><summary>मूलम्</summary>
+
+वैवस्वताख्यमनुपुत्रनभागजात  
+नाभागनामकनरेन्द्रसुतोऽम्बरीषुः ।  
+सप्तार्णवावृतमहीदयितोऽपि रेमे  
+त्वत्सङ्गिषु त्वयि च मग्नमनास्सदैव ॥ ३३१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्प्रीतयेसकलमेव वितन्वतोऽस्य  
 भक्त्यैव देव नचिरादभृथाः प्रसादम् ।  
 येनास्य याचनमृतेऽप्यभिरक्षणार्थं  
 चक्रं भवान्प्रविततार सहस्रधारम् ॥ ३३२॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वत्प्रीतयेसकलमेव वितन्वतोऽस्य  
+भक्त्यैव देव नचिरादभृथाः प्रसादम् ।  
+येनास्य याचनमृतेऽप्यभिरक्षणार्थं  
+चक्रं भवान्प्रविततार सहस्रधारम् ॥ ३३२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स द्वादशीव्रतमथो भवदर्चनार्थं  
 वर्षं दधौ मधुवने यमुनोपकण्ठे ।  
 पत्न्या समं सुमनसा महतीं वितन्वन्  
 पूजां द्विजेषु विसृजन्पशुषष्टिकोटिम् ॥ ३३३॥
+</details>
+<details><summary>मूलम्</summary>
+
+स द्वादशीव्रतमथो भवदर्चनार्थं  
+वर्षं दधौ मधुवने यमुनोपकण्ठे ।  
+पत्न्या समं सुमनसा महतीं वितन्वन्  
+पूजां द्विजेषु विसृजन्पशुषष्टिकोटिम् ॥ ३३३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्राथ पारणदिने भवदर्चनान्ते  
 दुर्वाससाऽस्य मुनिना भवनं प्रपेदे ।  
 भोक्तुं वृतश्च स नृपेण परार्तिशीलो  
 मन्दं जगाम यमुनां नियमान्विधास्यन् ॥ ३३४॥
+</details>
+<details><summary>मूलम्</summary>
+
+तत्राथ पारणदिने भवदर्चनान्ते  
+दुर्वाससाऽस्य मुनिना भवनं प्रपेदे ।  
+भोक्तुं वृतश्च स नृपेण परार्तिशीलो  
+मन्दं जगाम यमुनां नियमान्विधास्यन् ॥ ३३४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 राज्ञाथ पारणमुह्ङ्र्तसमाप्तिखेदा  
 द्वारैव पारणमकारि भवत्परेण ।  
 प्राप्तो मुनिस्तदथ दिव्यदृशा विजानन्  
 क्षिप्यन् कृधोद्धृतजटो विततान कृत्याम् ॥ ३३५॥
+</details>
+<details><summary>मूलम्</summary>
+
+राज्ञाथ पारणमुह्ङ्र्तसमाप्तिखेदा  
+द्वारैव पारणमकारि भवत्परेण ।  
+प्राप्तो मुनिस्तदथ दिव्यदृशा विजानन्  
+क्षिप्यन् कृधोद्धृतजटो विततान कृत्याम् ॥ ३३५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कृत्यां च तामसिधरां भुवनं दहन्ती  
 मग्रेऽभिवीक्ष्य नृपतिर्न पदाच्चकम्पे ।  
 त्वद्भक्तबाधमभिवीक्ष्य सुदर्शनं ते  
 कृत्यानलं शलभयन्मुनिमन्वधावीत् ॥ ३३६॥
+</details>
+<details><summary>मूलम्</summary>
+
+कृत्यां च तामसिधरां भुवनं दहन्ती  
+मग्रेऽभिवीक्ष्य नृपतिर्न पदाच्चकम्पे ।  
+त्वद्भक्तबाधमभिवीक्ष्य सुदर्शनं ते  
+कृत्यानलं शलभयन्मुनिमन्वधावीत् ॥ ३३६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धावन्नशेषभुवनेषु भिया स पश्यन्  
 विश्वत्र चक्रमपि ते गतवान्विरिञ्चम् ।  
 कः कालचक्रमतिलङ्घयतीत्यपास्तः  
 शर्वं ययौ स च भवन्तमवन्दतैव ॥ ३३७॥
+</details>
+<details><summary>मूलम्</summary>
+
+धावन्नशेषभुवनेषु भिया स पश्यन्  
+विश्वत्र चक्रमपि ते गतवान्विरिञ्चम् ।  
+कः कालचक्रमतिलङ्घयतीत्यपास्तः  
+शर्वं ययौ स च भवन्तमवन्दतैव ॥ ३३७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयो भवन्निलयमेत्य मुनिं नमन्तं  
 प्रोचे भवानहमृषे ननु भक्तदासः ।  
 ज्ञानं तपश्च विनयान्वितमेव मान्यं  
 याह्यम्बरीषपदमेव भजेति भूमन् ॥ ३३८॥
+</details>
+<details><summary>मूलम्</summary>
+
+भूयो भवन्निलयमेत्य मुनिं नमन्तं  
+प्रोचे भवानहमृषे ननु भक्तदासः ।  
+ज्ञानं तपश्च विनयान्वितमेव मान्यं  
+याह्यम्बरीषपदमेव भजेति भूमन् ॥ ३३८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्समेत्य मुनिना स गृहीतपादो  
 राजाऽपसृत्य भवदस्त्रमसावनौषीत् ।  
 चक्रे गते मुनिरदादखिलाशिषोऽस्मै  
 त्वद्भक्तिमागसि कृतेऽपि कृपां च शंसन् ॥ ३३९॥
+</details>
+<details><summary>मूलम्</summary>
+
+तावत्समेत्य मुनिना स गृहीतपादो  
+राजाऽपसृत्य भवदस्त्रमसावनौषीत् ।  
+चक्रे गते मुनिरदादखिलाशिषोऽस्मै  
+त्वद्भक्तिमागसि कृतेऽपि कृपां च शंसन् ॥ ३३९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 राजा प्रतीक्ष्य मुनिमेकसमामनाश्वान्  
 सम्भोज्य साधु तमृषिं विसृजन्प्रसन्नम् ।  
 भुक्त्वा स्वयं त्वयि ततोऽपि दृढं रतोऽभूत्  
 सायुज्यमाप च स मां पवनेश पायाः ॥ ३३१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+राजा प्रतीक्ष्य मुनिमेकसमामनाश्वान्  
+सम्भोज्य साधु तमृषिं विसृजन्प्रसन्नम् ।  
+भुक्त्वा स्वयं त्वयि ततोऽपि दृढं रतोऽभूत्  
+सायुज्यमाप च स मां पवनेश पायाः ॥ ३३१०॥
+</details>
+
