--- a/laxyam/padyam/purANam/nArAyaNIyam/036.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/036.md
@@ -3,89 +3,198 @@ title: ०३६
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अत्रेः पुत्रतया पुरा त्वमनसूयायां हि दत्ताभिधो  
 जातः शिष्यानिषन्धतन्द्रितमनाः स्वस्थश्चरन्कान्तया ।  
 दृष्टो भक्ततमेन हेहयमहीपालेन तस्मै वरा  
 नष्टैश्वर्यमुखान्प्रदाय ददिथ स्वेनैव चान्ते वधम् ॥ ३६१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अत्रेः पुत्रतया पुरा त्वमनसूयायां हि दत्ताभिधो  
+जातः शिष्यानिषन्धतन्द्रितमनाः स्वस्थश्चरन्कान्तया ।  
+दृष्टो भक्ततमेन हेहयमहीपालेन तस्मै वरा  
+नष्टैश्वर्यमुखान्प्रदाय ददिथ स्वेनैव चान्ते वधम् ॥ ३६१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्यं कर्तुमथार्जुनस्य च वरं तच्छक्तिमात्रानतं  
 ब्रह्मद्वेषि तदाखिलं नृपकुलं हन्तुं च भूमेर्भरम् ।  
 सञ्जातो जमदग्नितो भृगुकुले त्वं रेणुकायां हरे  
 रामो नाम तदात्मजेष्ववरजः पित्रोरधाः सम्मदम् ॥ ३६२॥
+</details>
+<details><summary>मूलम्</summary>
+
+सत्यं कर्तुमथार्जुनस्य च वरं तच्छक्तिमात्रानतं  
+ब्रह्मद्वेषि तदाखिलं नृपकुलं हन्तुं च भूमेर्भरम् ।  
+सञ्जातो जमदग्नितो भृगुकुले त्वं रेणुकायां हरे  
+रामो नाम तदात्मजेष्ववरजः पित्रोरधाः सम्मदम् ॥ ३६२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 लब्धाम्नायगणश्चतुर्दशवयाः गन्धर्वराजे मना  
 गासक्तां किल मातरं प्रति पितुः क्रोधाकुलस्याज्ञया ।  
 ताताज्ञातिगसोदरैः सममिमां छित्वाथ शान्तात्पितु  
 स्तेषां जीवनयोगमापिथ वरं माता च तेऽदाद्वरन् ॥ ३६३॥
+</details>
+<details><summary>मूलम्</summary>
+
+लब्धाम्नायगणश्चतुर्दशवयाः गन्धर्वराजे मना  
+गासक्तां किल मातरं प्रति पितुः क्रोधाकुलस्याज्ञया ।  
+ताताज्ञातिगसोदरैः सममिमां छित्वाथ शान्तात्पितु  
+स्तेषां जीवनयोगमापिथ वरं माता च तेऽदाद्वरन् ॥ ३६३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पित्रा मातृमुदे स्तवाहृतवियद्धेनोर्निजादाश्रमात्  
 प्रस्थायाथ भृगोर्गिरा हिमगिरावाराध्य गौरीपतिम् ।  
 लब्ध्वा तत्परशुं तदुक्तदनुजच्छेदी महास्त्रादिकं  
 प्राप्तो मित्रमथाकृतवृअणमुनिं प्राप्यागमः स्वाश्रमम् ॥ ३६४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+पित्रा मातृमुदे स्तवाहृतवियद्धेनोर्निजादाश्रमात्  
+प्रस्थायाथ भृगोर्गिरा हिमगिरावाराध्य गौरीपतिम् ।  
+लब्ध्वा तत्परशुं तदुक्तदनुजच्छेदी महास्त्रादिकं  
+प्राप्तो मित्रमथाकृतवृअणमुनिं प्राप्यागमः स्वाश्रमम् ॥ ३६४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आखेटेपगतोऽर्जुनः सुरगवीसम्प्राप्तसम्पद्गणै  
 स्त्वत्पित्रा परिपूजितः पुरगतो दुर्मन्त्रिवाचा पुनः ।  
 गां क्रेतुं सचिवं न्ययुङ्क्त कुधिया तेनापि रुन्धन्मुनि  
 प्राणक्षेपसरोषगोहतचमूचक्रेण वत्सो हृतः ॥ ३६५॥
+</details>
+<details><summary>मूलम्</summary>
+
+आखेटेपगतोऽर्जुनः सुरगवीसम्प्राप्तसम्पद्गणै  
+स्त्वत्पित्रा परिपूजितः पुरगतो दुर्मन्त्रिवाचा पुनः ।  
+गां क्रेतुं सचिवं न्ययुङ्क्त कुधिया तेनापि रुन्धन्मुनि  
+प्राणक्षेपसरोषगोहतचमूचक्रेण वत्सो हृतः ॥ ३६५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शुक्रोज्जीविततातवाक्यचलितक्रोधोऽथ सख्या समं  
 बिभ्रुद्ध्यातमहोदरोपनिहितं चापं कुठारं शरन् ।  
 आरूढः सहवाहयन्तृकरथं माहिष्मतीमाविशन्  
 वाग्भिर्वत्समदाशुषि क्षितिपतौ सम्प्रास्तुथाः सङ्गरम् ॥ ३६६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+शुक्रोज्जीविततातवाक्यचलितक्रोधोऽथ सख्या समं  
+बिभ्रुद्ध्यातमहोदरोपनिहितं चापं कुठारं शरन् ।  
+आरूढः सहवाहयन्तृकरथं माहिष्मतीमाविशन्  
+वाग्भिर्वत्समदाशुषि क्षितिपतौ सम्प्रास्तुथाः सङ्गरम् ॥ ३६६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुत्राणामयुतेनसप्तदशभिश्चाक्षौहिणीभिर्महा  
 सेनानीभिरनेकमित्रनिवहिर्व्याजृम्भितीयोधनः ।  
 सद्यस्त्वत्ककुठारबाणविदलन्निश्शेषसैन्योत्करो  
 भीतिप्रद्रुतनष्टशिष्टनयस्त्वामापतद्धेहयः ॥ ३६७॥
+</details>
+<details><summary>मूलम्</summary>
+
+पुत्राणामयुतेनसप्तदशभिश्चाक्षौहिणीभिर्महा  
+सेनानीभिरनेकमित्रनिवहिर्व्याजृम्भितीयोधनः ।  
+सद्यस्त्वत्ककुठारबाणविदलन्निश्शेषसैन्योत्करो  
+भीतिप्रद्रुतनष्टशिष्टनयस्त्वामापतद्धेहयः ॥ ३६७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 लीलावारितनर्मदाजलवलल्लङ्केशगर्वापह  
 श्रीमद्बाहुसहस्रमुक्तबहुशस्त्रास्त्रं निरुन्धन्नमुम् ।  
 चक्रे त्वय्यथ वैष्णवेऽपि विकले बुध्वा हरिं त्वां मुदा  
 ध्यायन्तं छितस्र्वदोषमवधीः सोऽगात्परं ते पदम् ॥ ३६८॥
+</details>
+<details><summary>मूलम्</summary>
+
+लीलावारितनर्मदाजलवलल्लङ्केशगर्वापह  
+श्रीमद्बाहुसहस्रमुक्तबहुशस्त्रास्त्रं निरुन्धन्नमुम् ।  
+चक्रे त्वय्यथ वैष्णवेऽपि विकले बुध्वा हरिं त्वां मुदा  
+ध्यायन्तं छितस्र्वदोषमवधीः सोऽगात्परं ते पदम् ॥ ३६८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयोऽमर्षितहेहयात्मजगणैस्ताते हते रेणुका  
 माघ्नानां हृदयं निरीक्ष्य बहुशो घोरां प्रतिज्ञां वहन् ।  
 ध्यानानीतरथायुधस्त्वमकृथा विप्रद्रुहः क्षत्रियान्  
 दिक्चक्रेषु कुठारयन्विशिखयन् निःक्षात्रियां मेदिनीम् ॥ ३६९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+भूयोऽमर्षितहेहयात्मजगणैस्ताते हते रेणुका  
+माघ्नानां हृदयं निरीक्ष्य बहुशो घोरां प्रतिज्ञां वहन् ।  
+ध्यानानीतरथायुधस्त्वमकृथा विप्रद्रुहः क्षत्रियान्  
+दिक्चक्रेषु कुठारयन्विशिखयन् निःक्षात्रियां मेदिनीम् ॥ ३६९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तातोज्जीवनकृन्नृपालककुलं त्रिःसप्तकृत्वो जयन्  
 सन्तर्प्याथ समन्तपञ्चकमहारक्तहृदौधे पितॄन् ।  
 यज्ञे क्ष्मामपि काश्यपादिषु दिशन् साल्वेन युध्यन् पुनः  
 कृष्णोऽमुं निहनिष्यतीति शमितो युद्धात् कुमारैर्भवान् ॥ ३६१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+तातोज्जीवनकृन्नृपालककुलं त्रिःसप्तकृत्वो जयन्  
+सन्तर्प्याथ समन्तपञ्चकमहारक्तहृदौधे पितॄन् ।  
+यज्ञे क्ष्मामपि काश्यपादिषु दिशन् साल्वेन युध्यन् पुनः  
+कृष्णोऽमुं निहनिष्यतीति शमितो युद्धात् कुमारैर्भवान् ॥ ३६१० ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न्यस्यास्त्राणि महेन्द्रभूभृति तपस्तन्वन्पुनर्मज्जितां  
 गोकर्णावधि सागरेण धरणीं दृष्ट्वार्थितस्तापसैः ।  
 ध्यातेष्वासघृतानलास्त्रचकितं सिन्धुं सृवक्षेपणा  
 दुत्सार्योद्धृतकेरलो भृगुपते वातेश संरक्ष माम् ॥ ३६११॥
+</details>
+<details><summary>मूलम्</summary>
+
+न्यस्यास्त्राणि महेन्द्रभूभृति तपस्तन्वन्पुनर्मज्जितां  
+गोकर्णावधि सागरेण धरणीं दृष्ट्वार्थितस्तापसैः ।  
+ध्यातेष्वासघृतानलास्त्रचकितं सिन्धुं सृवक्षेपणा  
+दुत्सार्योद्धृतकेरलो भृगुपते वातेश संरक्ष माम् ॥ ३६११॥
+</details>
+
