--- a/laxyam/padyam/purANam/nArAyaNIyam/039.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/039.md
@@ -3,81 +3,180 @@ title: ०३९
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवन्तमयमुद्वहन् यदुकुलोद्वहो निस्सरन्  
 ददर्श गगनोच्चलज्जलभरां कलिन्दात्मजाम् ।  
 अहि सलिलसञ्चयः स पुनरैन्द्रजालोदितो  
 जलौघ इव तत्क्षणात्प्रपदमेयतामाययौ ॥ ३९१॥
+</details>
+<details><summary>मूलम्</summary>
+
+भवन्तमयमुद्वहन् यदुकुलोद्वहो निस्सरन्  
+ददर्श गगनोच्चलज्जलभरां कलिन्दात्मजाम् ।  
+अहि सलिलसञ्चयः स पुनरैन्द्रजालोदितो  
+जलौघ इव तत्क्षणात्प्रपदमेयतामाययौ ॥ ३९१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रसुप्तपशुपालिकां निभृतमारुदद्बालिका  
 मपावृतकवाटिकां पशुपवाटिकामाविशन् ।  
 भवन्तमयमर्पयन् प्रसवतल्पके तत्पदा  
 द्वहन् कपटकन्यकां स्वपुरमागतो वेगतः ॥ ३९२॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रसुप्तपशुपालिकां निभृतमारुदद्बालिका  
+मपावृतकवाटिकां पशुपवाटिकामाविशन् ।  
+भवन्तमयमर्पयन् प्रसवतल्पके तत्पदा  
+द्वहन् कपटकन्यकां स्वपुरमागतो वेगतः ॥ ३९२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततस्त्वदनुजारवक्षपितनिद्रवेगद्रव  
 द्भटोत्करनिवेदितप्रसववार्तयैवार्तिमान् ।  
 विमुक्तचिकुरोत्करस्त्वरितमापतन् भोजरा  
 डतुष्ट इव दृष्टवान् भगिनिकाकरे कन्यकाम् ॥ ३९३॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततस्त्वदनुजारवक्षपितनिद्रवेगद्रव  
+द्भटोत्करनिवेदितप्रसववार्तयैवार्तिमान् ।  
+विमुक्तचिकुरोत्करस्त्वरितमापतन् भोजरा  
+डतुष्ट इव दृष्टवान् भगिनिकाकरे कन्यकाम् ॥ ३९३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ध्रुवं कपटशालिनो मधुहरस्य माया भवे  
 दसाविति किशोरिकां भगिनिकाकरालिङ्गिताम् ।  
 द्विपो नलिनिकान्तरादिव मृणालिकामाक्षिप  
 न्नयं त्वदनुजामजामुपलपट्टके पिष्टवान् ॥ ३९४॥
+</details>
+<details><summary>मूलम्</summary>
+
+ध्रुवं कपटशालिनो मधुहरस्य माया भवे  
+दसाविति किशोरिकां भगिनिकाकरालिङ्गिताम् ।  
+द्विपो नलिनिकान्तरादिव मृणालिकामाक्षिप  
+न्नयं त्वदनुजामजामुपलपट्टके पिष्टवान् ॥ ३९४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो भवदुपासको झटिति मृत्युपाशादिव  
 प्रमुच्य तरसैव सा समधिरूढरूपान्तरा ।  
 अधस्तलमजग्मुषी विकसदष्टबाहुस्फुरन्  
 महायुधमहो गता किल विहायसा दिद्युते ॥ ३९५॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततो भवदुपासको झटिति मृत्युपाशादिव  
+प्रमुच्य तरसैव सा समधिरूढरूपान्तरा ।  
+अधस्तलमजग्मुषी विकसदष्टबाहुस्फुरन्  
+महायुधमहो गता किल विहायसा दिद्युते ॥ ३९५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नृशंसतर कंस ते किमु मया विनिष्पिष्टया  
 बभूव भवदन्तकः क्वचन चिन्त्यतां ते हितम् ।  
 इति त्वदनुजा विभो खलमुदीर्य तं जग्मुषी  
 मरुद्गणपणायिता भुवि च मन्दिराण्येयुषी ॥ ३९६॥
+</details>
+<details><summary>मूलम्</summary>
+
+नृशंसतर कंस ते किमु मया विनिष्पिष्टया  
+बभूव भवदन्तकः क्वचन चिन्त्यतां ते हितम् ।  
+इति त्वदनुजा विभो खलमुदीर्य तं जग्मुषी  
+मरुद्गणपणायिता भुवि च मन्दिराण्येयुषी ॥ ३९६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रगे पुनरगात्मजावचनमीरिता भूभुजा  
 प्रलम्बबकपूतनाप्रमुखदानवा मानिनः ।  
 भवन्निधनकाम्यया जगति बभ्रमुर्निर्भयाः  
 कुमारकविमारकाः किमिव दुष्करं निष्कृपैः ॥ ३९७॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रगे पुनरगात्मजावचनमीरिता भूभुजा  
+प्रलम्बबकपूतनाप्रमुखदानवा मानिनः ।  
+भवन्निधनकाम्यया जगति बभ्रमुर्निर्भयाः  
+कुमारकविमारकाः किमिव दुष्करं निष्कृपैः ॥ ३९७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततः पशुपमन्दिरे त्वयि मुकुन्द नन्दप्रिया  
 प्रसूतिशयनेशये रुदति किञ्चिदञ्चत्पदे ।  
 विबुध्य वनिताजनैस्तनयसंभवे घोषिते  
 मुदा किमु वदाम्यहो सकलमाकुलं गोकुलम् ॥ ३९८॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततः पशुपमन्दिरे त्वयि मुकुन्द नन्दप्रिया  
+प्रसूतिशयनेशये रुदति किञ्चिदञ्चत्पदे ।  
+विबुध्य वनिताजनैस्तनयसंभवे घोषिते  
+मुदा किमु वदाम्यहो सकलमाकुलं गोकुलम् ॥ ३९८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहो खलु यशोदया नवकलायचेतोहरं  
 भवन्तमलमन्तिके प्रथममपिबन्त्या दृशा ।  
 पुनः स्तनभरं निजं सपदि पाययन्त्या मुदा  
 मनोहरतनुस्पृशा जगति पुण्यवन्तो जिताः ॥ ३९९॥
+</details>
+<details><summary>मूलम्</summary>
+
+अहो खलु यशोदया नवकलायचेतोहरं  
+भवन्तमलमन्तिके प्रथममपिबन्त्या दृशा ।  
+पुनः स्तनभरं निजं सपदि पाययन्त्या मुदा  
+मनोहरतनुस्पृशा जगति पुण्यवन्तो जिताः ॥ ३९९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवत्कुशलकाम्यया स खलु नन्दगोपस्तदा  
 प्रमोदभरसङ्कुले द्विजकुलाय किं नाददात् ।  
 तथैव पशुपालकाः किमु न मङ्गलं तेनिरे  
 जगत्रितयमङ्गल त्वमिह पाहि मामामयात् ॥ ३९१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+भवत्कुशलकाम्यया स खलु नन्दगोपस्तदा  
+प्रमोदभरसङ्कुले द्विजकुलाय किं नाददात् ।  
+तथैव पशुपालकाः किमु न मङ्गलं तेनिरे  
+जगत्रितयमङ्गल त्वमिह पाहि मामामयात् ॥ ३९१०॥
+</details>
+
