--- a/laxyam/padyam/purANam/nArAyaNIyam/041.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/041.md
@@ -3,61 +3,140 @@ title: ०४१
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्रजेश्वरः शौरिवचो निशम्य समाव्रजन्नध्वनि भीतचेताः ।  
 निष्पिष्टनिश्शेषतरुं निरीक्ष्य कञ्चित्पदार्थं शरणं गतस्त्वाम् ॥ ४११ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+व्रजेश्वरः शौरिवचो निशम्य समाव्रजन्नध्वनि भीतचेताः ।  
+निष्पिष्टनिश्शेषतरुं निरीक्ष्य कञ्चित्पदार्थं शरणं गतस्त्वाम् ॥ ४११ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निशम्य गोपीवचनादुदन्तं सर्वेऽपि गोपा भयविस्मयान्धाः ।  
 त्वत्पातितं घोरपिशाचदेहं देहुर्विदूरेऽथ कुठारकृत्तम् ॥ ४१२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+निशम्य गोपीवचनादुदन्तं सर्वेऽपि गोपा भयविस्मयान्धाः ।  
+त्वत्पातितं घोरपिशाचदेहं देहुर्विदूरेऽथ कुठारकृत्तम् ॥ ४१२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्पीतपूतस्तनतच्छरीरात्समुच्चलन्नुच्चतरो हि धूमः ।  
 शङ्कामधादागरवः किमेषु किं चान्दनो गौल्गुलवोऽथवेति ॥ ४१३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वत्पीतपूतस्तनतच्छरीरात्समुच्चलन्नुच्चतरो हि धूमः ।  
+शङ्कामधादागरवः किमेषु किं चान्दनो गौल्गुलवोऽथवेति ॥ ४१३ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मदङ्गसङ्गस्य फलं न दूरए क्षणेन तावद्भवतामपि स्यात् ।  
 इत्युल्लपन्वल्लवतल्लजेभ्यस्त्वं पूतनामातनुथास्सुगन्धिम् ॥ ४१४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+मदङ्गसङ्गस्य फलं न दूरए क्षणेन तावद्भवतामपि स्यात् ।  
+इत्युल्लपन्वल्लवतल्लजेभ्यस्त्वं पूतनामातनुथास्सुगन्धिम् ॥ ४१४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चित्रं पिशाच्या न हतः कुमारश्चित्रं पुरैवाकथि शौरिणेदम् ।  
 इति प्रशंसन्किल गोपलोको भवन्मुखालोकरसे न्यमाङ्क्षीत् ॥ ४१५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+चित्रं पिशाच्या न हतः कुमारश्चित्रं पुरैवाकथि शौरिणेदम् ।  
+इति प्रशंसन्किल गोपलोको भवन्मुखालोकरसे न्यमाङ्क्षीत् ॥ ४१५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दिने दिनेऽथ प्रतिवृद्धलक्ष्मीरक्षीणमङ्गल्यशतो व्रजोऽयम् ।  
 भवन्निवासादयि वासुदेव प्रमोदसान्द्रः परितो विरेजे ॥ ४१६॥
+</details>
+<details><summary>मूलम्</summary>
+
+दिने दिनेऽथ प्रतिवृद्धलक्ष्मीरक्षीणमङ्गल्यशतो व्रजोऽयम् ।  
+भवन्निवासादयि वासुदेव प्रमोदसान्द्रः परितो विरेजे ॥ ४१६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गृहेषु ते कोमलरूपहासमिथः कथासङ्कुलिताः कमन्यः ।  
 वृत्तेषु कृत्येषु भवन्निरीक्षासमागताः प्रत्यहमत्यनन्दन् ॥ ४१७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+गृहेषु ते कोमलरूपहासमिथः कथासङ्कुलिताः कमन्यः ।  
+वृत्तेषु कृत्येषु भवन्निरीक्षासमागताः प्रत्यहमत्यनन्दन् ॥ ४१७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहो कुमारो मयि दत्तदृष्टिः स्मितः कृतं मां प्रति वत्सकेन ।  
 एह्येहि मामित्युपसार्य पाणिं त्वयीश किं किं न कृतं वधूभिः ॥ ४१८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अहो कुमारो मयि दत्तदृष्टिः स्मितः कृतं मां प्रति वत्सकेन ।  
+एह्येहि मामित्युपसार्य पाणिं त्वयीश किं किं न कृतं वधूभिः ॥ ४१८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवद्वपुःस्पर्शनकौतुकेन करात्करं गोपवधूजनेन ।  
 नीतस्त्वमाताम्रसरोजमालाव्यालम्बिलोलम्बतुलामलासीः ॥ ४१९॥
+</details>
+<details><summary>मूलम्</summary>
+
+भवद्वपुःस्पर्शनकौतुकेन करात्करं गोपवधूजनेन ।  
+नीतस्त्वमाताम्रसरोजमालाव्यालम्बिलोलम्बतुलामलासीः ॥ ४१९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निपाययन्ती स्तनमङ्कगं त्वां विलोकयन्ती वदनं हसन्ती ।  
 दशां यशोदा कतमान्न्न भेजे स तादृशः पाहि हरे गदान्माम् ॥ ४११० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+निपाययन्ती स्तनमङ्कगं त्वां विलोकयन्ती वदनं हसन्ती ।  
+दशां यशोदा कतमान्न्न भेजे स तादृशः पाहि हरे गदान्माम् ॥ ४११० ॥
+</details>
+
