--- a/laxyam/padyam/purANam/nArAyaNIyam/042.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/042.md
@@ -3,67 +3,154 @@ title: ०४२
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कदापि जन्मर्क्षदिने तव प्रभो निमन्त्रितज्ञातिवधूमहीसुरा ।  
 महानसस्त्वां सविधे निधाय सा महानसादौ ववृते व्रजेश्वरी ॥ ४२१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कदापि जन्मर्क्षदिने तव प्रभो निमन्त्रितज्ञातिवधूमहीसुरा ।  
+महानसस्त्वां सविधे निधाय सा महानसादौ ववृते व्रजेश्वरी ॥ ४२१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो भवत्त्राणनियुक्तबालकप्रभीतिसङ्क्रन्दनसङ्कुलारवैः ।  
 विमिश्रमश्रावि भवत्समीपतः परिस्फुटद्दारुचटच्चटारवः ॥ ४२२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततो भवत्त्राणनियुक्तबालकप्रभीतिसङ्क्रन्दनसङ्कुलारवैः ।  
+विमिश्रमश्रावि भवत्समीपतः परिस्फुटद्दारुचटच्चटारवः ॥ ४२२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततस्तदाकर्णनसंभ्रमश्रमप्रकम्पिवक्षोजभरा व्रजाङ्गनाः ।  
 भवन्तमन्तर्ददृशुः समन्ततो विनिष्पतद्दारुणदारुमध्यगम् ॥ ४२३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततस्तदाकर्णनसंभ्रमश्रमप्रकम्पिवक्षोजभरा व्रजाङ्गनाः ।  
+भवन्तमन्तर्ददृशुः समन्ततो विनिष्पतद्दारुणदारुमध्यगम् ॥ ४२३ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शिशोरहो किं किमभूदिति द्रुतं प्रधाव्य नन्दः पशुपाश्च भूसुराः ।  
 भवन्तमालोक्य यशोदया धृतं समाश्वसन्नश्रुजलार्द्रलोचनाः ॥ ४२४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+शिशोरहो किं किमभूदिति द्रुतं प्रधाव्य नन्दः पशुपाश्च भूसुराः ।  
+भवन्तमालोक्य यशोदया धृतं समाश्वसन्नश्रुजलार्द्रलोचनाः ॥ ४२४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कस्को नु कौतस्कुत एष विस्मयो विशङ्कटं यच्छकटं विपाटितम् ।  
 न कारणं किञ्चिदिहेति ते स्थिताः स्वनासिकादत्तकरास्त्वदीक्षकाः ॥ ४२५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कस्को नु कौतस्कुत एष विस्मयो विशङ्कटं यच्छकटं विपाटितम् ।  
+न कारणं किञ्चिदिहेति ते स्थिताः स्वनासिकादत्तकरास्त्वदीक्षकाः ॥ ४२५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुमारकस्यास्य पयोधरार्थिनः प्ररोदने लोलपदाम्बुजाहतम् ।  
 मया मया दृष्टमनो विपर्यगादितीश ते पालकबालका जगुः ॥ ४२६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कुमारकस्यास्य पयोधरार्थिनः प्ररोदने लोलपदाम्बुजाहतम् ।  
+मया मया दृष्टमनो विपर्यगादितीश ते पालकबालका जगुः ॥ ४२६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भिया तदा किञ्चिदजानतामिदं कुमारकाणामतिदुर्घटं वचः ।  
 भवत्प्रभावाविदुरैरितीरितं मनागिवाशङ्क्यत दृष्टपूतनैः ॥ ४२७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+भिया तदा किञ्चिदजानतामिदं कुमारकाणामतिदुर्घटं वचः ।  
+भवत्प्रभावाविदुरैरितीरितं मनागिवाशङ्क्यत दृष्टपूतनैः ॥ ४२७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रवालताम्रं किमिदं पदं क्षतं सरोजरम्यौ नु करौ विरोजितौ ।  
 इति प्रसर्पत्करुणातरङ्गितास्त्वदङ्गमापस्पृशुरङ्गनाजनाः ॥ ४२८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रवालताम्रं किमिदं पदं क्षतं सरोजरम्यौ नु करौ विरोजितौ ।  
+इति प्रसर्पत्करुणातरङ्गितास्त्वदङ्गमापस्पृशुरङ्गनाजनाः ॥ ४२८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अये सुतं देहि जगत्पतेः कृपातरङ्गपातात्परिपातमद्य मे ।  
 इति स्म सङ्गृह्य पिता त्वदङ्गुकं मुहुर्मुहुः श्लिष्यति जीतकण्टकः ॥ ४२९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अये सुतं देहि जगत्पतेः कृपातरङ्गपातात्परिपातमद्य मे ।  
+इति स्म सङ्गृह्य पिता त्वदङ्गुकं मुहुर्मुहुः श्लिष्यति जीतकण्टकः ॥ ४२९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनोनिलीनः किल हन्तुमागतः सुरारिरेवं भवता विहिंसितः ।  
 रजोऽपि नोदृष्टममुष्य तत्कथं स शुद्धसत्त्वे त्वयि लीनवान्धृवम् ॥ ४२१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अनोनिलीनः किल हन्तुमागतः सुरारिरेवं भवता विहिंसितः ।  
+रजोऽपि नोदृष्टममुष्य तत्कथं स शुद्धसत्त्वे त्वयि लीनवान्धृवम् ॥ ४२१० ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रपूजितैस्तत्र ततो द्विजातिभिर्विशेषतो लम्भितमङ्गलाशिषः ।  
 व्रजं निजैर्बाल्यरसैर्विमोहयन्मरुत्पुराधीश रुजां जहीहि मे ॥ ४२११ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रपूजितैस्तत्र ततो द्विजातिभिर्विशेषतो लम्भितमङ्गलाशिषः ।  
+व्रजं निजैर्बाल्यरसैर्विमोहयन्मरुत्पुराधीश रुजां जहीहि मे ॥ ४२११ ॥
+</details>
+
