--- a/laxyam/padyam/purANam/nArAyaNIyam/046.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/046.md
@@ -3,61 +3,140 @@ title: ०४६
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि देव पुरा किल त्वयि स्वयमुत्तानशये स्तनन्धये ।  
 परिजृम्भणतो व्यपावृते वदने विश्वमचष्ट वल्लवी ॥ ४६१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अयि देव पुरा किल त्वयि स्वयमुत्तानशये स्तनन्धये ।  
+परिजृम्भणतो व्यपावृते वदने विश्वमचष्ट वल्लवी ॥ ४६१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुनरप्यथ बालकैः समं त्वयि लीलानिरते जगत्पते ।  
 फलसञ्चयवञ्चनकृधा तव मृद्भोजनमूचुरर्भकाः ॥ ४६२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+पुनरप्यथ बालकैः समं त्वयि लीलानिरते जगत्पते ।  
+फलसञ्चयवञ्चनकृधा तव मृद्भोजनमूचुरर्भकाः ॥ ४६२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि ते प्रलयावधौ विभो क्षितितोयादिसमस्तभक्षिणः ।  
 मृदुपाशनतो रुजा भवेदिति भीता जननी चुकोप सा ॥ ४६३॥
+</details>
+<details><summary>मूलम्</summary>
+
+अयि ते प्रलयावधौ विभो क्षितितोयादिसमस्तभक्षिणः ।  
+मृदुपाशनतो रुजा भवेदिति भीता जननी चुकोप सा ॥ ४६३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि दुर्विनयात्मक त्वया किमु मृत्सा बत वत्स भक्षिता ।  
 इति मातृगिरं चिरं विभो वितथां त्वं प्रतिजज्ञिषे हसन् ॥ ४६४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अयि दुर्विनयात्मक त्वया किमु मृत्सा बत वत्स भक्षिता ।  
+इति मातृगिरं चिरं विभो वितथां त्वं प्रतिजज्ञिषे हसन् ॥ ४६४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि ते सकलैर्विनिश्चिते विमतिश्चेद्वदनं विदार्यताम् ।  
 इति मातृविभर्त्सितो मुखं विकसत्पद्मनिभं व्यदारयः ॥ ४६५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अयि ते सकलैर्विनिश्चिते विमतिश्चेद्वदनं विदार्यताम् ।  
+इति मातृविभर्त्सितो मुखं विकसत्पद्मनिभं व्यदारयः ॥ ४६५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपि मृल्लवदर्शनोत्सुकां जननीं तां बहु तर्पयन्निव ।  
 पृथिवीं निखिलां न केवलं भुवनान्यप्यखिलान्यदीदृशः ॥ ४६६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अपि मृल्लवदर्शनोत्सुकां जननीं तां बहु तर्पयन्निव ।  
+पृथिवीं निखिलां न केवलं भुवनान्यप्यखिलान्यदीदृशः ॥ ४६६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुहचिद्वनमम्बुधिः क्वचित् क्वचिदभ्रं कुहचिद्रसातलम् ।  
 मनुजा दनुजाः क्वचित्सुरा ददृशे किं न तदा त्वदानने ॥ ४६७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कुहचिद्वनमम्बुधिः क्वचित् क्वचिदभ्रं कुहचिद्रसातलम् ।  
+मनुजा दनुजाः क्वचित्सुरा ददृशे किं न तदा त्वदानने ॥ ४६७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कलशाम्बुधिशायिनं पुनः परवैकुण्ठपदाधिवासिनम् ।  
 स्वपुरश्च निजार्भकात्मकं कतिधा त्वां न ददर्श सा मुखे ॥ ४६८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कलशाम्बुधिशायिनं पुनः परवैकुण्ठपदाधिवासिनम् ।  
+स्वपुरश्च निजार्भकात्मकं कतिधा त्वां न ददर्श सा मुखे ॥ ४६८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विकसद्भुवने मुखोदरे ननु भूयोऽपि तथाविधाननः ।  
 अनया स्फुटमीक्षितो भवाननवस्थां जगतां बतातनोत् ॥ ४६९॥
+</details>
+<details><summary>मूलम्</summary>
+
+विकसद्भुवने मुखोदरे ननु भूयोऽपि तथाविधाननः ।  
+अनया स्फुटमीक्षितो भवाननवस्थां जगतां बतातनोत् ॥ ४६९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धृततत्त्वधियं तदा क्षणं जननीं तां प्रणयेन मोहयन् ।  
 स्तनमम्ब दिशेत्युपासजन् भगवन्नद्भुतबाल पाहि माम् ॥ ४६१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+धृततत्त्वधियं तदा क्षणं जननीं तां प्रणयेन मोहयन् ।  
+स्तनमम्ब दिशेत्युपासजन् भगवन्नद्भुतबाल पाहि माम् ॥ ४६१०॥
+</details>
+
