--- a/laxyam/padyam/purANam/nArAyaNIyam/047.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/047.md
@@ -3,61 +3,140 @@ title: ०४७
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकदा दधिविमाथकारिणीं मातरं समुपसेदिवान् भवान् ।  
 स्तन्यलोलुपतया निवारयन्नङ्कमेत्य पपिवान्पयोधरौ ॥ ४७१॥
+</details>
+<details><summary>मूलम्</summary>
+
+एकदा दधिविमाथकारिणीं मातरं समुपसेदिवान् भवान् ।  
+स्तन्यलोलुपतया निवारयन्नङ्कमेत्य पपिवान्पयोधरौ ॥ ४७१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अर्धपीतकुचकुड्मले त्वयि स्निग्धहासमधुराननाम्बुजे ।  
 दुग्धमीश दहने परिस्नुतं धर्तुमाशु जननी जगाम ते ॥ ४७२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अर्धपीतकुचकुड्मले त्वयि स्निग्धहासमधुराननाम्बुजे ।  
+दुग्धमीश दहने परिस्नुतं धर्तुमाशु जननी जगाम ते ॥ ४७२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सामिपीतरसभङ्गसङ्गतक्रोधभारपरिभूतचेतसा ।  
 मन्थदण्डमुपगृह्य पाटितं हन्त देव दधिभाजनं त्वया ॥ ४७३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+सामिपीतरसभङ्गसङ्गतक्रोधभारपरिभूतचेतसा ।  
+मन्थदण्डमुपगृह्य पाटितं हन्त देव दधिभाजनं त्वया ॥ ४७३ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उच्चल ध्वनितमुच्चकैस्तदा सन्निशम्य जननी समादृता ।  
 त्वद्यशोविसरवद्ददर्श सा सद्य एव दधि विस्तृतं क्षितौ ॥ ४६४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+उच्चल ध्वनितमुच्चकैस्तदा सन्निशम्य जननी समादृता ।  
+त्वद्यशोविसरवद्ददर्श सा सद्य एव दधि विस्तृतं क्षितौ ॥ ४६४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वेदमार्गपरिमार्गितं रुषा त्वामवीक्ष्य परिमार्गयन्त्यसौ ।  
 सन्ददर्श सुकृतिन्युलूखले दीयमाननवनीतमोतवे ॥ ४६५॥
+</details>
+<details><summary>मूलम्</summary>
+
+वेदमार्गपरिमार्गितं रुषा त्वामवीक्ष्य परिमार्गयन्त्यसौ ।  
+सन्ददर्श सुकृतिन्युलूखले दीयमाननवनीतमोतवे ॥ ४६५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वां प्रगृह्य बत भीतिभावनाभासुराननसरोजमाशु सा ।  
 रोषरूषितमुखी सखीपुरो बन्धनाय रशनामुपाददे ॥ ४७६॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वां प्रगृह्य बत भीतिभावनाभासुराननसरोजमाशु सा ।  
+रोषरूषितमुखी सखीपुरो बन्धनाय रशनामुपाददे ॥ ४७६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बन्धुमिच्छति यमेव सज्जनस्तं भवन्तमयि बन्धुमिच्छति ।  
 सा नियुज्य रशनागुणान्बहून् द्वयङ्गुलोनमखिलं किलैक्षत ॥ ४७७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+बन्धुमिच्छति यमेव सज्जनस्तं भवन्तमयि बन्धुमिच्छति ।  
+सा नियुज्य रशनागुणान्बहून् द्वयङ्गुलोनमखिलं किलैक्षत ॥ ४७७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विस्मितोत्स्मितसखीजनेक्षितां स्विन्नसन्नवपुषं निरीक्ष्य ताम् ।  
 नित्यमुक्तवपुरप्यहो हरे बन्धमेव कृपयान्वमन्यथाः ॥ ४७८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+विस्मितोत्स्मितसखीजनेक्षितां स्विन्नसन्नवपुषं निरीक्ष्य ताम् ।  
+नित्यमुक्तवपुरप्यहो हरे बन्धमेव कृपयान्वमन्यथाः ॥ ४७८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्थीयतां चिरमुलूखले खलेत्यागता भवनमेव सा यदा ।  
 प्रागुलूखलबिलान्तरे तदा सर्पिरर्पितमदन्नवास्थिताः ॥ ४७९॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्थीयतां चिरमुलूखले खलेत्यागता भवनमेव सा यदा ।  
+प्रागुलूखलबिलान्तरे तदा सर्पिरर्पितमदन्नवास्थिताः ॥ ४७९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यद्यपाशसुगमो भवान्विभो संयतः किमु सपाशयानया ।  
 एवमादि दिविजैरभिष्टुतो वातनाथ परिपाहि मां गदात् ॥ ४७१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+यद्यपाशसुगमो भवान्विभो संयतः किमु सपाशयानया ।  
+एवमादि दिविजैरभिष्टुतो वातनाथ परिपाहि मां गदात् ॥ ४७१०॥
+</details>
+
