--- a/laxyam/padyam/purANam/nArAyaNIyam/050.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/050.md
@@ -3,81 +3,180 @@ title: ०५०
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तरलमधुकृद्वृन्दे बृन्दावनेऽथ मनोहरे  
 पशुपशिशुभिस्साकं वत्सानुपालनलोलुपः ।  
 हलधरसखो देव श्रीमन् विचेरिथ धारयन्  
 गवलमुरलीवेत्रं नेत्राभिरामतनुद्युतिः ॥ ५०१॥
+</details>
+<details><summary>मूलम्</summary>
+
+तरलमधुकृद्वृन्दे बृन्दावनेऽथ मनोहरे  
+पशुपशिशुभिस्साकं वत्सानुपालनलोलुपः ।  
+हलधरसखो देव श्रीमन् विचेरिथ धारयन्  
+गवलमुरलीवेत्रं नेत्राभिरामतनुद्युतिः ॥ ५०१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विहितजगतीरक्षं लक्ष्मीकराम्बुजलालितं  
 ददति चरणद्वन्द्वं बृन्दावने त्वयि पावने ।  
 किमिव न बभौ सम्पत्सम्पूरितं तरुवल्लरी  
 सलिलधरणीगोत्रक्षेत्रादिकं कमलापते ॥ ४९२॥
+</details>
+<details><summary>मूलम्</summary>
+
+विहितजगतीरक्षं लक्ष्मीकराम्बुजलालितं  
+ददति चरणद्वन्द्वं बृन्दावने त्वयि पावने ।  
+किमिव न बभौ सम्पत्सम्पूरितं तरुवल्लरी  
+सलिलधरणीगोत्रक्षेत्रादिकं कमलापते ॥ ४९२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विलसदुलपे कान्तारान्ते समीरणशीतले  
 विपुलयमुनातीरे गोवर्धनाचलमूर्धसु ।  
 ललितमुरलीनादस्सञ्चारयन्खलु वात्सकं  
 क्वचन दिवसे दैत्यं वत्साकृतिं त्वमुदैक्षथाः ॥ ५०३॥
+</details>
+<details><summary>मूलम्</summary>
+
+विलसदुलपे कान्तारान्ते समीरणशीतले  
+विपुलयमुनातीरे गोवर्धनाचलमूर्धसु ।  
+ललितमुरलीनादस्सञ्चारयन्खलु वात्सकं  
+क्वचन दिवसे दैत्यं वत्साकृतिं त्वमुदैक्षथाः ॥ ५०३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रभसविलसत्पुच्छं विच्छायतोऽस्य विलोकयन्  
 किमपि वलितस्कन्धं रन्ध्रप्रतीक्षमुदीक्षितम् ।  
 तमथ चरणे बिभ्रद्विभ्रामयन्मुहुरुच्चकैः  
 कुहचन महावृक्षे चिक्षेपिथ क्षतजीवितम् ॥ ५०४॥
+</details>
+<details><summary>मूलम्</summary>
+
+रभसविलसत्पुच्छं विच्छायतोऽस्य विलोकयन्  
+किमपि वलितस्कन्धं रन्ध्रप्रतीक्षमुदीक्षितम् ।  
+तमथ चरणे बिभ्रद्विभ्रामयन्मुहुरुच्चकैः  
+कुहचन महावृक्षे चिक्षेपिथ क्षतजीवितम् ॥ ५०४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निपतति महादैत्ये जात्या दुरात्मनि तत्क्षणं  
 निपतनजवक्षुण्णक्षोणीरुहक्षतकानने ।  
 दिवि परमिलद्वृन्दा बृन्दारकाः कुसुमोत्करैः  
 शिरसि भवतो हर्षाद्वर्षन्ति नाम तदा हरे ॥ ५०५॥
+</details>
+<details><summary>मूलम्</summary>
+
+निपतति महादैत्ये जात्या दुरात्मनि तत्क्षणं  
+निपतनजवक्षुण्णक्षोणीरुहक्षतकानने ।  
+दिवि परमिलद्वृन्दा बृन्दारकाः कुसुमोत्करैः  
+शिरसि भवतो हर्षाद्वर्षन्ति नाम तदा हरे ॥ ५०५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुरभिलतमा मूर्धन्यूर्ध्वं कुतः कुसुमावली  
 निपतति तवेत्युक्तो बालैः सहेलमुदैरयः ।  
 झटिति दनुजक्षेपेणोर्ध्वं गतस्तरुमण्डलात्  
 कुसुमनिकरस्सोऽयं नूनं समेति शनैरिति ॥ ५०६॥
+</details>
+<details><summary>मूलम्</summary>
+
+सुरभिलतमा मूर्धन्यूर्ध्वं कुतः कुसुमावली  
+निपतति तवेत्युक्तो बालैः सहेलमुदैरयः ।  
+झटिति दनुजक्षेपेणोर्ध्वं गतस्तरुमण्डलात्  
+कुसुमनिकरस्सोऽयं नूनं समेति शनैरिति ॥ ५०६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्वचन दिवसे भूयो भूयस्तरेपरुषातपे  
 तपनतनयापाथः पातुं गता भवदादयः ।  
 चलितगरुतं प्रेक्षामासुर्बकं खलु विस्मृतं  
 क्षितिधरगरुच्छेदे कैलासशैलमिवापरम् ॥ ५०७॥
+</details>
+<details><summary>मूलम्</summary>
+
+क्वचन दिवसे भूयो भूयस्तरेपरुषातपे  
+तपनतनयापाथः पातुं गता भवदादयः ।  
+चलितगरुतं प्रेक्षामासुर्बकं खलु विस्मृतं  
+क्षितिधरगरुच्छेदे कैलासशैलमिवापरम् ॥ ५०७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पिबति सलिलं गोपव्राते भवनतमभिद्रुतः  
 स किल निगिलन्नग्निप्रख्यं पुनर्द्रुतमुद्वमन् ।  
 दलयितुमगात्त्रोट्याः कोट्या तदा यु भवान्विभो  
 खलजनभिदाचुञ्चुश्चञ्चू प्रगृह्य ददार तम् ॥ ५०८॥
+</details>
+<details><summary>मूलम्</summary>
+
+पिबति सलिलं गोपव्राते भवनतमभिद्रुतः  
+स किल निगिलन्नग्निप्रख्यं पुनर्द्रुतमुद्वमन् ।  
+दलयितुमगात्त्रोट्याः कोट्या तदा यु भवान्विभो  
+खलजनभिदाचुञ्चुश्चञ्चू प्रगृह्य ददार तम् ॥ ५०८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सपदि सहजां सन्द्रष्टुं वा मृतां खलु पूतना  
 मनुजमघमप्यग्रे गत्वा प्रतीक्षितुमेव वा ।  
 शमननिलयं याते तस्मिन्बके सुमनोगणे  
 किरति सुमनोबृन्दं बृन्दावनाद्गृहमैयथाः ॥ ५०९॥
+</details>
+<details><summary>मूलम्</summary>
+
+सपदि सहजां सन्द्रष्टुं वा मृतां खलु पूतना  
+मनुजमघमप्यग्रे गत्वा प्रतीक्षितुमेव वा ।  
+शमननिलयं याते तस्मिन्बके सुमनोगणे  
+किरति सुमनोबृन्दं बृन्दावनाद्गृहमैयथाः ॥ ५०९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ललितमुरलीनादं दूरान्निशम्य वधूजनै  
 स्त्वरितमुपगम्यारादारूढमोदमुदीक्षितः ।  
 जनितजननीनन्दानन्दस्समीरणमन्दिर  
 प्रथितवसते शौरे दूरीकुरुष्व ममामयान् ॥ ५०१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+ललितमुरलीनादं दूरान्निशम्य वधूजनै  
+स्त्वरितमुपगम्यारादारूढमोदमुदीक्षितः ।  
+जनितजननीनन्दानन्दस्समीरणमन्दिर  
+प्रथितवसते शौरे दूरीकुरुष्व ममामयान् ॥ ५०१०॥
+</details>
+
