--- a/laxyam/padyam/purANam/nArAyaNIyam/051.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/051.md
@@ -3,61 +3,140 @@ title: ०५१
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कदाचन व्रजशिशुभिः समं भवान् वनाशने विहितमतिः प्रगेतराम् ।  
 समावृतो बहुतरवत्समण्डलैः सतेमनैर्निरगमदीश जेमनैः ॥ ५११ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कदाचन व्रजशिशुभिः समं भवान् वनाशने विहितमतिः प्रगेतराम् ।  
+समावृतो बहुतरवत्समण्डलैः सतेमनैर्निरगमदीश जेमनैः ॥ ५११ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विनिर्यतस्तव चरणाम्बुजद्वयादुदञ्चितं त्रिभुवनपावनं रजः ।  
 महर्षयः पुलकधरैः कलेबरैरुदूहिरे धृतभवदीक्षणोत्सवाः ॥ ५१२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+विनिर्यतस्तव चरणाम्बुजद्वयादुदञ्चितं त्रिभुवनपावनं रजः ।  
+महर्षयः पुलकधरैः कलेबरैरुदूहिरे धृतभवदीक्षणोत्सवाः ॥ ५१२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रचारयत्यविरलशाद्वले तले पशून्विभो भवति समं कुमारकैः ।  
 अघासुरो न्यरुणदघाय वर्तनीं भयानकः सपदि शयानकाकृतिः ॥ ५१३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रचारयत्यविरलशाद्वले तले पशून्विभो भवति समं कुमारकैः ।  
+अघासुरो न्यरुणदघाय वर्तनीं भयानकः सपदि शयानकाकृतिः ॥ ५१३ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महाचलप्रतिमतनोर्गुहानिभप्रसारितप्रथितमुखस्य कानने ।  
 मुखोदरं विहरणकौतुकाद्गताः कुमारकाः किमपि विदूरगे त्वयि ॥ ५१४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+महाचलप्रतिमतनोर्गुहानिभप्रसारितप्रथितमुखस्य कानने ।  
+मुखोदरं विहरणकौतुकाद्गताः कुमारकाः किमपि विदूरगे त्वयि ॥ ५१४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रमादतः प्रविशति पन्नगोदरं क्वथत्तनौ पशुपकुले सवात्सके ।  
 विदन्निदं त्वमपि विवेशिथ प्रभो सुहृज्जनं विशरणमाशु रक्षितुम् ॥ ५१५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रमादतः प्रविशति पन्नगोदरं क्वथत्तनौ पशुपकुले सवात्सके ।  
+विदन्निदं त्वमपि विवेशिथ प्रभो सुहृज्जनं विशरणमाशु रक्षितुम् ॥ ५१५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गलोदरे विपुलितवर्ष्मणा त्वया महोरगे लुठति निरुद्धमारुते ।  
 द्रुतं भवान्विदलितकण्ठमण्डलो विमोचयन्पशुपशून् विनिर्ययौ ॥ ५१६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+गलोदरे विपुलितवर्ष्मणा त्वया महोरगे लुठति निरुद्धमारुते ।  
+द्रुतं भवान्विदलितकण्ठमण्डलो विमोचयन्पशुपशून् विनिर्ययौ ॥ ५१६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षणं दिवि त्वदुपगमार्थमास्थितं महासुरप्रभवमहो महो महत् ।  
 विनिर्गते त्वयि तु निलीनमञ्जसा नभःस्थले ननृतुरथो जगुस्सुराः ॥ ५१७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+क्षणं दिवि त्वदुपगमार्थमास्थितं महासुरप्रभवमहो महो महत् ।  
+विनिर्गते त्वयि तु निलीनमञ्जसा नभःस्थले ननृतुरथो जगुस्सुराः ॥ ५१७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सविस्मयैः कमलभवादिभिः सुरैरनुदृतस्तदनु गतः कुमारकैः ।  
 दिने पुनस्तरुणदशामुपेयुषि स्वकैर्भवानतनुत भोजनोत्सवम् ॥ ५१८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+सविस्मयैः कमलभवादिभिः सुरैरनुदृतस्तदनु गतः कुमारकैः ।  
+दिने पुनस्तरुणदशामुपेयुषि स्वकैर्भवानतनुत भोजनोत्सवम् ॥ ५१८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विषाणिकामपि मुरलीं नितम्बके निवेशयन्कबलधरः कराम्बुजे ।  
 प्रहासयन्कलवचनैः कुमारकान् बुभोजिथ त्रिदशगणैर्मुदा नुतः ॥ ५१९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+विषाणिकामपि मुरलीं नितम्बके निवेशयन्कबलधरः कराम्बुजे ।  
+प्रहासयन्कलवचनैः कुमारकान् बुभोजिथ त्रिदशगणैर्मुदा नुतः ॥ ५१९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुखाशनं त्विह तव गोपमण्डले मखाशनात्प्रियमिव देवमण्डले ।  
 इति स्तुतस्त्रिदशवरैर्जगत्पते मरुत्पुरीनिलय गदात्प्रपाहि माम् ॥ ५११० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+सुखाशनं त्विह तव गोपमण्डले मखाशनात्प्रियमिव देवमण्डले ।  
+इति स्तुतस्त्रिदशवरैर्जगत्पते मरुत्पुरीनिलय गदात्प्रपाहि माम् ॥ ५११० ॥
+</details>
+
