--- a/laxyam/padyam/purANam/nArAyaNIyam/052.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/052.md
@@ -3,81 +3,180 @@ title: ०५२
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्यावतारनिकरेष्वनिरीक्षितं ते  
 भूमातिरेकमभिवीक्ष्य तदाघमोक्षे ।  
 ब्रह्मा परीक्षितुमनाः स परोक्षभावं  
 निन्येऽथ वत्सकगणान्प्रवितत्य मायाम् ॥ ५२१॥
+</details>
+<details><summary>मूलम्</summary>
+
+अन्यावतारनिकरेष्वनिरीक्षितं ते  
+भूमातिरेकमभिवीक्ष्य तदाघमोक्षे ।  
+ब्रह्मा परीक्षितुमनाः स परोक्षभावं  
+निन्येऽथ वत्सकगणान्प्रवितत्य मायाम् ॥ ५२१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वत्सानवीक्ष्य विवशे पशुपोत्करे ता  
 नानेतुकाम इव धातृमतानुवर्ती ।  
 त्वं सामिभुक्तकबलो गतवांस्तदानीं  
 भुक्तांस्तिरोधित सरोजभवः कुमारान् ॥ ५२२॥
+</details>
+<details><summary>मूलम्</summary>
+
+वत्सानवीक्ष्य विवशे पशुपोत्करे ता  
+नानेतुकाम इव धातृमतानुवर्ती ।  
+त्वं सामिभुक्तकबलो गतवांस्तदानीं  
+भुक्तांस्तिरोधित सरोजभवः कुमारान् ॥ ५२२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वत्सायितस्तदनु गोपगणायितस्त्वं  
 शिक्यादिभाण्डमुरलीगवलादिरूपः ।  
 प्राग्वद्विहृत्य विपिनेषु चिराय सायं  
 त्वं माययाथ बहुधा व्रजमाययाथ ॥ ५२३॥
+</details>
+<details><summary>मूलम्</summary>
+
+वत्सायितस्तदनु गोपगणायितस्त्वं  
+शिक्यादिभाण्डमुरलीगवलादिरूपः ।  
+प्राग्वद्विहृत्य विपिनेषु चिराय सायं  
+त्वं माययाथ बहुधा व्रजमाययाथ ॥ ५२३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वामेव शिक्यागवलादिमयं दधानो  
 भूयस्त्वमेव पशुवत्सकबालरूपः ।  
 गोरूपिणीभिरपि गोपवधूमयीभि  
 रासादितोऽसि जननीभिरतिप्रहर्षात् ॥ ५२४॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वामेव शिक्यागवलादिमयं दधानो  
+भूयस्त्वमेव पशुवत्सकबालरूपः ।  
+गोरूपिणीभिरपि गोपवधूमयीभि  
+रासादितोऽसि जननीभिरतिप्रहर्षात् ॥ ५२४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जीवं हि किञ्चिदभिमानवशात्स्वकीयं  
 मत्वा तनूज इति रागभरं वहन्त्यः ।  
 आत्मानमेव तु भवन्तमवाप्य सूनुं  
 प्रीतिं ययुर्न कियतीं वनिताश्च गावः ॥ ५२५॥
+</details>
+<details><summary>मूलम्</summary>
+
+जीवं हि किञ्चिदभिमानवशात्स्वकीयं  
+मत्वा तनूज इति रागभरं वहन्त्यः ।  
+आत्मानमेव तु भवन्तमवाप्य सूनुं  
+प्रीतिं ययुर्न कियतीं वनिताश्च गावः ॥ ५२५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं प्रतिक्षणविजृम्भितहर्षभार  
 निश्शेषगोपगणलालितभूरिमूर्तिम् ।  
 त्वामग्रजोऽपि बुबुधे किल वत्सरान्ते  
 ब्रह्मात्मनोरपि महान्युवयोर्विशेषः ॥ ५२६॥
+</details>
+<details><summary>मूलम्</summary>
+
+एवं प्रतिक्षणविजृम्भितहर्षभार  
+निश्शेषगोपगणलालितभूरिमूर्तिम् ।  
+त्वामग्रजोऽपि बुबुधे किल वत्सरान्ते  
+ब्रह्मात्मनोरपि महान्युवयोर्विशेषः ॥ ५२६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वर्षावधौ नवपुरातनवत्सपालान्  
 दृष्ट्वा विवेकमसृणे द्रुहिणे विमूढे ।  
 प्रादीदृशः प्रतिनवान्मकुटान्गदादि  
 भूषांश्चतुर्भुजयुजः सजलाम्बुदाभान् ॥ ५२७॥
+</details>
+<details><summary>मूलम्</summary>
+
+वर्षावधौ नवपुरातनवत्सपालान्  
+दृष्ट्वा विवेकमसृणे द्रुहिणे विमूढे ।  
+प्रादीदृशः प्रतिनवान्मकुटान्गदादि  
+भूषांश्चतुर्भुजयुजः सजलाम्बुदाभान् ॥ ५२७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रत्येकमेव कमलापरिलालिताङ्गान्  
 भोगीन्द्रभोगशयनान्नयनाभिरामान् ।  
 लीलानिमीलितदृशः सनकादियोगि  
 व्यासेवितान्कमलभूर्भवतो ददर्श ॥ ५२८॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रत्येकमेव कमलापरिलालिताङ्गान्  
+भोगीन्द्रभोगशयनान्नयनाभिरामान् ।  
+लीलानिमीलितदृशः सनकादियोगि  
+व्यासेवितान्कमलभूर्भवतो ददर्श ॥ ५२८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नारायणाकृतिमसंख्यतमान्निरीक्ष्य  
 सर्वत्र सेवकमपि स्वमवेक्ष्य धाता ।  
 मायानिमग्नहृदयो विमुमोह याव  
 देको बभूविथ तदा कबलार्धपाणिः ॥ ५२९॥
+</details>
+<details><summary>मूलम्</summary>
+
+नारायणाकृतिमसंख्यतमान्निरीक्ष्य  
+सर्वत्र सेवकमपि स्वमवेक्ष्य धाता ।  
+मायानिमग्नहृदयो विमुमोह याव  
+देको बभूविथ तदा कबलार्धपाणिः ॥ ५२९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नश्यन्मदे तदनु विश्वपतिं मुहुस्त्वां  
 नत्वा च नूतवति धातरि धाम याते ।  
 पोतैः समं प्रमुदितैः प्रविशन्निकेतं  
 वातालयाधिप विभो परिपाहि रोगात् ॥ ५२१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+नश्यन्मदे तदनु विश्वपतिं मुहुस्त्वां  
+नत्वा च नूतवति धातरि धाम याते ।  
+पोतैः समं प्रमुदितैः प्रविशन्निकेतं  
+वातालयाधिप विभो परिपाहि रोगात् ॥ ५२१०॥
+</details>
+
