--- a/laxyam/padyam/purANam/nArAyaNIyam/053.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/053.md
@@ -3,61 +3,140 @@ title: ०५३
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अतीत्य बाल्यं जगतां पते त्वम् उपेत्य पौगण्डवयो मनोज्ञम् ।  
 उपेक्ष्य वत्सावनमुत्सवेन प्रावर्तथा गोगणपालनायाम् ॥ ५३१॥
+</details>
+<details><summary>मूलम्</summary>
+
+अतीत्य बाल्यं जगतां पते त्वम् उपेत्य पौगण्डवयो मनोज्ञम् ।  
+उपेक्ष्य वत्सावनमुत्सवेन प्रावर्तथा गोगणपालनायाम् ॥ ५३१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपक्रमस्यानुगुणैव सेयं मरुत्पुराधीश तव प्रवृत्तिः ।  
 गोत्रापरित्राणकृतेऽवतीणस्तदेव देवाऽऽरभथास्तदा यत् ॥ ५३२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+उपक्रमस्यानुगुणैव सेयं मरुत्पुराधीश तव प्रवृत्तिः ।  
+गोत्रापरित्राणकृतेऽवतीणस्तदेव देवाऽऽरभथास्तदा यत् ॥ ५३२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कदापि रामेण समं वनान्ते वनश्रियं वीक्ष्य चरन्सुखेन ।  
 श्रीदामनाम्नः स्वसखस्य वाचा मोदादगा धेनुककाननं त्वम् ॥ ५३३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कदापि रामेण समं वनान्ते वनश्रियं वीक्ष्य चरन्सुखेन ।  
+श्रीदामनाम्नः स्वसखस्य वाचा मोदादगा धेनुककाननं त्वम् ॥ ५३३ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तालतालीनिवहे त्वदुक्त्या बलेन धूतेऽथ बलेन दोर्भ्याम् ।  
 मृदुः खरश्चाभ्यपतत्पुरस्तात् फलोत्करो धेनुकदानवोऽपि ॥ ५३४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+उत्तालतालीनिवहे त्वदुक्त्या बलेन धूतेऽथ बलेन दोर्भ्याम् ।  
+मृदुः खरश्चाभ्यपतत्पुरस्तात् फलोत्करो धेनुकदानवोऽपि ॥ ५३४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समुद्यतो धैनुकपालनेऽहं वधं कथं धैनुकमद्य कुर्वे ।  
 इतीव मत्वा ध्रुवमग्रजेन सुरौघयोद्धारमजीघतस्त्वम् ॥ ५३५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+समुद्यतो धैनुकपालनेऽहं वधं कथं धैनुकमद्य कुर्वे ।  
+इतीव मत्वा ध्रुवमग्रजेन सुरौघयोद्धारमजीघतस्त्वम् ॥ ५३५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदीयभृत्यानपि जम्बुकत्वेनोपागतानग्रजसंयुतस्त्वम् ।  
 जम्बूफलानीव तदा निरास्थस्तालेषु खेलन्भगवन् निरास्थः ॥ ५३६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदीयभृत्यानपि जम्बुकत्वेनोपागतानग्रजसंयुतस्त्वम् ।  
+जम्बूफलानीव तदा निरास्थस्तालेषु खेलन्भगवन् निरास्थः ॥ ५३६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विनिघ्नति त्वय्यथ जम्बुकौघं सनामकत्वाद्वरुणस्तदानीम् ।  
 भयाकुलो जम्बुकनामधेयं श्रुतिप्रसिद्धं व्यधितेति मन्ये ॥ ५३७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+विनिघ्नति त्वय्यथ जम्बुकौघं सनामकत्वाद्वरुणस्तदानीम् ।  
+भयाकुलो जम्बुकनामधेयं श्रुतिप्रसिद्धं व्यधितेति मन्ये ॥ ५३७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तवावतारस्य फलं मुरारे सञ्जातमद्येति सुरैर्नुतस्त्वम् ।  
 सत्यं फलं जातमिहेति हासी बालैः समं तालफलान्यभुङ्क्थाः ॥ ५३८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+तवावतारस्य फलं मुरारे सञ्जातमद्येति सुरैर्नुतस्त्वम् ।  
+सत्यं फलं जातमिहेति हासी बालैः समं तालफलान्यभुङ्क्थाः ॥ ५३८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मधुद्रवस्रुन्ति बृहन्ति तानि फलानि मेदोभरभृन्ति भुक्त्वा ।  
 तृप्तैश्च दृप्तैर्भवनं फलौघं वहद्भिरागाः खलु बालकैस्त्वम् ॥ ५३९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+मधुद्रवस्रुन्ति बृहन्ति तानि फलानि मेदोभरभृन्ति भुक्त्वा ।  
+तृप्तैश्च दृप्तैर्भवनं फलौघं वहद्भिरागाः खलु बालकैस्त्वम् ॥ ५३९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हतो हतो धेनुक इत्युपेत्य फलान्यदद्भिर्मधुराणि लोकैः ।  
 जयेति जीवेति नुतो विभो त्वं मरुत्पुराधीश्वर पाहि रोगात् ॥ ५३१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+हतो हतो धेनुक इत्युपेत्य फलान्यदद्भिर्मधुराणि लोकैः ।  
+जयेति जीवेति नुतो विभो त्वं मरुत्पुराधीश्वर पाहि रोगात् ॥ ५३१० ॥
+</details>
+
