--- a/laxyam/padyam/purANam/nArAyaNIyam/055.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/055.md
@@ -3,61 +3,140 @@ title: ०५५
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ वारिणि घोरतरं फणिनं प्रतिवारयितुं कृतधीर्भगवन् ।  
 द्रुतमारिथ तीरगनीपतरुं विषमारुतशोषितपर्णचयम् ॥ ५५१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अथ वारिणि घोरतरं फणिनं प्रतिवारयितुं कृतधीर्भगवन् ।  
+द्रुतमारिथ तीरगनीपतरुं विषमारुतशोषितपर्णचयम् ॥ ५५१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधिरुह्य पदाम्बुरुहेण च तं नवपल्लवतुल्यमोज्ञरुचा ।  
 हृदवारिणि दूरतरं न्यपतः परिघूर्णितघोरतरङ्गगणे ॥ ५५२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अधिरुह्य पदाम्बुरुहेण च तं नवपल्लवतुल्यमोज्ञरुचा ।  
+हृदवारिणि दूरतरं न्यपतः परिघूर्णितघोरतरङ्गगणे ॥ ५५२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भुवनत्रयभारभृतो भवतो गुरुभारविक्रम्पिविजृम्भिजला ।  
 परिमज्जयति स्म धनुःशतकं तटिनी झटिति स्फुटघोषवती ॥ ५५३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+भुवनत्रयभारभृतो भवतो गुरुभारविक्रम्पिविजृम्भिजला ।  
+परिमज्जयति स्म धनुःशतकं तटिनी झटिति स्फुटघोषवती ॥ ५५३ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ दिक्षु विदिक्षु परिक्षुभितभ्रमितोदरवारिनिनादभरैः ।  
 उदकादुदगादुरगाधिपतिस्त्वदुपान्तमशान्तरुषान्धमनाः ॥ ५५४॥
+</details>
+<details><summary>मूलम्</summary>
+
+अथ दिक्षु विदिक्षु परिक्षुभितभ्रमितोदरवारिनिनादभरैः ।  
+उदकादुदगादुरगाधिपतिस्त्वदुपान्तमशान्तरुषान्धमनाः ॥ ५५४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 फणशृङ्गसहस्रविनिस्सृमरज्वलदग्निकणोग्रविषाम्बुधरम् ।  
 पुरतः फणिनं समलोकयथा बहुशृङ्गिणमञ्जनशैलमिव ॥ ५५५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+फणशृङ्गसहस्रविनिस्सृमरज्वलदग्निकणोग्रविषाम्बुधरम् ।  
+पुरतः फणिनं समलोकयथा बहुशृङ्गिणमञ्जनशैलमिव ॥ ५५५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ज्वलदक्षिपरिक्षरदुग्रविषश्वसनिष्मभरः स महाभुजगः ।  
 परिदश्य भवन्तमनन्तबलं समवेष्टयदस्फुटचेष्टमहो ॥ ५५६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+ज्वलदक्षिपरिक्षरदुग्रविषश्वसनिष्मभरः स महाभुजगः ।  
+परिदश्य भवन्तमनन्तबलं समवेष्टयदस्फुटचेष्टमहो ॥ ५५६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अविलोक्य भवन्तमथाकुलिते तटगामिनि बालकधेनुगणे ।  
 व्रजगेहतलेऽप्यनिमित्तशतं समुदीक्ष्य गता यमुनां पशुपाः ॥ ५५७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अविलोक्य भवन्तमथाकुलिते तटगामिनि बालकधेनुगणे ।  
+व्रजगेहतलेऽप्यनिमित्तशतं समुदीक्ष्य गता यमुनां पशुपाः ॥ ५५७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अखिलेषु विभो भवदीयदशामवलोक्य जिहासुषु जीवभरम् ।  
 फणिबन्धनमाशु विमुच्य जवादुदगम्यत हासजुषा भवता ॥ ५५८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अखिलेषु विभो भवदीयदशामवलोक्य जिहासुषु जीवभरम् ।  
+फणिबन्धनमाशु विमुच्य जवादुदगम्यत हासजुषा भवता ॥ ५५८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधिरुह्य ततः फणिराजफणान्ननृते भवता मृदुपादरुचा ।  
 कलशिञ्चितनूपुरमञ्चुमिलत्करकङ्कणसंकुलसंक्वणितम् ॥ ५५९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अधिरुह्य ततः फणिराजफणान्ननृते भवता मृदुपादरुचा ।  
+कलशिञ्चितनूपुरमञ्चुमिलत्करकङ्कणसंकुलसंक्वणितम् ॥ ५५९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जहृषुः पशुपास्तुतुषुर्मुनयो ववृषुः कुसुमानि सुरेन्द्रगणाः ।  
 त्वयि नृत्यति मारुतगेहपते परिपाहि स मां त्वमदान्तगदात् ॥ ५५१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+जहृषुः पशुपास्तुतुषुर्मुनयो ववृषुः कुसुमानि सुरेन्द्रगणाः ।  
+त्वयि नृत्यति मारुतगेहपते परिपाहि स मां त्वमदान्तगदात् ॥ ५५१० ॥
+</details>
+
