--- a/laxyam/padyam/purANam/nArAyaNIyam/056.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/056.md
@@ -3,61 +3,140 @@ title: ०५६
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रुचिरकम्पितकुण्डलमण्डलः सुचिरमीश ननर्तिथ पन्नगे ।  
 अमरताडितदुन्दुभिसुन्दरं वियति गायति दैवतयौवते ॥ ५६१॥
+</details>
+<details><summary>मूलम्</summary>
+
+रुचिरकम्पितकुण्डलमण्डलः सुचिरमीश ननर्तिथ पन्नगे ।  
+अमरताडितदुन्दुभिसुन्दरं वियति गायति दैवतयौवते ॥ ५६१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नमति यद्यदमुष्य शिरो हरे परिविहाय तदुन्नतमुन्नतम् ।  
 परिमथन्पदपङ्करुहा चिरं व्यहरथाः करतालमनोहरम् ॥ ५६२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+नमति यद्यदमुष्य शिरो हरे परिविहाय तदुन्नतमुन्नतम् ।  
+परिमथन्पदपङ्करुहा चिरं व्यहरथाः करतालमनोहरम् ॥ ५६२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वदवभग्नविभुग्नफणागणे गलितशोणितशोणितपाथसि ।  
 फणिपताववसीदति सन्नतास्तदबलास्तव माधव पादयोः ॥ ५६३॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वदवभग्नविभुग्नफणागणे गलितशोणितशोणितपाथसि ।  
+फणिपताववसीदति सन्नतास्तदबलास्तव माधव पादयोः ॥ ५६३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि पुरैव चिराय परिश्रुतत्वदनुभावविलीनहृदो हि ताः ।  
 मुनिभिरप्यनवाष्यपथैः स्तवैर्नुनुवुरीश भवन्तमयन्त्रितम् ॥ ५६४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अयि पुरैव चिराय परिश्रुतत्वदनुभावविलीनहृदो हि ताः ।  
+मुनिभिरप्यनवाष्यपथैः स्तवैर्नुनुवुरीश भवन्तमयन्त्रितम् ॥ ५६४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 फणिवधूजनभक्तिविलोकनप्रविकसत्करुणाकुलचेतसा ।  
 फणिपतिर्भवताच्युत जीवितस्त्वजि समर्पितमूर्तिरवानमत् ॥ ५६५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+फणिवधूजनभक्तिविलोकनप्रविकसत्करुणाकुलचेतसा ।  
+फणिपतिर्भवताच्युत जीवितस्त्वजि समर्पितमूर्तिरवानमत् ॥ ५६५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रमणकं व्रजे वारिधिमध्यगं फणिरिपुर्न करोति विरोधिताम् ।  
 इति भवद्वचनान्यतिमानयन् फणिपतिर्निरगादुरगैः समम् ॥ ५६६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+रमणकं व्रजे वारिधिमध्यगं फणिरिपुर्न करोति विरोधिताम् ।  
+इति भवद्वचनान्यतिमानयन् फणिपतिर्निरगादुरगैः समम् ॥ ५६६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 फणिवधूजनदत्तमणिव्रजज्वलितहारदुकूलविभूषितः ।  
 तटगतैः प्रमदाश्रुविमिश्रितैः समगथाः स्वजनैर्दिवसावधौ ॥ ५६७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+फणिवधूजनदत्तमणिव्रजज्वलितहारदुकूलविभूषितः ।  
+तटगतैः प्रमदाश्रुविमिश्रितैः समगथाः स्वजनैर्दिवसावधौ ॥ ५६७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निशि पुनस्तमसा व्रजमन्दिरं व्रजितुमक्षम एव जनोत्करे ।  
 स्वपति तत्र भवच्चरणाश्रये दवकृशानुररुन्ध समन्ततः ॥ ५६८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+निशि पुनस्तमसा व्रजमन्दिरं व्रजितुमक्षम एव जनोत्करे ।  
+स्वपति तत्र भवच्चरणाश्रये दवकृशानुररुन्ध समन्ततः ॥ ५६८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रबुधितानथ पालय पालयेत्युदयदार्तरवान् पशुपालकान् ।  
 अवितुमाशु पपाथ महानलं किमिह चित्रमयं खलु ते मुखम् ॥ ५६९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रबुधितानथ पालय पालयेत्युदयदार्तरवान् पशुपालकान् ।  
+अवितुमाशु पपाथ महानलं किमिह चित्रमयं खलु ते मुखम् ॥ ५६९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शिखिन वर्णत एव हि पीतता परिलसत्युधना क्रिययाऽप्यसौ ।  
 इति नुतः पशुपैर्मुदितैर्विभो हर हरे दुरितैः सह मे गदान् ॥ ५६१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+शिखिन वर्णत एव हि पीतता परिलसत्युधना क्रिययाऽप्यसौ ।  
+इति नुतः पशुपैर्मुदितैर्विभो हर हरे दुरितैः सह मे गदान् ॥ ५६१० ॥
+</details>
+
