--- a/laxyam/padyam/purANam/nArAyaNIyam/057.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/057.md
@@ -3,67 +3,154 @@ title: ०५७
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रामसखः क्वापि दिने कामद भगवन् गतो भवान्विपिनम् ।  
 सूनुभिरपि गोपानां धेनुभिरभिसंवृतो लसद्वेषः ॥ ५७१॥
+</details>
+<details><summary>मूलम्</summary>
+
+रामसखः क्वापि दिने कामद भगवन् गतो भवान्विपिनम् ।  
+सूनुभिरपि गोपानां धेनुभिरभिसंवृतो लसद्वेषः ॥ ५७१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सन्दर्शयन्बलाय स्वैरं बृन्दावनश्रियं विमलाम् ।  
 काण्डीरैः सह बालैर्भाण्डीरकमागमो वटं क्रीडन् ॥ ५७२॥
+</details>
+<details><summary>मूलम्</summary>
+
+सन्दर्शयन्बलाय स्वैरं बृन्दावनश्रियं विमलाम् ।  
+काण्डीरैः सह बालैर्भाण्डीरकमागमो वटं क्रीडन् ॥ ५७२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्तावकनिधनस्पृहयालुर्गोपमूर्तिरदयालुः ।  
 दैत्यः प्रलम्बनामा प्रलम्बबाहुं भवन्तमापेदे ॥ ५७३॥
+</details>
+<details><summary>मूलम्</summary>
+
+तावत्तावकनिधनस्पृहयालुर्गोपमूर्तिरदयालुः ।  
+दैत्यः प्रलम्बनामा प्रलम्बबाहुं भवन्तमापेदे ॥ ५७३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जानन्नप्यविजानन्निव तेन समं निबद्धसौहार्दः ।  
 वटनिकटे पटुपशुपव्याबद्धं द्वन्द्वयुद्धमारब्धाः ॥ ५७४॥
+</details>
+<details><summary>मूलम्</summary>
+
+जानन्नप्यविजानन्निव तेन समं निबद्धसौहार्दः ।  
+वटनिकटे पटुपशुपव्याबद्धं द्वन्द्वयुद्धमारब्धाः ॥ ५७४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गोपान्विभज्य तन्वन्सङ्घं बलभद्रकं भवत्कमपि ।  
 त्वद्बलभीरुं दैत्यं त्वद्बलगतमन्वमन्यथा भगवन् ॥ ५७५॥
+</details>
+<details><summary>मूलम्</summary>
+
+गोपान्विभज्य तन्वन्सङ्घं बलभद्रकं भवत्कमपि ।  
+त्वद्बलभीरुं दैत्यं त्वद्बलगतमन्वमन्यथा भगवन् ॥ ५७५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कल्पितविजेतृवहने समरे परयूथगं स्वदयिततरम् ।  
 श्रीदामानमधत्थाः पराजितो भक्तदासतां प्रथयन् ॥ ५७६॥
+</details>
+<details><summary>मूलम्</summary>
+
+कल्पितविजेतृवहने समरे परयूथगं स्वदयिततरम् ।  
+श्रीदामानमधत्थाः पराजितो भक्तदासतां प्रथयन् ॥ ५७६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं बहुषु विभूमन् बालेषु वहत्सु वाह्यमानेषु ।  
 रामविजितः प्रलम्बो जहार तं दूरतो भवद्भीत्या ॥ ५७७॥
+</details>
+<details><summary>मूलम्</summary>
+
+एवं बहुषु विभूमन् बालेषु वहत्सु वाह्यमानेषु ।  
+रामविजितः प्रलम्बो जहार तं दूरतो भवद्भीत्या ॥ ५७७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्दूरं गमयन्तं तं दृष्ट्वा हलिनि विहितगरिमभरे ।  
 दैत्यः स्वरूपमागाद्यद्रूपात्स हि बलोऽपि चकितोऽभूत् ॥ ५७८॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वद्दूरं गमयन्तं तं दृष्ट्वा हलिनि विहितगरिमभरे ।  
+दैत्यः स्वरूपमागाद्यद्रूपात्स हि बलोऽपि चकितोऽभूत् ॥ ५७८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उच्चतया दैत्यतनोस्त्वन्मुखमालोक्य दूरतो रामः ।  
 विगतभयो दृढमुष्ट्या भृशदुष्टं सपदि पिष्टवानेनम् ॥ ५७९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+उच्चतया दैत्यतनोस्त्वन्मुखमालोक्य दूरतो रामः ।  
+विगतभयो दृढमुष्ट्या भृशदुष्टं सपदि पिष्टवानेनम् ॥ ५७९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हत्वा दानववीरं प्राप्तं बलमालिलिङ्गिथ प्रेम्णा ।  
 तावन्मिलतोर्युवयोः शिरसि कृता पुष्पवृष्टिरमरगणैः ॥ ५७१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+हत्वा दानववीरं प्राप्तं बलमालिलिङ्गिथ प्रेम्णा ।  
+तावन्मिलतोर्युवयोः शिरसि कृता पुष्पवृष्टिरमरगणैः ॥ ५७१० ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आलम्बो भुवनानां प्रालम्बं निधनमेवमारचयन् ।  
 कालं विहाय सद्यो लोलम्बरुचे हरे हरेः क्लेशान् ॥ ५७११॥
+</details>
+<details><summary>मूलम्</summary>
+
+आलम्बो भुवनानां प्रालम्बं निधनमेवमारचयन् ।  
+कालं विहाय सद्यो लोलम्बरुचे हरे हरेः क्लेशान् ॥ ५७११॥
+</details>
+
