--- a/laxyam/padyam/purANam/nArAyaNIyam/058.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/058.md
@@ -3,81 +3,180 @@ title: ०५८
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वयि विहरणलोले बालजालैः प्रलम्ब  
 प्रमथनसविलम्बे धेनवः स्वैरचाराः ।  
 तृणकुतुकनिविष्टा दूरदूरं चरन्त्यः  
 किमपि विपिनमैषीकाख्यमीषांबभूवुः ॥ ५८१॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वयि विहरणलोले बालजालैः प्रलम्ब  
+प्रमथनसविलम्बे धेनवः स्वैरचाराः ।  
+तृणकुतुकनिविष्टा दूरदूरं चरन्त्यः  
+किमपि विपिनमैषीकाख्यमीषांबभूवुः ॥ ५८१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनधिगतनिदाघक्रौर्यबृन्दावनान्तात्  
 बहिरिदमुपयाताः काननं धेनवस्ताः ।  
 तव विरहविषण्णा ऊष्मलग्रीष्मताप  
 प्रसरविसरदम्भस्याकुलाः स्तम्भमापुः ॥ ५८२॥
+</details>
+<details><summary>मूलम्</summary>
+
+अनधिगतनिदाघक्रौर्यबृन्दावनान्तात्  
+बहिरिदमुपयाताः काननं धेनवस्ताः ।  
+तव विरहविषण्णा ऊष्मलग्रीष्मताप  
+प्रसरविसरदम्भस्याकुलाः स्तम्भमापुः ॥ ५८२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु सह सहायैर्दूरमन्विष्य शौरे  
 गलितसरणिमुञ्जारण्यसञ्जातखेदम् ।  
 पशुकुलमभिवीक्ष्य क्षिप्रमानेतुमारात्  
 त्वयि गतवति ही ही सर्वतोऽग्निर्जजृम्भे ॥ ५८३॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदनु सह सहायैर्दूरमन्विष्य शौरे  
+गलितसरणिमुञ्जारण्यसञ्जातखेदम् ।  
+पशुकुलमभिवीक्ष्य क्षिप्रमानेतुमारात्  
+त्वयि गतवति ही ही सर्वतोऽग्निर्जजृम्भे ॥ ५८३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सकलहरिति दीप्ते घोरभाङ्कारभीमे  
 शिखिनि विहतमार्गा अर्धदग्धा इवार्ताः ।  
 अहह भुवनबन्धो पाहि पाहीति सर्वे  
 शरणमुपगतास्त्वां तापहर्तारमेकम् ॥ ५८४॥
+</details>
+<details><summary>मूलम्</summary>
+
+सकलहरिति दीप्ते घोरभाङ्कारभीमे  
+शिखिनि विहतमार्गा अर्धदग्धा इवार्ताः ।  
+अहह भुवनबन्धो पाहि पाहीति सर्वे  
+शरणमुपगतास्त्वां तापहर्तारमेकम् ॥ ५८४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अलमलमतिभीत्य सर्वतो मीलयध्वं  
 भृशमिति तव वाचा मीलिताक्षेषु तेषु ।  
 क्वनु दवदहनोऽसौ कुत्र मुञ्जाटवी सा  
 सपदि ववृतिरे ते हन्त भण्डीरदेशे ॥ ५८५॥
+</details>
+<details><summary>मूलम्</summary>
+
+अलमलमतिभीत्य सर्वतो मीलयध्वं  
+भृशमिति तव वाचा मीलिताक्षेषु तेषु ।  
+क्वनु दवदहनोऽसौ कुत्र मुञ्जाटवी सा  
+सपदि ववृतिरे ते हन्त भण्डीरदेशे ॥ ५८५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जय जय तव माया केयमीशेति तेषां  
 नुतिभिरुदितहासो बद्वनानाविलासः ।  
 पुनरपि विपिनान्ते प्राचरः पाटलादि  
 प्रसवनिकरमात्रग्राह्यघर्मानुभावे ॥ ५८६॥
+</details>
+<details><summary>मूलम्</summary>
+
+जय जय तव माया केयमीशेति तेषां  
+नुतिभिरुदितहासो बद्वनानाविलासः ।  
+पुनरपि विपिनान्ते प्राचरः पाटलादि  
+प्रसवनिकरमात्रग्राह्यघर्मानुभावे ॥ ५८६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वयि विमुखविमोच्चैस्तापभारं वहन्तं  
 तव भजनवदन्तः पङ्कमुच्छोषयन्तम् ।  
 तव भुजवदुदञ्चत् भूरितेजःप्रवाहं  
 तपसमयमनैषीर्यामुनेषु स्थलेषु ॥ ५८७॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वयि विमुखविमोच्चैस्तापभारं वहन्तं  
+तव भजनवदन्तः पङ्कमुच्छोषयन्तम् ।  
+तव भुजवदुदञ्चत् भूरितेजःप्रवाहं  
+तपसमयमनैषीर्यामुनेषु स्थलेषु ॥ ५८७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु जलदजालैस्त्वद्वपुस्तुल्यभाभि  
 र्विकसदमलविद्यूत्पीतवासोविलासैः ।  
 सकलभुवनभाजां हर्षदां वर्षवेलां  
 क्षितिधरकुहरेषु स्वैरवासी व्यनैषीः ॥ ५८८॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदनु जलदजालैस्त्वद्वपुस्तुल्यभाभि  
+र्विकसदमलविद्यूत्पीतवासोविलासैः ।  
+सकलभुवनभाजां हर्षदां वर्षवेलां  
+क्षितिधरकुहरेषु स्वैरवासी व्यनैषीः ॥ ५८८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुहरतलनिविष्टं त्वां गरिष्ठं गिरीन्द्रः  
 शिखिकुलनवकेकाकाकुभिः स्तोत्रकारी ।  
 स्फुटकुटजकदम्बस्तोमपुष्पाञ्जलिं च  
 प्रविदधदनुभेजे देव गोवर्धनोऽसौ ॥ ५८९॥
+</details>
+<details><summary>मूलम्</summary>
+
+कुहरतलनिविष्टं त्वां गरिष्ठं गिरीन्द्रः  
+शिखिकुलनवकेकाकाकुभिः स्तोत्रकारी ।  
+स्फुटकुटजकदम्बस्तोमपुष्पाञ्जलिं च  
+प्रविदधदनुभेजे देव गोवर्धनोऽसौ ॥ ५८९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ शरदमुपेतां तां भवद्भक्तचेतो  
 विमलसलिलपूरां मानयन्काननेषु ।  
 तृणाममलवनान्ते चारु सञ्चारयन् गाः  
 पवनपुरपते त्वं देहि मे देहसौख्यम् ॥ ५८१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+अथ शरदमुपेतां तां भवद्भक्तचेतो  
+विमलसलिलपूरां मानयन्काननेषु ।  
+तृणाममलवनान्ते चारु सञ्चारयन् गाः  
+पवनपुरपते त्वं देहि मे देहसौख्यम् ॥ ५८१०॥
+</details>
+
