--- a/laxyam/padyam/purANam/nArAyaNIyam/059.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/059.md
@@ -3,10 +3,18 @@ title: ०५९
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्वपुर्नवकलायकोमलं प्रेमदोहनमशेषमोहनम् ।  
 ब्रह्मा तत्त्वपरचिन्मुदात्मकं वीक्ष्य सम्मुमुहुरन्वहं स्त्रियः ॥ ५९१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वद्वपुर्नवकलायकोमलं प्रेमदोहनमशेषमोहनम् ।  
+ब्रह्मा तत्त्वपरचिन्मुदात्मकं वीक्ष्य सम्मुमुहुरन्वहं स्त्रियः ॥ ५९१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_02.mp3"></div>
 
@@ -15,49 +23,112 @@ title: ०५९
 गोपिकास्तव न सेहिरे हरे काननोपगतिमप्यहर्मुखे ।। ५९२ ॥
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निर्गते भवति दत्तदृष्टयस्त्वद्गतेन मनसा मृगेक्षणाः ।  
 वेणुनादमुपकर्ण्य दूरतस्त्वद्विलासकथयाभिरेमिरे ॥ ५९३॥
+</details>
+<details><summary>मूलम्</summary>
+
+निर्गते भवति दत्तदृष्टयस्त्वद्गतेन मनसा मृगेक्षणाः ।  
+वेणुनादमुपकर्ण्य दूरतस्त्वद्विलासकथयाभिरेमिरे ॥ ५९३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काननान्तमितवान्भवानपि स्निग्धपादपतले मनोरमे ।  
 व्यत्ययाकलितपादमास्थितः प्रत्यपूरयत वेणुनालिकाम् ॥ ५९४॥
+</details>
+<details><summary>मूलम्</summary>
+
+काननान्तमितवान्भवानपि स्निग्धपादपतले मनोरमे ।  
+व्यत्ययाकलितपादमास्थितः प्रत्यपूरयत वेणुनालिकाम् ॥ ५९४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मारबाणधुतखेचरीकुलं निर्विकारपशुपक्षिमण्डलम् ।  
 द्रावणं च दृषदामपि प्रभो तावकं व्यजनि वेणुकूजितम् ॥ ५९५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+मारबाणधुतखेचरीकुलं निर्विकारपशुपक्षिमण्डलम् ।  
+द्रावणं च दृषदामपि प्रभो तावकं व्यजनि वेणुकूजितम् ॥ ५९५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वेणुरन्ध्रतरलाङ्गुलीदलं तालसञ्चलितपादपल्लवम् ।  
 तत्स्थितं तव परोक्षमप्यहो संविचिन्त्य मुमुहुर्व्रजाङ्गनाः ॥ ५९६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+वेणुरन्ध्रतरलाङ्गुलीदलं तालसञ्चलितपादपल्लवम् ।  
+तत्स्थितं तव परोक्षमप्यहो संविचिन्त्य मुमुहुर्व्रजाङ्गनाः ॥ ५९६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निर्विशङ्कभवदङ्गदर्शिनीः खेचरीः खगमृगान्पशूनपि ।  
 त्वत्पदप्रणयि काननं च ताः धन्यधन्यमिति नन्वमानयन् ॥ ५९७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+निर्विशङ्कभवदङ्गदर्शिनीः खेचरीः खगमृगान्पशूनपि ।  
+त्वत्पदप्रणयि काननं च ताः धन्यधन्यमिति नन्वमानयन् ॥ ५९७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आपिषेयमधरामृतं कदा वेणुभुक्तरसशेषमेकदा ।  
 दूरतो बत कृतं दुराशयेत्याकुला मुहुरिमाः समामुहन् ॥ ५९८॥
+</details>
+<details><summary>मूलम्</summary>
+
+आपिषेयमधरामृतं कदा वेणुभुक्तरसशेषमेकदा ।  
+दूरतो बत कृतं दुराशयेत्याकुला मुहुरिमाः समामुहन् ॥ ५९८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रत्यहं च पुनरित्थमङ्गनाश्चित्तयोनिजनितादनुग्रहात् ।  
 बद्धरागविवशास्त्वयि प्रभो नित्यमापुरिह कृत्यमूढताम् ॥ ५९९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रत्यहं च पुनरित्थमङ्गनाश्चित्तयोनिजनितादनुग्रहात् ।  
+बद्धरागविवशास्त्वयि प्रभो नित्यमापुरिह कृत्यमूढताम् ॥ ५९९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रागस्तावज्जायते हि स्वभावान्मोक्षोपाये यत्नतः स्यान्न वा स्यात् ।  
 तासां त्वेकं तद्द्वयं लब्धमासीद्भाग्यं भाग्यं पाहि मां मारुतेश ॥ ५९१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+रागस्तावज्जायते हि स्वभावान्मोक्षोपाये यत्नतः स्यान्न वा स्यात् ।  
+तासां त्वेकं तद्द्वयं लब्धमासीद्भाग्यं भाग्यं पाहि मां मारुतेश ॥ ५९१० ॥
+</details>
+
