--- a/laxyam/padyam/purANam/nArAyaNIyam/060.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/060.md
@@ -3,67 +3,154 @@ title: ०६०
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मदनातुरचेतसोऽन्वहं भवदङ्घ्रिद्वयदास्यकाम्यया ।  
 यमुनातटसीम्नि सैकतीं तरलाक्ष्यो गिरिजां समार्चिचन् ॥ ६०१॥
+</details>
+<details><summary>मूलम्</summary>
+
+मदनातुरचेतसोऽन्वहं भवदङ्घ्रिद्वयदास्यकाम्यया ।  
+यमुनातटसीम्नि सैकतीं तरलाक्ष्यो गिरिजां समार्चिचन् ॥ ६०१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव नामकथारताः समं सुदृशः प्रातरुपागताः नदीम् ।  
 उपहारशतैरपूजयन् दयितो नन्दसुतो भवेदिति ॥ ६०२॥
+</details>
+<details><summary>मूलम्</summary>
+
+तव नामकथारताः समं सुदृशः प्रातरुपागताः नदीम् ।  
+उपहारशतैरपूजयन् दयितो नन्दसुतो भवेदिति ॥ ६०२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति मासमुपाहितव्रतास्तरलाक्षीरभिवीक्ष्य ता भवान् ।  
 करुणामृदुलो नदीतटं समयासीत्तदनुग्रहेच्छया ॥ ६०३॥
+</details>
+<details><summary>मूलम्</summary>
+
+इति मासमुपाहितव्रतास्तरलाक्षीरभिवीक्ष्य ता भवान् ।  
+करुणामृदुलो नदीतटं समयासीत्तदनुग्रहेच्छया ॥ ६०३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नियमावसितौ निजाम्बरं तटसीमन्यवमुच्य तास्तदा ।  
 यमुनाजलखेलनाकुलाः पुरतस्त्वामवलोक्य लज्जिताः ॥ ६०४॥
+</details>
+<details><summary>मूलम्</summary>
+
+नियमावसितौ निजाम्बरं तटसीमन्यवमुच्य तास्तदा ।  
+यमुनाजलखेलनाकुलाः पुरतस्त्वामवलोक्य लज्जिताः ॥ ६०४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रपया नमिताननास्वथो वनितास्वम्बरजालमन्तिके ।  
 निहितं परिगृह्य भूरुहो विटपं त्वं तरसाधिरूढवान् ॥ ६०५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्रपया नमिताननास्वथो वनितास्वम्बरजालमन्तिके ।  
+निहितं परिगृह्य भूरुहो विटपं त्वं तरसाधिरूढवान् ॥ ६०५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इह तावदुपेत्य नीयतां वसनं वः सुदृशो यथायथम् ।  
 इति नर्ममृदुस्मिते त्वयि व्रुवति व्यामुमुहे वधूजनैः ॥ ६०६॥
+</details>
+<details><summary>मूलम्</summary>
+
+इह तावदुपेत्य नीयतां वसनं वः सुदृशो यथायथम् ।  
+इति नर्ममृदुस्मिते त्वयि व्रुवति व्यामुमुहे वधूजनैः ॥ ६०६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि जीव चिरं किशोर नस्तव दासीरवशीकरोषि किम् ।  
 प्रदिशाम्बरमम्बुजेक्षणेत्युदितस्त्वं स्मितमेव दत्तवान् ॥ ६०७॥
+</details>
+<details><summary>मूलम्</summary>
+
+अयि जीव चिरं किशोर नस्तव दासीरवशीकरोषि किम् ।  
+प्रदिशाम्बरमम्बुजेक्षणेत्युदितस्त्वं स्मितमेव दत्तवान् ॥ ६०७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधिरुह्य तटं कृताञ्जलीः परिशुद्धाः स्वगतीर्निरीक्ष्य ताः ।  
 वसनान्यखिलान्यनुग्रहं पुनरेवं गिरमप्यदा मुदा ॥ ६०८॥
+</details>
+<details><summary>मूलम्</summary>
+
+अधिरुह्य तटं कृताञ्जलीः परिशुद्धाः स्वगतीर्निरीक्ष्य ताः ।  
+वसनान्यखिलान्यनुग्रहं पुनरेवं गिरमप्यदा मुदा ॥ ६०८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विदितं ननु वो मनीषितं वदितारस्त्विह योग्यमुत्तरम् ।  
 यमुनापुलिने सचन्द्रिकाः क्षणदा इत्यबलास्त्वमूचिवान् ॥ ६०९॥
+</details>
+<details><summary>मूलम्</summary>
+
+विदितं ननु वो मनीषितं वदितारस्त्विह योग्यमुत्तरम् ।  
+यमुनापुलिने सचन्द्रिकाः क्षणदा इत्यबलास्त्वमूचिवान् ॥ ६०९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपकर्ण्य भवन्मुखच्युतं मधुनिष्यन्दि वचो मृगीदृशः ।  
 प्रणयादयि वीक्ष्य वीक्ष्य ते वदनाब्जं शनकैर्गृहं गताः ॥ ६०१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+उपकर्ण्य भवन्मुखच्युतं मधुनिष्यन्दि वचो मृगीदृशः ।  
+प्रणयादयि वीक्ष्य वीक्ष्य ते वदनाब्जं शनकैर्गृहं गताः ॥ ६०१० ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति नन्वनुगृह्य बल्लवीर्विपिनान्तेषु पुरेव सञ्चरन् ।  
 करुणाशिशिरो हरे हर त्वरया मे सकलामयावलिम् ॥ ६०११॥
+</details>
+<details><summary>मूलम्</summary>
+
+इति नन्वनुगृह्य बल्लवीर्विपिनान्तेषु पुरेव सञ्चरन् ।  
+करुणाशिशिरो हरे हर त्वरया मे सकलामयावलिम् ॥ ६०११॥
+</details>
+
