--- a/laxyam/padyam/purANam/nArAyaNIyam/061.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/061.md
@@ -3,61 +3,140 @@ title: ०६१
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततश्च वृन्दावनतोऽतिदूरतो वनं गतस्त्वं खलु गोपगोकुलैः ।  
 हृदन्तरे भक्ततरद्विजाङ्गनाकदम्बकानुग्रहणाग्रहं वहन् ॥ ६११ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततश्च वृन्दावनतोऽतिदूरतो वनं गतस्त्वं खलु गोपगोकुलैः ।  
+हृदन्तरे भक्ततरद्विजाङ्गनाकदम्बकानुग्रहणाग्रहं वहन् ॥ ६११ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो निरीक्ष्याशरणे वनान्तरे किशोरलोकं क्षुधितं तृषाकुलम् ।  
 अदूरतो यज्ञपरान् द्विजान्प्रति व्यसर्जयो दीदिवियाचनाय तान् ॥ ६१२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततो निरीक्ष्याशरणे वनान्तरे किशोरलोकं क्षुधितं तृषाकुलम् ।  
+अदूरतो यज्ञपरान् द्विजान्प्रति व्यसर्जयो दीदिवियाचनाय तान् ॥ ६१२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गतेष्वथो तेष्वभिधाय तेऽभिधां कुमारकेष्वोदनयाचिषु प्रभो ।  
 श्रुतिस्थिरा अप्यभिनिन्द्युरश्रुतिं न किञ्चिदूचुश्च महीसुरोत्तमाः ॥ ६१३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+गतेष्वथो तेष्वभिधाय तेऽभिधां कुमारकेष्वोदनयाचिषु प्रभो ।  
+श्रुतिस्थिरा अप्यभिनिन्द्युरश्रुतिं न किञ्चिदूचुश्च महीसुरोत्तमाः ॥ ६१३ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनादरात् खिन्नधियो हि बालकाः समाययुर्युक्तमिदं हि यज्वसु ।  
 चिरादभक्ताः खलु ते महीसुराः कथं हि भक्तं त्वयि तैः समर्प्यते ॥ ६१४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अनादरात् खिन्नधियो हि बालकाः समाययुर्युक्तमिदं हि यज्वसु ।  
+चिरादभक्ताः खलु ते महीसुराः कथं हि भक्तं त्वयि तैः समर्प्यते ॥ ६१४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निवेदयध्वं गृहिणीजनाय मां दिशेयुरन्नं करुणाकुला इमाः ।  
 इति स्मितार्द्रं भवतेरिता गतास्ते दारका दारजनं ययाचिरे ॥ ६१५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+निवेदयध्वं गृहिणीजनाय मां दिशेयुरन्नं करुणाकुला इमाः ।  
+इति स्मितार्द्रं भवतेरिता गतास्ते दारका दारजनं ययाचिरे ॥ ६१५ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गृहीतनाम्नि त्वयि सम्भ्रमाकुलाश्चतुर्विधं भोज्यरसं प्रगृह्य ताः ।  
 चिरं धृतत्वत्प्रविलोकनाग्रहाः स्वकैर्निरुद्धा अपि तूर्णमाययुः ॥ ६१६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+गृहीतनाम्नि त्वयि सम्भ्रमाकुलाश्चतुर्विधं भोज्यरसं प्रगृह्य ताः ।  
+चिरं धृतत्वत्प्रविलोकनाग्रहाः स्वकैर्निरुद्धा अपि तूर्णमाययुः ॥ ६१६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विलोलपिञ्छं चिकुरे कपोलयोः समुल्लसत्कुण्डलमार्द्रमीक्षिते ।  
 निधाय बाहुं सुहृदंससीमनि स्थितं भवन्तं समलोकयन्त ताः ॥ ६१७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+विलोलपिञ्छं चिकुरे कपोलयोः समुल्लसत्कुण्डलमार्द्रमीक्षिते ।  
+निधाय बाहुं सुहृदंससीमनि स्थितं भवन्तं समलोकयन्त ताः ॥ ६१७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदा च काचित्त्वदुपागमोद्यता गृहीतहस्ता दयितेन यज्वना ।  
 तदैव सञ्चिन्त्य भवन्तमञ्जसा विवेश कैवल्यमहो कृतिन्यसौ ॥ ६१८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदा च काचित्त्वदुपागमोद्यता गृहीतहस्ता दयितेन यज्वना ।  
+तदैव सञ्चिन्त्य भवन्तमञ्जसा विवेश कैवल्यमहो कृतिन्यसौ ॥ ६१८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आदाय भोज्यान्यनुगृह्य ताः पुनस्त्वदङ्गसङ्गस्पृहयोज्झतीर्गृहम् ।  
 विलोक्य यज्ञाय विसर्जयन्निमाश्चकर्थ भर्तॄनपि तास्वगर्हणान् ॥ ६१९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+आदाय भोज्यान्यनुगृह्य ताः पुनस्त्वदङ्गसङ्गस्पृहयोज्झतीर्गृहम् ।  
+विलोक्य यज्ञाय विसर्जयन्निमाश्चकर्थ भर्तॄनपि तास्वगर्हणान् ॥ ६१९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निरूप्य दोषं निजमङ्गनाजने विलोक्य भक्तिं च पुनर्विचारिभिः ।  
 प्रबुद्धतत्त्वैस्त्वमभिष्टुतो द्विजैर्मरुत्पुराधीश निरुन्धि मे गदान् ॥ ६११० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+निरूप्य दोषं निजमङ्गनाजने विलोक्य भक्तिं च पुनर्विचारिभिः ।  
+प्रबुद्धतत्त्वैस्त्वमभिष्टुतो द्विजैर्मरुत्पुराधीश निरुन्धि मे गदान् ॥ ६११० ॥
+</details>
+
