--- a/laxyam/padyam/purANam/nArAyaNIyam/063.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/063.md
@@ -3,69 +3,156 @@ title: ०६३
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ददृशिरे किल तत्क्षणमक्षतस्तनितजृम्भितकम्पितदिक्तटाः ।  
 सुषमया भवदङ्गतुलां गता व्रजपदोपरि वारिधरास्त्वया ॥ ६३१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+ददृशिरे किल तत्क्षणमक्षतस्तनितजृम्भितकम्पितदिक्तटाः ।  
+सुषमया भवदङ्गतुलां गता व्रजपदोपरि वारिधरास्त्वया ॥ ६३१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विपुलकरकमिश्रैस्तोयधारानिपातै  
 र्दिशि दिशि पशुपानां मण्डले दण्ड्यमाने ।  
 कुपितहरिकृतान्नः पाहि पाहीति तेषां  
 वचनमजित श्रुण्वन्मा बिभीतेत्यभाणीः ॥ ६३२॥
+</details>
+<details><summary>मूलम्</summary>
+
+विपुलकरकमिश्रैस्तोयधारानिपातै  
+र्दिशि दिशि पशुपानां मण्डले दण्ड्यमाने ।  
+कुपितहरिकृतान्नः पाहि पाहीति तेषां  
+वचनमजित श्रुण्वन्मा बिभीतेत्यभाणीः ॥ ६३२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुल इह खलु गोत्रो दैवतं गोत्रशत्रो  
 र्विहतिमिह स रुन्ध्यात्को नुः वः संशायोऽस्मिन् ।  
 इति सहसितवादी देव गोवर्धनाद्रिं  
 त्वरितमुदमुमूलो मूलतो बाल दोर्भ्याम् ॥ ६३३॥
+</details>
+<details><summary>मूलम्</summary>
+
+कुल इह खलु गोत्रो दैवतं गोत्रशत्रो  
+र्विहतिमिह स रुन्ध्यात्को नुः वः संशायोऽस्मिन् ।  
+इति सहसितवादी देव गोवर्धनाद्रिं  
+त्वरितमुदमुमूलो मूलतो बाल दोर्भ्याम् ॥ ६३३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु गिरिवरस्य प्रोद्धृतस्यास्य तावत्  
 सिकतिलमृदुदेशे दूरतो वारितापे ।  
 परिकरपरिमिश्रान्धेनुगोपानधस्ता  
 दुपनिदधदधत्था हस्तपद्मेन शैलम् ॥ ६३४॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदनु गिरिवरस्य प्रोद्धृतस्यास्य तावत्  
+सिकतिलमृदुदेशे दूरतो वारितापे ।  
+परिकरपरिमिश्रान्धेनुगोपानधस्ता  
+दुपनिदधदधत्था हस्तपद्मेन शैलम् ॥ ६३४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवति विधृतशैले बालिकाभिर्वयस्यै  
 रपि विहितविलासं केलिलापादिलोले ।  
 सविधमिलितधेनूरेकहस्तेन कण्दू  
 यति सति पशुपालास्तोषमैषन्त सर्वे ॥ ६३५॥
+</details>
+<details><summary>मूलम्</summary>
+
+भवति विधृतशैले बालिकाभिर्वयस्यै  
+रपि विहितविलासं केलिलापादिलोले ।  
+सविधमिलितधेनूरेकहस्तेन कण्दू  
+यति सति पशुपालास्तोषमैषन्त सर्वे ॥ ६३५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अतिमहान् गिरिरेष तु वामके करसरोरुहि तं धरते चिरम् ।  
 किमिदमद्भुतमद्रिबलन्विति त्वदवलोकिभिराकथि गोपकैः ॥ ६३६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अतिमहान् गिरिरेष तु वामके करसरोरुहि तं धरते चिरम् ।  
+किमिदमद्भुतमद्रिबलन्विति त्वदवलोकिभिराकथि गोपकैः ॥ ६३६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहह धार्ष्ट्यममुष्य वटोर्गिरिं व्यथितबाहुरसाववरोपयेत् ।  
 इति हरिस्त्वयि बद्धविगर्हणो दिवससप्तकमुग्रमवर्षयत् ॥ ६३७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अहह धार्ष्ट्यममुष्य वटोर्गिरिं व्यथितबाहुरसाववरोपयेत् ।  
+इति हरिस्त्वयि बद्धविगर्हणो दिवससप्तकमुग्रमवर्षयत् ॥ ६३७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अचलति त्वयि देव पदात्पदं गलितसर्वजले च घनोत्करे ।  
 अपहृते मरुता मरुतां पतिस्त्वदभिशङ्कितधीः समुपाद्रवत् ॥ ६३८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अचलति त्वयि देव पदात्पदं गलितसर्वजले च घनोत्करे ।  
+अपहृते मरुता मरुतां पतिस्त्वदभिशङ्कितधीः समुपाद्रवत् ॥ ६३८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शममुपेयुषि वर्षभरे तदा पशुपधेनुकुले च विनिर्गते ।  
 भुवि विभो समुपाहितभूधरः प्रमुदितैः पशुपैः परिरेभिषे ॥ ६३९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+शममुपेयुषि वर्षभरे तदा पशुपधेनुकुले च विनिर्गते ।  
+भुवि विभो समुपाहितभूधरः प्रमुदितैः पशुपैः परिरेभिषे ॥ ६३९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धरणिमेव पुरा धृतवानसि क्षितिधरोद्धरणे तव कः श्रमः ।  
 इति नुतस्त्रिदशैः कमलापते गुरुपुरालय पालय मां गदात् ॥ ६३१० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+धरणिमेव पुरा धृतवानसि क्षितिधरोद्धरणे तव कः श्रमः ।  
+इति नुतस्त्रिदशैः कमलापते गुरुपुरालय पालय मां गदात् ॥ ६३१० ॥
+</details>
+
