--- a/laxyam/padyam/purANam/nArAyaNIyam/065.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/065.md
@@ -3,73 +3,162 @@ title: ०६५
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गोपीजनाय कथितं नियमावसाने  
 मारोत्सवं त्वमथ साधयितुं प्रवृत्तः ।  
 सान्द्रेण चान्द्रमहसा शिशिरीकृताशे  
 प्रापूरयो मुरलिकां यमुनावनान्ते ॥ ६५१॥
+</details>
+<details><summary>मूलम्</summary>
+
+गोपीजनाय कथितं नियमावसाने  
+मारोत्सवं त्वमथ साधयितुं प्रवृत्तः ।  
+सान्द्रेण चान्द्रमहसा शिशिरीकृताशे  
+प्रापूरयो मुरलिकां यमुनावनान्ते ॥ ६५१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्मूर्छनाभिरुदितस्वरमण्डलाभिः  
 सम्मूर्छयन्तमखिलं भुवनान्तरालम् ।  
 त्वद्वेणुनादमुपकर्ण्य विभो तरुण्य  
 स्तत्तादृशं कमपि चित्तविमोहमापुः ॥ ६५२॥
+</details>
+<details><summary>मूलम्</summary>
+
+सम्मूर्छनाभिरुदितस्वरमण्डलाभिः  
+सम्मूर्छयन्तमखिलं भुवनान्तरालम् ।  
+त्वद्वेणुनादमुपकर्ण्य विभो तरुण्य  
+स्तत्तादृशं कमपि चित्तविमोहमापुः ॥ ६५२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ता गेहकृत्यनिरतास्तनयप्रसक्ताः  
 कान्तोपसेवनपराश्च सरोरुहाक्ष्यः ।  
 सर्वं विसृज्य मुरलीरवमोहितास्ते  
 कान्तारदेशमयि कान्ततनो समेताः ॥ ६५३॥
+</details>
+<details><summary>मूलम्</summary>
+
+ता गेहकृत्यनिरतास्तनयप्रसक्ताः  
+कान्तोपसेवनपराश्च सरोरुहाक्ष्यः ।  
+सर्वं विसृज्य मुरलीरवमोहितास्ते  
+कान्तारदेशमयि कान्ततनो समेताः ॥ ६५३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काश्चिन्निजाङ्गपरिभूषणमादधाना  
 वेणुप्रणादमुपकर्ण्य कृतार्धभूषाः ।  
 त्वामागता ननु तथैव विभूषिताभ्य  
 स्ता एव संरुरुचिरे तव लोचनाय ॥ ६५४॥
+</details>
+<details><summary>मूलम्</summary>
+
+काश्चिन्निजाङ्गपरिभूषणमादधाना  
+वेणुप्रणादमुपकर्ण्य कृतार्धभूषाः ।  
+त्वामागता ननु तथैव विभूषिताभ्य  
+स्ता एव संरुरुचिरे तव लोचनाय ॥ ६५४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हारं नितम्बभूवि काचन धारयन्ती  
 काञ्चीं च कण्ठभुवि देव समागता त्वाम् ।  
 हारित्वमात्मजघनस्य मुकुन्द तुभ्यं  
 व्यक्तं बभाष इव मुग्धसुखी विशेषात् ॥ ६५५॥
+</details>
+<details><summary>मूलम्</summary>
+
+हारं नितम्बभूवि काचन धारयन्ती  
+काञ्चीं च कण्ठभुवि देव समागता त्वाम् ।  
+हारित्वमात्मजघनस्य मुकुन्द तुभ्यं  
+व्यक्तं बभाष इव मुग्धसुखी विशेषात् ॥ ६५५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काचित्कुचे पुनरसज्जितकञ्चुलीका  
 व्यामोहतः परवधूभिरलक्ष्यमाणा ।  
 त्वामाययौ निरुपमप्रणयातिभार  
 राज्याभिषेकविधये कलशीधरेव ॥ ६५६॥
+</details>
+<details><summary>मूलम्</summary>
+
+काचित्कुचे पुनरसज्जितकञ्चुलीका  
+व्यामोहतः परवधूभिरलक्ष्यमाणा ।  
+त्वामाययौ निरुपमप्रणयातिभार  
+राज्याभिषेकविधये कलशीधरेव ॥ ६५६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काश्चित् गृहात् किल निरेतुमपारयन्त्य  
 स्त्वामेव देव हृदये सुदृढं विभाव्य ।  
 देहं विधूय परचित्सुखरूपमेकं  
 त्वामाविशन्परमिमा ननु धन्यधन्याः ॥ ६५७॥
+</details>
+<details><summary>मूलम्</summary>
+
+काश्चित् गृहात् किल निरेतुमपारयन्त्य  
+स्त्वामेव देव हृदये सुदृढं विभाव्य ।  
+देहं विधूय परचित्सुखरूपमेकं  
+त्वामाविशन्परमिमा ननु धन्यधन्याः ॥ ६५७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जारात्मना न परमात्मतया स्मरन्त्यो  
 नार्यो गताः परमहंसगतिं क्षणेन ।  
 तत्त्वां प्रकाशपरमात्मतनुं कथञ्चि  
 च्चित्ते वहन्नमृतमश्रममश्नुवीय ॥ ६५८॥
+</details>
+<details><summary>मूलम्</summary>
+
+जारात्मना न परमात्मतया स्मरन्त्यो  
+नार्यो गताः परमहंसगतिं क्षणेन ।  
+तत्त्वां प्रकाशपरमात्मतनुं कथञ्चि  
+च्चित्ते वहन्नमृतमश्रममश्नुवीय ॥ ६५८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभ्यागताभिरभितो व्रजसुन्दरीभि  
 र्मुग्धस्मितार्द्रवदनः करुणावलोकी ।  
 निस्सीमकान्तिजलधिस्त्वमवेक्ष्यमाणो  
 विश्वैकहृद्य हर मे परमेश रोगान् ॥ ६५९॥
+</details>
+<details><summary>मूलम्</summary>
+
+अभ्यागताभिरभितो व्रजसुन्दरीभि  
+र्मुग्धस्मितार्द्रवदनः करुणावलोकी ।  
+निस्सीमकान्तिजलधिस्त्वमवेक्ष्यमाणो  
+विश्वैकहृद्य हर मे परमेश रोगान् ॥ ६५९॥
+</details>
+
