--- a/laxyam/padyam/purANam/nArAyaNIyam/068.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/068.md
@@ -3,61 +3,140 @@ title: ०६८
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव विलोकनाद्गोपिकाजनाः प्रमदसंकुलाः पङ्कजेक्षण ।  
 अमृतधारया संप्लुता इव स्तिमिततां दधुस्त्वत्पुरोगताः ॥ ६८१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+तव विलोकनाद्गोपिकाजनाः प्रमदसंकुलाः पङ्कजेक्षण ।  
+अमृतधारया संप्लुता इव स्तिमिततां दधुस्त्वत्पुरोगताः ॥ ६८१ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु काचन त्वत्कराम्बुजं सपदि गृह्णती निर्विशङ्कितम् ।  
 घनपयोधरे संविधाय सा पुलकसंवृता तस्थुषी चिरम् ॥ ६८२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदनु काचन त्वत्कराम्बुजं सपदि गृह्णती निर्विशङ्कितम् ।  
+घनपयोधरे संविधाय सा पुलकसंवृता तस्थुषी चिरम् ॥ ६८२ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव विभो पुरा कोमलं भुजं निजगलान्तरे पर्यवेष्टयत् ।  
 गलसमुद्गतं प्राणमारुतं प्रतिनिरुन्धतीवातिहर्षुला ॥ ६८३॥
+</details>
+<details><summary>मूलम्</summary>
+
+तव विभो पुरा कोमलं भुजं निजगलान्तरे पर्यवेष्टयत् ।  
+गलसमुद्गतं प्राणमारुतं प्रतिनिरुन्धतीवातिहर्षुला ॥ ६८३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपगतत्रपा कापि कामिनी तव मुखाम्बुजात्पूगचर्वितम् ।  
 प्रतिगृहय्य तद्वक्त्रपङ्कजे निदधती गता पूर्णकामताम् ॥ ६८४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अपगतत्रपा कापि कामिनी तव मुखाम्बुजात्पूगचर्वितम् ।  
+प्रतिगृहय्य तद्वक्त्रपङ्कजे निदधती गता पूर्णकामताम् ॥ ६८४ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विकरुणो वने संविहाय मामपगतोऽसि का त्वामि स्पृशेत् ।  
 इति सरोषया तवदेकया सजललोचनं वीक्षितो भवान् ॥ ६८५॥
+</details>
+<details><summary>मूलम्</summary>
+
+विकरुणो वने संविहाय मामपगतोऽसि का त्वामि स्पृशेत् ।  
+इति सरोषया तवदेकया सजललोचनं वीक्षितो भवान् ॥ ६८५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति मुदाकुलैर्वल्लवीजनैः सममुपागतो यामुने तटे ।  
 मृदुकुचाम्बरैः कल्पितासने घुसृणभासुरे पर्यशोभथाः ॥ ६८६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+इति मुदाकुलैर्वल्लवीजनैः सममुपागतो यामुने तटे ।  
+मृदुकुचाम्बरैः कल्पितासने घुसृणभासुरे पर्यशोभथाः ॥ ६८६ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कतिविधा कृपा केऽपि सर्वतो धृतदयोदयाः केचिदाश्रिते ।  
 कतिचिदीदृशा मादृशेष्व्पीत्यभिहितो भवान्वल्लवीजनैः ॥ ६८७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+कतिविधा कृपा केऽपि सर्वतो धृतदयोदयाः केचिदाश्रिते ।  
+कतिचिदीदृशा मादृशेष्व्पीत्यभिहितो भवान्वल्लवीजनैः ॥ ६८७ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि कुमारिका नैव शङ्क्यतां कठिनता मयि प्रेमकातरे ।  
 मयि यु चेतसो वोऽनुवृत्तये कृतमिदं मयेत्यूचिवान्भवान् ॥ ६८८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+अयि कुमारिका नैव शङ्क्यतां कठिनता मयि प्रेमकातरे ।  
+मयि यु चेतसो वोऽनुवृत्तये कृतमिदं मयेत्यूचिवान्भवान् ॥ ६८८ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि निशम्यतां जीववल्लभाः प्रियतमो जनो नेदृशो मम ।  
 तदिह रम्यतां रम्ययामिनीष्वनुपरोधमित्यालपो विभो ॥ ६८९॥
+</details>
+<details><summary>मूलम्</summary>
+
+अयि निशम्यतां जीववल्लभाः प्रियतमो जनो नेदृशो मम ।  
+तदिह रम्यतां रम्ययामिनीष्वनुपरोधमित्यालपो विभो ॥ ६८९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति गिराधिकं मोदमेदुरैर्व्रजवधूजनैः साकमारमन् ।  
 कलितकौतुको रासखेलने गुरुपुरीपते पाहि मां गदात् ॥ ६८१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+इति गिराधिकं मोदमेदुरैर्व्रजवधूजनैः साकमारमन् ।  
+कलितकौतुको रासखेलने गुरुपुरीपते पाहि मां गदात् ॥ ६८१०॥
+</details>
+
