--- a/laxyam/padyam/purANam/nArAyaNIyam/069.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/069.md
@@ -3,89 +3,198 @@ title: ०६९
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 केशपाशधृतपिञ्छिकावितति सञ्चलन्मकरकुण्डलं  
 हारजालवनमालिकाललितमङ्गरागघनसौरभम् ।  
 पीतचेलधृतकाञ्चिकाञ्चितमुदञ्चदंशुमणिनूपुरं  
 रासकेलिपरिभूषितं तव हि रूपमीश कलयामहे ॥ ६९१॥
+</details>
+<details><summary>मूलम्</summary>
+
+केशपाशधृतपिञ्छिकावितति सञ्चलन्मकरकुण्डलं  
+हारजालवनमालिकाललितमङ्गरागघनसौरभम् ।  
+पीतचेलधृतकाञ्चिकाञ्चितमुदञ्चदंशुमणिनूपुरं  
+रासकेलिपरिभूषितं तव हि रूपमीश कलयामहे ॥ ६९१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावदेव कृतमण्डने कलितकञ्चुलीककुचमण्डले  
 गण्डलोलमणिकुण्डले युवतिमण्डलेऽथ परिमण्डले ।  
 अन्तरा सकलसुन्दरीयुगलमिन्दिरारमण सञ्चरन्  
 मञ्जुलां तदनु रासकेलिमयि कञ्जनाभ समुपादधाः ॥ ६९२॥
+</details>
+<details><summary>मूलम्</summary>
+
+तावदेव कृतमण्डने कलितकञ्चुलीककुचमण्डले  
+गण्डलोलमणिकुण्डले युवतिमण्डलेऽथ परिमण्डले ।  
+अन्तरा सकलसुन्दरीयुगलमिन्दिरारमण सञ्चरन्  
+मञ्जुलां तदनु रासकेलिमयि कञ्जनाभ समुपादधाः ॥ ६९२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वासुदेव तव भासमानमिह रासकेलिरससौरभं  
 दूरतोऽपि खलु नारदागदितमाकलय्य कुतुकाकुलाः ।  
 वेषभूषणविलासपेशलविलासिनीशतसमावृता  
 नाकतो युगपदागता वियति वेगतोऽथ सुरमण्डली ॥ ६९३॥
+</details>
+<details><summary>मूलम्</summary>
+
+वासुदेव तव भासमानमिह रासकेलिरससौरभं  
+दूरतोऽपि खलु नारदागदितमाकलय्य कुतुकाकुलाः ।  
+वेषभूषणविलासपेशलविलासिनीशतसमावृता  
+नाकतो युगपदागता वियति वेगतोऽथ सुरमण्डली ॥ ६९३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वेणुनादकृततानदानकलगानरागगतियोजना  
 लोभनीयमृदुपादपातकृततालमेलनमनोहरम् ।  
 पाणिसंक्वणितकङ्कणं च मुहुरं सलम्बितकराम्बुजं  
 श्रोणिबिम्बचलदम्बरं भजत रासकेलिरसडम्बरम् ॥ ६९४॥
+</details>
+<details><summary>मूलम्</summary>
+
+वेणुनादकृततानदानकलगानरागगतियोजना  
+लोभनीयमृदुपादपातकृततालमेलनमनोहरम् ।  
+पाणिसंक्वणितकङ्कणं च मुहुरं सलम्बितकराम्बुजं  
+श्रोणिबिम्बचलदम्बरं भजत रासकेलिरसडम्बरम् ॥ ६९४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रद्धया विरचितानुगानकृततारतारमधुरस्वरे  
 नर्तनेऽथ ललिताङ्गहारलुलिताङ्गहारमणिभूषणे ।  
 सम्मदेन कृतपुष्पवर्षमलमुन्मिषद्दिविषदां कुलं  
 चिन्मये त्वयि निलीयमानमिव संमुमोह सवधूकुलम् ॥ ६९५॥
+</details>
+<details><summary>मूलम्</summary>
+
+श्रद्धया विरचितानुगानकृततारतारमधुरस्वरे  
+नर्तनेऽथ ललिताङ्गहारलुलिताङ्गहारमणिभूषणे ।  
+सम्मदेन कृतपुष्पवर्षमलमुन्मिषद्दिविषदां कुलं  
+चिन्मये त्वयि निलीयमानमिव संमुमोह सवधूकुलम् ॥ ६९५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्विन्नसन्नतनुवल्लरी तदनु कापि नाम पशुपाङ्गना  
 कान्तमंसमवलम्बते स्म तव तान्तिभारमुकुलेक्षणा ।  
 काचिदाचलितकुन्तला नवपटीरसारनवसौरभं  
 वञ्चनेन तव सञ्चुचुम्ब भुजमञ्चितोरुपुलकाङ्कुरम् ॥ ६९६॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्विन्नसन्नतनुवल्लरी तदनु कापि नाम पशुपाङ्गना  
+कान्तमंसमवलम्बते स्म तव तान्तिभारमुकुलेक्षणा ।  
+काचिदाचलितकुन्तला नवपटीरसारनवसौरभं  
+वञ्चनेन तव सञ्चुचुम्ब भुजमञ्चितोरुपुलकाङ्कुरम् ॥ ६९६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कापि गण्डभुवि सन्निधाय निजगण्डमाकुलितकुण्डलं  
 पुण्यपूरनिधिरन्ववाप तव पूगचर्वितरसामृतम् ।  
 इन्दिराविहृतिमन्दिरं भुवनसुन्दरं हि नटनान्तरे  
 त्वामवाप्य दधुरङ्गनाः किमु न सम्मदोन्मददशान्तरम् ॥ ६९७॥
+</details>
+<details><summary>मूलम्</summary>
+
+कापि गण्डभुवि सन्निधाय निजगण्डमाकुलितकुण्डलं  
+पुण्यपूरनिधिरन्ववाप तव पूगचर्वितरसामृतम् ।  
+इन्दिराविहृतिमन्दिरं भुवनसुन्दरं हि नटनान्तरे  
+त्वामवाप्य दधुरङ्गनाः किमु न सम्मदोन्मददशान्तरम् ॥ ६९७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गानमीश विरतं क्रमेण किल वाद्यमेलनमुपारतं  
 ब्रह्मसम्मदरसाकुलाः सदसि केवलं ननृतुरङ्गनाः ।  
 नाविदन्नपि च नीविकां किमपि कुन्तलीमपि च कञ्चुलीं  
 ज्योतिषामपि कदम्बकं दिवि विलम्बितं किमपरं ब्रुवे ॥ ६९८॥
+</details>
+<details><summary>मूलम्</summary>
+
+गानमीश विरतं क्रमेण किल वाद्यमेलनमुपारतं  
+ब्रह्मसम्मदरसाकुलाः सदसि केवलं ननृतुरङ्गनाः ।  
+नाविदन्नपि च नीविकां किमपि कुन्तलीमपि च कञ्चुलीं  
+ज्योतिषामपि कदम्बकं दिवि विलम्बितं किमपरं ब्रुवे ॥ ६९८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मोदसीम्नि भुवनं विलाप्य विहृतिं समाप्य च ततो विभो  
 केलिसम्मृदितनिर्मलाङ्गनवघर्मलेशसुभगात्मनाम् ।  
 मन्मथासहनचेतसां पशुपयोषितां सुकृतचोदित  
 स्तावदाकलितमूर्तिरादधिथ मारवीरपरमोत्सवान् ॥ ६९९॥
+</details>
+<details><summary>मूलम्</summary>
+
+मोदसीम्नि भुवनं विलाप्य विहृतिं समाप्य च ततो विभो  
+केलिसम्मृदितनिर्मलाङ्गनवघर्मलेशसुभगात्मनाम् ।  
+मन्मथासहनचेतसां पशुपयोषितां सुकृतचोदित  
+स्तावदाकलितमूर्तिरादधिथ मारवीरपरमोत्सवान् ॥ ६९९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 केलिभेदपरिलोलिताभिरतिलालिताभिरबलालिभिः  
 स्वैरमीश ननु सूरजापयसि चारु नाम विहृतिं व्यधाः ।  
 काननेऽपि च विसारिशीतलकिशोरमारुतमनोहरे  
 सूनसौरभमये विलेसिथ विलासिनीशतविमोहनम् ॥ ६९१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+केलिभेदपरिलोलिताभिरतिलालिताभिरबलालिभिः  
+स्वैरमीश ननु सूरजापयसि चारु नाम विहृतिं व्यधाः ।  
+काननेऽपि च विसारिशीतलकिशोरमारुतमनोहरे  
+सूनसौरभमये विलेसिथ विलासिनीशतविमोहनम् ॥ ६९१०॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कामिनीरिति हि यामिनीषु खलु कामनीयकनिधे भवान्  
 पूर्णसम्मदरसार्णवं कमपि योगिगम्यमनुभावयन् ।  
 ब्रह्मशङ्करमुखानपीह पशुपाङ्गनासु बहुमानयन्  
 भक्तलोकगमनीयरूप कमनीय कृष्ण परिपाहि माम् ॥ ६९११॥
+</details>
+<details><summary>मूलम्</summary>
+
+कामिनीरिति हि यामिनीषु खलु कामनीयकनिधे भवान्  
+पूर्णसम्मदरसार्णवं कमपि योगिगम्यमनुभावयन् ।  
+ब्रह्मशङ्करमुखानपीह पशुपाङ्गनासु बहुमानयन्  
+भक्तलोकगमनीयरूप कमनीय कृष्ण परिपाहि माम् ॥ ६९११॥
+</details>
+
