--- a/laxyam/padyam/purANam/nArAyaNIyam/072.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/072.md
@@ -3,89 +3,200 @@ title: ०७२
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कंसोऽथ नारदगिरा व्रजवासिनं त्वामाकर्ण्य दीर्णहृदयः स हि गान्दिनेयम् ।  
 आहूय कार्मुकमखच्छलतो भवन्तमानेतुमेनमहिनोदहिनाथशायिन् ॥ ७२१॥
+</details>
+<details><summary>मूलम्</summary>
+
+कंसोऽथ नारदगिरा व्रजवासिनं त्वामाकर्ण्य दीर्णहृदयः स हि गान्दिनेयम् ।  
+आहूय कार्मुकमखच्छलतो भवन्तमानेतुमेनमहिनोदहिनाथशायिन् ॥ ७२१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अक्रूर एष भवदङ्घ्रिपरश्चिराय  
 त्वद्दर्शनाक्षममनाः क्षितिपालभीत्या ।  
 तस्याज्ञयैव पुनरीक्षितुमुद्यतस्त्वाम्  
 आनन्दभारमतिभूरितरं बभार ॥ ७२२॥
+</details>
+<details><summary>मूलम्</summary>
+
+अक्रूर एष भवदङ्घ्रिपरश्चिराय  
+त्वद्दर्शनाक्षममनाः क्षितिपालभीत्या ।  
+तस्याज्ञयैव पुनरीक्षितुमुद्यतस्त्वाम्  
+आनन्दभारमतिभूरितरं बभार ॥ ७२२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोऽयं रथेन सुकृती भवतो निवासं  
 गच्छन्मनोरथगणांस्त्वयि धार्यमाणान् ।  
 आस्वादयन्मुहुरपायभयेन दैवं  
 संप्रार्थयन्पथि न किञ्चिदपि व्यजानात् ॥ ७२३॥
+</details>
+<details><summary>मूलम्</summary>
+
+सोऽयं रथेन सुकृती भवतो निवासं  
+गच्छन्मनोरथगणांस्त्वयि धार्यमाणान् ।  
+आस्वादयन्मुहुरपायभयेन दैवं  
+संप्रार्थयन्पथि न किञ्चिदपि व्यजानात् ॥ ७२३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 द्रक्ष्यामि देवशतगीतगतिं पुमांसं  
 स्प्रक्ष्यामि किंस्विदपिनाम परिष्वजेयम् ।  
 किं वक्ष्यते स खलु मां क्वनु वीक्षितः स्या  
 दित्थं निनाय स भवन्मयमेव मार्गम् ॥ ७२४॥
+</details>
+<details><summary>मूलम्</summary>
+
+द्रक्ष्यामि देवशतगीतगतिं पुमांसं  
+स्प्रक्ष्यामि किंस्विदपिनाम परिष्वजेयम् ।  
+किं वक्ष्यते स खलु मां क्वनु वीक्षितः स्या  
+दित्थं निनाय स भवन्मयमेव मार्गम् ॥ ७२४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयः क्रमादभिविशन्भवदङ्घ्रिपूतं  
 बृन्दावनं हरविरिञ्चसुराभिवन्द्यम् ।  
 आनन्दमग्न इव लग्न इव प्रमोहे  
 किं किं दशान्तरमवाप न पङ्कजाक्ष ॥ ७२५॥
+</details>
+<details><summary>मूलम्</summary>
+
+भूयः क्रमादभिविशन्भवदङ्घ्रिपूतं  
+बृन्दावनं हरविरिञ्चसुराभिवन्द्यम् ।  
+आनन्दमग्न इव लग्न इव प्रमोहे  
+किं किं दशान्तरमवाप न पङ्कजाक्ष ॥ ७२५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पश्यन्नवन्दत भवद्विहृतिस्थलानि  
 पांसुष्ववेष्टत भवच्चरणाङ्कितेषु ।  
 किं ब्रूमहे बहुजना हि तदापि जाता  
 एवं तु भक्तितरला विरलाः परात्मन् ॥ ७२६॥
+</details>
+<details><summary>मूलम्</summary>
+
+पश्यन्नवन्दत भवद्विहृतिस्थलानि  
+पांसुष्ववेष्टत भवच्चरणाङ्कितेषु ।  
+किं ब्रूमहे बहुजना हि तदापि जाता  
+एवं तु भक्तितरला विरलाः परात्मन् ॥ ७२६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सायं स गोपभवनानि भवच्चरित्र  
 गीतामृतप्रसृतकर्णरसायनानि ।  
 पश्यन्प्रमोदसरिदेव किलोह्यमानो  
 गच्छन्भवद्भवन सन्निधिमन्वयासीत् ॥ ७२७॥
+</details>
+<details><summary>मूलम्</summary>
+
+सायं स गोपभवनानि भवच्चरित्र  
+गीतामृतप्रसृतकर्णरसायनानि ।  
+पश्यन्प्रमोदसरिदेव किलोह्यमानो  
+गच्छन्भवद्भवन सन्निधिमन्वयासीत् ॥ ७२७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावद्ददर्श पशुदोहविलोकलोलं  
 भक्तोत्तमागतिमिव प्रतिपालयन्तम् ।  
 भूमन् भवन्तमयमग्रजवन्तमन्त  
 र्ब्रह्मानुभूतिरससिन्धुमिवोद्वमन्तम् ॥ ७२८॥
+</details>
+<details><summary>मूलम्</summary>
+
+तावद्ददर्श पशुदोहविलोकलोलं  
+भक्तोत्तमागतिमिव प्रतिपालयन्तम् ।  
+भूमन् भवन्तमयमग्रजवन्तमन्त  
+र्ब्रह्मानुभूतिरससिन्धुमिवोद्वमन्तम् ॥ ७२८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सायन्तनाप्लवविशेषविविक्तगात्रौ द्वौ पीतनीलरुचिराम्बरलोभनीयौ ।  
 नातिप्रपञ्चधृतभूषणचारुवेषौ मन्दस्मितार्द्रवदनौ स युवां ददर्श ॥ ७२९॥
+</details>
+<details><summary>मूलम्</summary>
+
+सायन्तनाप्लवविशेषविविक्तगात्रौ द्वौ पीतनीलरुचिराम्बरलोभनीयौ ।  
+नातिप्रपञ्चधृतभूषणचारुवेषौ मन्दस्मितार्द्रवदनौ स युवां ददर्श ॥ ७२९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दूराद्रथात्समवरुह्य नमन्तमेनमुत्थाप्य भक्तकुलमौलिमथोपगूहन् ।  
 हर्षान्मिताक्षरगिरा कुशलानुयोगी पाणिं प्रग्र्ह्य सबलोऽथ गृहं निनेथ ॥ ७२१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+दूराद्रथात्समवरुह्य नमन्तमेनमुत्थाप्य भक्तकुलमौलिमथोपगूहन् ।  
+हर्षान्मिताक्षरगिरा कुशलानुयोगी पाणिं प्रग्र्ह्य सबलोऽथ गृहं निनेथ ॥ ७२१०॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नन्देन साकममितादरमर्चयित्वा तं यादवं तदुदितां निशमय्य वार्ताम् ।  
 गोपेषु भूपतिनिदेशकथां निवेद्य नानाकथाभिरिह तेन निशामनैषीः ॥ ७२११॥
+</details>
+<details><summary>मूलम्</summary>
+
+नन्देन साकममितादरमर्चयित्वा तं यादवं तदुदितां निशमय्य वार्ताम् ।  
+गोपेषु भूपतिनिदेशकथां निवेद्य नानाकथाभिरिह तेन निशामनैषीः ॥ ७२११॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_12.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चन्द्रागृहे किमुत चन्द्रभगागृहे नु  
 राधागृहे नु भवने किमु मैत्रविन्दे ।  
 धूर्त्तो विलम्बत इति प्रमदाभिरुच्चै  
 राशङ्कितो निशि मरुत्पुरनाथ पायाः ॥ ७२१२॥
+</details>
+<details><summary>मूलम्</summary>
+
+चन्द्रागृहे किमुत चन्द्रभगागृहे नु  
+राधागृहे नु भवने किमु मैत्रविन्दे ।  
+धूर्त्तो विलम्बत इति प्रमदाभिरुच्चै  
+राशङ्कितो निशि मरुत्पुरनाथ पायाः ॥ ७२१२॥
+</details>
+
