--- a/laxyam/padyam/purANam/nArAyaNIyam/078.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/078.md
@@ -3,61 +3,140 @@ title: ०७८
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रिदशवर्धकिवर्धितकौशलं त्रिदशदत्तसमस्तविभूतिमत् ।  
 जलधिमध्यगतं त्वमभूषयो नवपुरं वपुरञ्चितरोचिषा ॥ ७८१॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्रिदशवर्धकिवर्धितकौशलं त्रिदशदत्तसमस्तविभूतिमत् ।  
+जलधिमध्यगतं त्वमभूषयो नवपुरं वपुरञ्चितरोचिषा ॥ ७८१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ददुषि रेवतभूभृति रेवतीं हलभृते तनयां विधिशासनात् ।  
 महितमुत्सवघोषमपूपुषः समुदितैर्मुदितैः सह यादवैः ॥ ७८२॥
+</details>
+<details><summary>मूलम्</summary>
+
+ददुषि रेवतभूभृति रेवतीं हलभृते तनयां विधिशासनात् ।  
+महितमुत्सवघोषमपूपुषः समुदितैर्मुदितैः सह यादवैः ॥ ७८२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ विदर्भसुतां खलु रुक्मिणीं प्रणयिनीं त्वयि देव सहोदरः ।  
 स्वयमदित्सत चेदिमहीभुजे स्वतमसा तमसाधुमुपाश्रयन् ॥ ७८३॥
+</details>
+<details><summary>मूलम्</summary>
+
+अथ विदर्भसुतां खलु रुक्मिणीं प्रणयिनीं त्वयि देव सहोदरः ।  
+स्वयमदित्सत चेदिमहीभुजे स्वतमसा तमसाधुमुपाश्रयन् ॥ ७८३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चिरधृतप्रणया त्वयि बालिका सपदि काङ्क्षितभङ्गसमाकुला ।  
 तव निवेदयितुं द्विजमादिशत्स्वकदनं कदनङ्गविनिर्मितम् ॥ ७८४॥
+</details>
+<details><summary>मूलम्</summary>
+
+चिरधृतप्रणया त्वयि बालिका सपदि काङ्क्षितभङ्गसमाकुला ।  
+तव निवेदयितुं द्विजमादिशत्स्वकदनं कदनङ्गविनिर्मितम् ॥ ७८४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 द्विजसुतोऽपि च तूर्णमुपाययौ तव पुरं हि दुराशदुरासदम् ।  
 मुदमवाप च सादरपूजितः स भवता भवतापहृता स्वयम् ॥ ७८५॥
+</details>
+<details><summary>मूलम्</summary>
+
+द्विजसुतोऽपि च तूर्णमुपाययौ तव पुरं हि दुराशदुरासदम् ।  
+मुदमवाप च सादरपूजितः स भवता भवतापहृता स्वयम् ॥ ७८५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स च भवन्तमवोचत कुण्डिने नृपसुता खलु राजति रुक्मिणी ।  
 त्वयि समुत्सुकया निजधीरतारहितया हि तया प्रहितोऽस्म्यहम् ॥ ७८६॥
+</details>
+<details><summary>मूलम्</summary>
+
+स च भवन्तमवोचत कुण्डिने नृपसुता खलु राजति रुक्मिणी ।  
+त्वयि समुत्सुकया निजधीरतारहितया हि तया प्रहितोऽस्म्यहम् ॥ ७८६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव हृतास्मि पुरैव गुणैरहं हरति मां किल चेदिनृपोऽधुना ।  
 अयि कृपालय पालय मामिति प्रजगदे जगदेकपते तया ॥ ७८७॥
+</details>
+<details><summary>मूलम्</summary>
+
+तव हृतास्मि पुरैव गुणैरहं हरति मां किल चेदिनृपोऽधुना ।  
+अयि कृपालय पालय मामिति प्रजगदे जगदेकपते तया ॥ ७८७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अशरणां यदि मां त्वमुपेक्षसे सपदि जीवितमेव जहाम्यहम् ।  
 इति गिरा सुतनोरतनोद्भृशं सुहृदयं हृदयं तव कातरम् ॥ ७८८॥
+</details>
+<details><summary>मूलम्</summary>
+
+अशरणां यदि मां त्वमुपेक्षसे सपदि जीवितमेव जहाम्यहम् ।  
+इति गिरा सुतनोरतनोद्भृशं सुहृदयं हृदयं तव कातरम् ॥ ७८८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अकथयस्त्वमथैनमये सखे तदधिका मम मन्मथवेदना ।  
 नृपसमक्षमुपेत्य हराम्यहं तदयि तां दयितामसितेक्षणाम् ॥ ७८९॥
+</details>
+<details><summary>मूलम्</summary>
+
+अकथयस्त्वमथैनमये सखे तदधिका मम मन्मथवेदना ।  
+नृपसमक्षमुपेत्य हराम्यहं तदयि तां दयितामसितेक्षणाम् ॥ ७८९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रमुदितेन च तेन समं तदा रथगतो लघु कुण्डिनमेयिवान् ।  
 गुरुमरुत्पुरनायक मे भवान्वितनुतां तनुतामखिलापदाम् ॥ ७८१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रमुदितेन च तेन समं तदा रथगतो लघु कुण्डिनमेयिवान् ।  
+गुरुमरुत्पुरनायक मे भवान्वितनुतां तनुतामखिलापदाम् ॥ ७८१०॥
+</details>
+
