--- a/laxyam/padyam/purANam/nArAyaNIyam/079.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/079.md
@@ -3,73 +3,168 @@ title: ०७९
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बलसमेतबलानुगतो भवान् पुरमगाहत भीष्मकमानितः ।  
 द्विजसुतं त्वदुपागमवादिनं धृतरसा तरसा प्रणनाम सा ॥ ७९१॥
+</details>
+<details><summary>मूलम्</summary>
+
+बलसमेतबलानुगतो भवान् पुरमगाहत भीष्मकमानितः ।  
+द्विजसुतं त्वदुपागमवादिनं धृतरसा तरसा प्रणनाम सा ॥ ७९१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भुवनकान्तमवेक्ष्य भवद्वपुर्नृपसुतस्य निशम्य च चेष्टितम् ।  
 विपुलखेदजुषां पुरवासिनां सरुदितैरुदितैरगमन्निशा ॥ ७९२॥
+</details>
+<details><summary>मूलम्</summary>
+
+भुवनकान्तमवेक्ष्य भवद्वपुर्नृपसुतस्य निशम्य च चेष्टितम् ।  
+विपुलखेदजुषां पुरवासिनां सरुदितैरुदितैरगमन्निशा ॥ ७९२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु वन्दितुमिन्दुमुखी शिवां विहितमङ्गलभूषणभासुरा ।  
 निरगमद्भवदर्पितजीविता स्वपुरतः पुरतः सुभटावृता ॥ ७९३॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदनु वन्दितुमिन्दुमुखी शिवां विहितमङ्गलभूषणभासुरा ।  
+निरगमद्भवदर्पितजीविता स्वपुरतः पुरतः सुभटावृता ॥ ७९३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुलवधूभिरुपेत्य कुमारिका गिरिसुतां परिपूज्य च सादरम् ।  
 मुहुरयाचत तत्पदपङ्कजे निपतिता पतितां तव केवलम् ॥ ७९४॥
+</details>
+<details><summary>मूलम्</summary>
+
+कुलवधूभिरुपेत्य कुमारिका गिरिसुतां परिपूज्य च सादरम् ।  
+मुहुरयाचत तत्पदपङ्कजे निपतिता पतितां तव केवलम् ॥ ७९४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समवलोक कुतुहलसङ्कुले नृपकुले निभृतं त्वयि च स्थिते ।  
 नृपसुता निरगात् ग्रिजालयात् सुरुचिरं रुचिरञ्जितदिङ्मुखा ॥ ७९५॥
+</details>
+<details><summary>मूलम्</summary>
+
+समवलोक कुतुहलसङ्कुले नृपकुले निभृतं त्वयि च स्थिते ।  
+नृपसुता निरगात् ग्रिजालयात् सुरुचिरं रुचिरञ्जितदिङ्मुखा ॥ ७९५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भुवनमोहनरूपरुचा तदा विवशिताखिलराजकदम्बया ।  
 त्वमपि देव कटाक्षविमोक्षणैः प्रमदया मदयाञ्चकृषे मनाक् ॥ ७९६॥
+</details>
+<details><summary>मूलम्</summary>
+
+भुवनमोहनरूपरुचा तदा विवशिताखिलराजकदम्बया ।  
+त्वमपि देव कटाक्षविमोक्षणैः प्रमदया मदयाञ्चकृषे मनाक् ॥ ७९६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्व तु गमिष्यसि चन्द्रमुखीति तां सरसमेत्य करेण हरन् क्षणात् ।  
 समधिरोप्य रथं त्वमपाहृथा भुवि ततो विततो निनदो द्विषाम् ॥ ७९७॥
+</details>
+<details><summary>मूलम्</summary>
+
+क्व तु गमिष्यसि चन्द्रमुखीति तां सरसमेत्य करेण हरन् क्षणात् ।  
+समधिरोप्य रथं त्वमपाहृथा भुवि ततो विततो निनदो द्विषाम् ॥ ७९७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्वनु गतः पशुपाल इति क्रुधा कृतरणा यदुभिश्च जिता नृपाः ।  
 न तु भवानुदचाल्यत तैरहो पिशुनकैः शुनकैरिव केसरी ॥ ७९८॥
+</details>
+<details><summary>मूलम्</summary>
+
+क्वनु गतः पशुपाल इति क्रुधा कृतरणा यदुभिश्च जिता नृपाः ।  
+न तु भवानुदचाल्यत तैरहो पिशुनकैः शुनकैरिव केसरी ॥ ७९८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु रुक्मिणमागतमाहवे वधमुपेक्ष्य निबध्य विरूपयन् ।  
 हृतमदं परिमुच्य बलोक्तिभिः पुरमया रमया सह कान्तया ॥ ७९९॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदनु रुक्मिणमागतमाहवे वधमुपेक्ष्य निबध्य विरूपयन् ।  
+हृतमदं परिमुच्य बलोक्तिभिः पुरमया रमया सह कान्तया ॥ ७९९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नवसमागमलज्जितमानसां प्रणयकौतुकजृम्भितमन्मथाम् ।  
 अरमयः खलु नाथ यथासुखं रहसि तां हसितांशुलसन्मुखीम् ॥ ७९१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+नवसमागमलज्जितमानसां प्रणयकौतुकजृम्भितमन्मथाम् ।  
+अरमयः खलु नाथ यथासुखं रहसि तां हसितांशुलसन्मुखीम् ॥ ७९१०॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विविधनर्मभिरेवमहर्निशं प्रमदमाकलयन्पुनरेकदा ।  
 ऋजुमतेः किल वक्रागिरा भवान् वरतनोरतनोदतिलोलताम् ॥ ७९११॥
+</details>
+<details><summary>मूलम्</summary>
+
+विविधनर्मभिरेवमहर्निशं प्रमदमाकलयन्पुनरेकदा ।  
+ऋजुमतेः किल वक्रागिरा भवान् वरतनोरतनोदतिलोलताम् ॥ ७९११॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_12.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदधिकैरथ लालनकौशलैः प्रणयिनीमधिकं रमयन्निमाम् ।  
 अयि मुकुन्द भवच्चरितानि नः प्रगदतां गदतान्तिमपाकुरु ॥ ७९१२॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदधिकैरथ लालनकौशलैः प्रणयिनीमधिकं रमयन्निमाम् ।  
+अयि मुकुन्द भवच्चरितानि नः प्रगदतां गदतान्तिमपाकुरु ॥ ७९१२॥
+</details>
+
