--- a/laxyam/padyam/purANam/nArAyaNIyam/084.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/084.md
@@ -3,67 +3,154 @@ title: ०८४
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्वचिदथ तपनोपरागकाले पुरि निदधत्कृतवर्मकामसूनू ।  
 यदुकुलमहिलावृतः सुतीर्थं समुपगतोऽसि समन्तपञ्चकाख्यम् ॥ ८४१॥
+</details>
+<details><summary>मूलम्</summary>
+
+क्वचिदथ तपनोपरागकाले पुरि निदधत्कृतवर्मकामसूनू ।  
+यदुकुलमहिलावृतः सुतीर्थं समुपगतोऽसि समन्तपञ्चकाख्यम् ॥ ८४१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बहुतरजनताहिताय तत्र त्वमपि पुनन्विनिमज्ज्य तीर्थतोयं ।  
 द्विजगणपरिमुक्तवित्तराशिः सममिलथाः कुरुपाण्डवादिमित्रैः ॥ ८४२॥
+</details>
+<details><summary>मूलम्</summary>
+
+बहुतरजनताहिताय तत्र त्वमपि पुनन्विनिमज्ज्य तीर्थतोयं ।  
+द्विजगणपरिमुक्तवित्तराशिः सममिलथाः कुरुपाण्डवादिमित्रैः ॥ ८४२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव खलु दयिताजनैः समेता द्रुपदसुता त्वयि गाढभक्तिभारा ।  
 तदुदितभवदाहृतिप्रकारैरतिमुमुदे सममन्यभामिनीभिः ॥ ८४३॥
+</details>
+<details><summary>मूलम्</summary>
+
+तव खलु दयिताजनैः समेता द्रुपदसुता त्वयि गाढभक्तिभारा ।  
+तदुदितभवदाहृतिप्रकारैरतिमुमुदे सममन्यभामिनीभिः ॥ ८४३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु च भगवन् निरीक्ष्य गोपानतिकुतुकादुपगम्य मानयित्वा ।  
 चिरतरविरहातुराङ्गरेखाः पशुपवधूः सरसं त्वमन्वयासीः ॥ ८४४॥
+</details>
+<details><summary>मूलम्</summary>
+
+तदनु च भगवन् निरीक्ष्य गोपानतिकुतुकादुपगम्य मानयित्वा ।  
+चिरतरविरहातुराङ्गरेखाः पशुपवधूः सरसं त्वमन्वयासीः ॥ ८४४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सपदि च भवदीक्षणोत्सवेन प्रमुषितमानहृदां नितम्बिनीनाम् ।  
 अतिरसपरिमुक्तकञ्चुलीके परिचयहृद्यतरे कुचे न्यलैषीः ॥ ८४५॥
+</details>
+<details><summary>मूलम्</summary>
+
+सपदि च भवदीक्षणोत्सवेन प्रमुषितमानहृदां नितम्बिनीनाम् ।  
+अतिरसपरिमुक्तकञ्चुलीके परिचयहृद्यतरे कुचे न्यलैषीः ॥ ८४५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रिपुजनकलहैः पुनः पुनर्मे समुपगतैरियती विलम्बन्ऽआभूत् ।  
 इति कृतपरिरम्भणे त्वयि द्रागतिविवशा खलु राधिका निलिल्ये ॥ ८४६॥
+</details>
+<details><summary>मूलम्</summary>
+
+रिपुजनकलहैः पुनः पुनर्मे समुपगतैरियती विलम्बन्ऽआभूत् ।  
+इति कृतपरिरम्भणे त्वयि द्रागतिविवशा खलु राधिका निलिल्ये ॥ ८४६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपगतविरहव्यथास्तदा ता रहसि विधाय ददाथ तत्त्वबोधम् ।  
 परमसुखचिदात्मकोऽहमात्मेत्युदयतु वः स्फुटमेव चेतसीति ॥ ८४७॥
+</details>
+<details><summary>मूलम्</summary>
+
+अपगतविरहव्यथास्तदा ता रहसि विधाय ददाथ तत्त्वबोधम् ।  
+परमसुखचिदात्मकोऽहमात्मेत्युदयतु वः स्फुटमेव चेतसीति ॥ ८४७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुखरसपरिमिश्रितो वियोगः किमपि पुराभवदुद्धवोपदेशैः ।  
 समभवदमुतः परं तु तासां परमसुखैक्यमयी भवद्विचिन्ता ॥ ८४८॥
+</details>
+<details><summary>मूलम्</summary>
+
+सुखरसपरिमिश्रितो वियोगः किमपि पुराभवदुद्धवोपदेशैः ।  
+समभवदमुतः परं तु तासां परमसुखैक्यमयी भवद्विचिन्ता ॥ ८४८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मुनिवरनिवहैस्तवाथ पित्रा दुरितशमाय शुभानि पृच्छ्यमानैः ।  
 त्वयि सति किमिदं शुभान्तरैरित्युरुहसितैरपि याजितस्तदासौ ॥ ८४९॥
+</details>
+<details><summary>मूलम्</summary>
+
+मुनिवरनिवहैस्तवाथ पित्रा दुरितशमाय शुभानि पृच्छ्यमानैः ।  
+त्वयि सति किमिदं शुभान्तरैरित्युरुहसितैरपि याजितस्तदासौ ॥ ८४९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुमहति यजने वितायमाने प्रमुदितमित्रजने सहैव गोपाः ।  
 यदुजनमहितास्त्रिमासमात्रं भवदनुषङ्गरसं पुरेव भेजुः ॥ ८४१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+सुमहति यजने वितायमाने प्रमुदितमित्रजने सहैव गोपाः ।  
+यदुजनमहितास्त्रिमासमात्रं भवदनुषङ्गरसं पुरेव भेजुः ॥ ८४१०॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्यपगमसमये समेत्य राधां दृढमुपगूह्य निरीक्ष्य वीतखेदाम् ।  
 प्रमुदितहृदयः पुरं प्रयातः पवनपुरेश्वर पाहि मां गदेभ्यः ॥ ८४११॥
+</details>
+<details><summary>मूलम्</summary>
+
+व्यपगमसमये समेत्य राधां दृढमुपगूह्य निरीक्ष्य वीतखेदाम् ।  
+प्रमुदितहृदयः पुरं प्रयातः पवनपुरेश्वर पाहि मां गदेभ्यः ॥ ८४११॥
+</details>
+
