--- a/laxyam/padyam/purANam/nArAyaNIyam/087.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/087.md
@@ -3,61 +3,140 @@ title: ०८७
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुचेलनामा भवतः सतीर्थ्यतां गतः स सान्दीपनिमन्दिरे द्विजः ।  
 त्वदेकरागेण धनादिनिःस्पृहो दिनानि निन्ये प्रशमी गृहाश्रमी ॥ ८७१॥
+</details>
+<details><summary>मूलम्</summary>
+
+कुचेलनामा भवतः सतीर्थ्यतां गतः स सान्दीपनिमन्दिरे द्विजः ।  
+त्वदेकरागेण धनादिनिःस्पृहो दिनानि निन्ये प्रशमी गृहाश्रमी ॥ ८७१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समानशीलाऽपि तदीयवल्लभा तथैव नो चित्तजयं समेयुषी ।  
 कदाचिदूचे बत वृत्तिलब्धये रमापतिः किं न सखा निषेव्यते ॥ ८७२॥
+</details>
+<details><summary>मूलम्</summary>
+
+समानशीलाऽपि तदीयवल्लभा तथैव नो चित्तजयं समेयुषी ।  
+कदाचिदूचे बत वृत्तिलब्धये रमापतिः किं न सखा निषेव्यते ॥ ८७२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इतीरितोऽयं प्रियया क्षुधार्तया जुगुप्समानोऽपि धने मदावहे ।  
 तदा त्वदालोकनकौतुकाद्ययौ वहन्पटान्ते पृथुकानुपायनम् ॥ ८७३॥
+</details>
+<details><summary>मूलम्</summary>
+
+इतीरितोऽयं प्रियया क्षुधार्तया जुगुप्समानोऽपि धने मदावहे ।  
+तदा त्वदालोकनकौतुकाद्ययौ वहन्पटान्ते पृथुकानुपायनम् ॥ ८७३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गतोऽयमाश्चर्यमयीं भवत्पूरीं गृहेषु शैब्याभवनं समेयिवान् ।  
 प्रविश्य वैकुण्ठमिवाप निर्वृतिं तवातिसम्भावनया तु किं पुनः ॥ ८७४॥
+</details>
+<details><summary>मूलम्</summary>
+
+गतोऽयमाश्चर्यमयीं भवत्पूरीं गृहेषु शैब्याभवनं समेयिवान् ।  
+प्रविश्य वैकुण्ठमिवाप निर्वृतिं तवातिसम्भावनया तु किं पुनः ॥ ८७४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रपूजितं तं प्रियया च वीजितं करे गृहीत्वाऽकथयः पुरा कृतम् ।  
 यदिन्धनार्थं गुरुदारचोदितैरपर्तुवर्षं तदमर्षि कानने ॥ ८७५॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रपूजितं तं प्रियया च वीजितं करे गृहीत्वाऽकथयः पुरा कृतम् ।  
+यदिन्धनार्थं गुरुदारचोदितैरपर्तुवर्षं तदमर्षि कानने ॥ ८७५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रपाजुषोऽस्मात्पृथुकं बलादथ प्रगृह्य मुष्टौ सकृदाशिते त्वया ।  
 कृतं कृतं नन्वियतेति सम्भ्रमाद्रमा किलोपेत्य करं रुरोध ते ॥ ८७६॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्रपाजुषोऽस्मात्पृथुकं बलादथ प्रगृह्य मुष्टौ सकृदाशिते त्वया ।  
+कृतं कृतं नन्वियतेति सम्भ्रमाद्रमा किलोपेत्य करं रुरोध ते ॥ ८७६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भक्तेषु भक्तेन स मानितस्त्वया पुरीं वसन्नेकनिशां महासुखम् ।  
 बतापरेद्युर्द्रविणं विना ययौ विचित्ररूपस्तव खल्वनुग्रहः ॥ ८७७॥
+</details>
+<details><summary>मूलम्</summary>
+
+भक्तेषु भक्तेन स मानितस्त्वया पुरीं वसन्नेकनिशां महासुखम् ।  
+बतापरेद्युर्द्रविणं विना ययौ विचित्ररूपस्तव खल्वनुग्रहः ॥ ८७७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदि ह्ययचिष्यमदास्यदच्युतो वदामि भार्यां किमिति व्रजन्नसौ ।  
 त्वदुक्तिलीलास्मितमग्नधीः पुनः क्रमादपश्यन्मणिदीप्रमालयम् ॥ ८७८॥
+</details>
+<details><summary>मूलम्</summary>
+
+यदि ह्ययचिष्यमदास्यदच्युतो वदामि भार्यां किमिति व्रजन्नसौ ।  
+त्वदुक्तिलीलास्मितमग्नधीः पुनः क्रमादपश्यन्मणिदीप्रमालयम् ॥ ८७८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 किं मार्गविभ्रंश इति भ्रमन्क्षणं गृहं प्रविष्टः स ददर्श वल्लभाम् ।  
 सखीपरीतां मणिहेमभूषितां बुबोध च त्वत्करुणां महाद्भुताम् ॥ ८७९॥
+</details>
+<details><summary>मूलम्</summary>
+
+किं मार्गविभ्रंश इति भ्रमन्क्षणं गृहं प्रविष्टः स ददर्श वल्लभाम् ।  
+सखीपरीतां मणिहेमभूषितां बुबोध च त्वत्करुणां महाद्भुताम् ॥ ८७९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स रत्नशालासु वसन्नपि स्वयं समुन्नमद्भक्तिभरोऽमृतं ययौ ।  
 त्वमेवमापूरितभक्तवाञ्छितो मरुत्पुराधीश हरस्व मे गदान् ॥ ८७१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+स रत्नशालासु वसन्नपि स्वयं समुन्नमद्भक्तिभरोऽमृतं ययौ ।  
+त्वमेवमापूरितभक्तवाञ्छितो मरुत्पुराधीश हरस्व मे गदान् ॥ ८७१०॥
+</details>
+
