--- a/laxyam/padyam/purANam/nArAyaNIyam/088.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/088.md
@@ -3,95 +3,212 @@ title: ०८८
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रागेवाचार्यपुत्राहृतिनिशमनया स्वीयषट्सूनुवीक्षां  
 कांक्षन्त्या मातुरुक्त्या सुतलभुवि बलिं प्राप्य तेनार्चितस्त्वम् ।  
 धातुश्शापाद्धिरण्यान्वितकशिपुभवान्शौरिजान् कंसभग्ना  
 नानीयैनान् प्रदर्श्य स्वपदमनयथाः पूर्वपुत्रान्मरीचेः ॥ ८८१॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रागेवाचार्यपुत्राहृतिनिशमनया स्वीयषट्सूनुवीक्षां  
+कांक्षन्त्या मातुरुक्त्या सुतलभुवि बलिं प्राप्य तेनार्चितस्त्वम् ।  
+धातुश्शापाद्धिरण्यान्वितकशिपुभवान्शौरिजान् कंसभग्ना  
+नानीयैनान् प्रदर्श्य स्वपदमनयथाः पूर्वपुत्रान्मरीचेः ॥ ८८१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रुतदेव इति श्रुतं द्विजेन्द्रं बहुलाश्वं नृपतिं च भक्तिपूर्णम् ।  
 युगपत्त्वमनुग्रहीतुकामो मिथिलां प्रापिथ तापसैः समेतः ॥ ८८२॥
+</details>
+<details><summary>मूलम्</summary>
+
+श्रुतदेव इति श्रुतं द्विजेन्द्रं बहुलाश्वं नृपतिं च भक्तिपूर्णम् ।  
+युगपत्त्वमनुग्रहीतुकामो मिथिलां प्रापिथ तापसैः समेतः ॥ ८८२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गच्छन्द्विमूर्तिरुभयोर्युगपन्निकेतम्  
 एकेन भूरिविभवैर्विहितोपचारः ।  
 अन्येन तद्दिनभृतैश्च फलौदनाद्यै  
 स्तुल्यं प्रसेदिथ ददाथ च मुक्तिमाभ्याम् ॥ ८८३॥
+</details>
+<details><summary>मूलम्</summary>
+
+गच्छन्द्विमूर्तिरुभयोर्युगपन्निकेतम्  
+एकेन भूरिविभवैर्विहितोपचारः ।  
+अन्येन तद्दिनभृतैश्च फलौदनाद्यै  
+स्तुल्यं प्रसेदिथ ददाथ च मुक्तिमाभ्याम् ॥ ८८३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयोऽथ द्वारवत्यां द्विजतनयमृतिं तत्प्रलापानपि त्वं  
 को वा दैवं निरुन्ध्यादिति किल कथयन्विश्ववोढाऽप्यसोढाः ।  
 जिष्णोर्गर्वं विनेतुं त्वयि मनुजधिया कुण्ठितां चास्य बुद्धिं  
 तत्त्वारूढां विधातुं परमतमपदप्रेक्षणेनेति मन्ये ॥ ८८४॥
+</details>
+<details><summary>मूलम्</summary>
+
+भूयोऽथ द्वारवत्यां द्विजतनयमृतिं तत्प्रलापानपि त्वं  
+को वा दैवं निरुन्ध्यादिति किल कथयन्विश्ववोढाऽप्यसोढाः ।  
+जिष्णोर्गर्वं विनेतुं त्वयि मनुजधिया कुण्ठितां चास्य बुद्धिं  
+तत्त्वारूढां विधातुं परमतमपदप्रेक्षणेनेति मन्ये ॥ ८८४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नष्टा अष्टास्य पुत्राः पुनरपि तव तूपेक्षया कष्टवादः  
 स्पष्टो जातो जनानामथ तदवसरे द्वारकामाप पार्थः ।  
 मैत्र्या तत्रोषितोऽसौ नवमसुतमृतौ विप्रवर्यप्ररोदं  
 श्रुत्वा चक्रे प्रतिज्ञामनुपहृतसुतस्सन्निवेक्ष्ये कृशानुम् ॥ ८८५॥
+</details>
+<details><summary>मूलम्</summary>
+
+नष्टा अष्टास्य पुत्राः पुनरपि तव तूपेक्षया कष्टवादः  
+स्पष्टो जातो जनानामथ तदवसरे द्वारकामाप पार्थः ।  
+मैत्र्या तत्रोषितोऽसौ नवमसुतमृतौ विप्रवर्यप्ररोदं  
+श्रुत्वा चक्रे प्रतिज्ञामनुपहृतसुतस्सन्निवेक्ष्ये कृशानुम् ॥ ८८५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मानी स त्वामपृष्ट्वा द्विजनिलयगतो बाणजालैर्महास्त्रै  
 रुन्धानः सूतिगेहं पुनरपि सहसा दृष्टनष्टे कुमारे ।  
 याम्यामैन्द्रीं तथायास्सुरवरनगरीर्विद्ययाऽसाद्य सद्यो  
 मोघोद्योगः पतिष्यन्हुतभुजि भवता सस्मितं वारितोऽभूत् ॥ ८८६॥
+</details>
+<details><summary>मूलम्</summary>
+
+मानी स त्वामपृष्ट्वा द्विजनिलयगतो बाणजालैर्महास्त्रै  
+रुन्धानः सूतिगेहं पुनरपि सहसा दृष्टनष्टे कुमारे ।  
+याम्यामैन्द्रीं तथायास्सुरवरनगरीर्विद्ययाऽसाद्य सद्यो  
+मोघोद्योगः पतिष्यन्हुतभुजि भवता सस्मितं वारितोऽभूत् ॥ ८८६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सार्धं तेन प्रतीचीं दिशमतिजविना स्यन्दनेनाभियातो  
 लोकालोकं व्यतीतस्तिमिरभरमथो चक्रधाम्ना निरुन्धन् ।  
 चक्रांशुक्लिष्टदृष्टिं स्थितमथ विजयं पश्य पश्येति वारां  
 पारे त्वं प्राददशः किमपि हि तमसां दूरदूरं पदं ते ॥ ८८७॥
+</details>
+<details><summary>मूलम्</summary>
+
+सार्धं तेन प्रतीचीं दिशमतिजविना स्यन्दनेनाभियातो  
+लोकालोकं व्यतीतस्तिमिरभरमथो चक्रधाम्ना निरुन्धन् ।  
+चक्रांशुक्लिष्टदृष्टिं स्थितमथ विजयं पश्य पश्येति वारां  
+पारे त्वं प्राददशः किमपि हि तमसां दूरदूरं पदं ते ॥ ८८७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्रासीनं भुजङ्गाधिपशयनतले दिव्यभूषायुधाद्यै  
 रावीतं पीतचेलं प्रतिनवजलदश्यामलं श्रीमदङ्गम् ।  
 मूर्तीनामीशितारं परमिह तिसृणामेकमर्थं श्रुतीनां  
 त्वामेव त्वं परात्मन् प्रियसखसहितो नेमिथ क्षेमरूपम् ॥ ८८८॥
+</details>
+<details><summary>मूलम्</summary>
+
+तत्रासीनं भुजङ्गाधिपशयनतले दिव्यभूषायुधाद्यै  
+रावीतं पीतचेलं प्रतिनवजलदश्यामलं श्रीमदङ्गम् ।  
+मूर्तीनामीशितारं परमिह तिसृणामेकमर्थं श्रुतीनां  
+त्वामेव त्वं परात्मन् प्रियसखसहितो नेमिथ क्षेमरूपम् ॥ ८८८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 युवां मामेवद्वावधिकविवृतान्तर्हिततया  
 विभिन्नौ सुन्द्रष्टुं स्वयमहमहार्षं द्विजसुतान् ।  
 नयेतं द्रागेनानिति खलु वितीर्णान्पुनरमून्  
 द्विजायादायादाः प्रणुतमहिमा पाण्डुजनुषा ॥ ८८९॥
+</details>
+<details><summary>मूलम्</summary>
+
+युवां मामेवद्वावधिकविवृतान्तर्हिततया  
+विभिन्नौ सुन्द्रष्टुं स्वयमहमहार्षं द्विजसुतान् ।  
+नयेतं द्रागेनानिति खलु वितीर्णान्पुनरमून्  
+द्विजायादायादाः प्रणुतमहिमा पाण्डुजनुषा ॥ ८८९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं नानाविहारैर्जगदभिरमयन्वृष्णिवंशं प्रपुष्ण  
 न्नीजानो यज्ञभेदैरतुलविहृतिभिः प्रीणयन्नेणनेत्राः ।  
 भूभारक्षेपदम्भात् पदकमलजुषां मोक्षणायावतीर्णः  
 पूर्णं ब्रह्मैव साक्षाद्यदुषु मनुजतारूषितस्त्वं व्यलासीः ॥ ८८१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+एवं नानाविहारैर्जगदभिरमयन्वृष्णिवंशं प्रपुष्ण  
+न्नीजानो यज्ञभेदैरतुलविहृतिभिः प्रीणयन्नेणनेत्राः ।  
+भूभारक्षेपदम्भात् पदकमलजुषां मोक्षणायावतीर्णः  
+पूर्णं ब्रह्मैव साक्षाद्यदुषु मनुजतारूषितस्त्वं व्यलासीः ॥ ८८१०॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_11.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रायेण द्वारवत्यामवृतदयि तदी नारदस्त्वद्रसार्द्र  
 स्तस्माल्लेभे कदाचित्खलु सुकृतनिधिस्त्वत्पिता तत्त्वबोधम् ।  
 भक्तानामग्रयायी स च खलु मतिमानुद्धवस्त्वत्त एव  
 प्राप्तो विज्ञानसारं स किल जनहितायाधुनाऽस्ते वदर्याम् ॥ ८८११॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रायेण द्वारवत्यामवृतदयि तदी नारदस्त्वद्रसार्द्र  
+स्तस्माल्लेभे कदाचित्खलु सुकृतनिधिस्त्वत्पिता तत्त्वबोधम् ।  
+भक्तानामग्रयायी स च खलु मतिमानुद्धवस्त्वत्त एव  
+प्राप्तो विज्ञानसारं स किल जनहितायाधुनाऽस्ते वदर्याम् ॥ ८८११॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_12.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोऽयं कृष्णावतारो जयति तव विभो यत्र सौहार्दभीति  
 स्नेहद्वेषानुरागप्रभृतिभिरतुलैरश्रमैर्योगभेदैः ।  
 आर्तिं तीर्वा समस्ताममृतपदमगुस्सर्वतः सर्वलोकाः  
 स त्वं विश्वार्तिशान्त्यै पवनपुरपते भक्तिपूर्त्यै च भूयाः ॥ ८८१२॥
+</details>
+<details><summary>मूलम्</summary>
+
+सोऽयं कृष्णावतारो जयति तव विभो यत्र सौहार्दभीति  
+स्नेहद्वेषानुरागप्रभृतिभिरतुलैरश्रमैर्योगभेदैः ।  
+आर्तिं तीर्वा समस्ताममृतपदमगुस्सर्वतः सर्वलोकाः  
+स त्वं विश्वार्तिशान्त्यै पवनपुरपते भक्तिपूर्त्यै च भूयाः ॥ ८८१२॥
+</details>
+
