--- a/laxyam/padyam/purANam/nArAyaNIyam/092.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/092.md
@@ -3,81 +3,180 @@ title: ०९२
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वैदैस्सर्वाणि कर्माण्यफलपरतया वर्णितानीति बुध्वा  
 तानि त्वय्यर्पितान्येव हि समनुचरन् यानि नैष्कर्म्यमीश ।  
 मा भूद्वेदैर्निषिद्धे कुहचिदपि मनःकर्मवाचाः प्रवृत्ति  
 र्दुर्वर्ज्जञ्चेदवाप्तं तदपि खलु भवत्यर्पये चित्प्रकाशे ॥ ९२१॥
+</details>
+<details><summary>मूलम्</summary>
+
+वैदैस्सर्वाणि कर्माण्यफलपरतया वर्णितानीति बुध्वा  
+तानि त्वय्यर्पितान्येव हि समनुचरन् यानि नैष्कर्म्यमीश ।  
+मा भूद्वेदैर्निषिद्धे कुहचिदपि मनःकर्मवाचाः प्रवृत्ति  
+र्दुर्वर्ज्जञ्चेदवाप्तं तदपि खलु भवत्यर्पये चित्प्रकाशे ॥ ९२१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यस्त्वन्यः कर्मयोगस्तव भजनमयस्तत्र चाभीष्टमूर्तिं  
 हृद्यां सत्त्वैकरूपां दृषदि हृदि मृदि क्वापि वा भावयित्वा ।  
 पुष्पैर्गन्धैर्निवेद्यैरपि च विरचितैः शक्तितो भक्तिपूतै  
 र्नित्यं वर्यां सपर्यां विदधदयि विभो त्वत्प्रसादं भजेयम् ॥ ९२२॥
+</details>
+<details><summary>मूलम्</summary>
+
+यस्त्वन्यः कर्मयोगस्तव भजनमयस्तत्र चाभीष्टमूर्तिं  
+हृद्यां सत्त्वैकरूपां दृषदि हृदि मृदि क्वापि वा भावयित्वा ।  
+पुष्पैर्गन्धैर्निवेद्यैरपि च विरचितैः शक्तितो भक्तिपूतै  
+र्नित्यं वर्यां सपर्यां विदधदयि विभो त्वत्प्रसादं भजेयम् ॥ ९२२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्त्रीशूद्रास्त्वत्कथादिश्रवणविरहिता आसतां ते दयार्हा  
 स्त्वत्पादासन्नयातान्द्विजकुलजनुषो हन्त शोचाम्यशान्तान् ।  
 वृत्त्यर्थं ते यजन्तो बहुकथितमपि त्वामनाकर्णयन्तो  
 दृप्ता विद्याभिजात्यैः किमु न विदधते तादृशः मा कृथा माम् ॥ ९२३॥
+</details>
+<details><summary>मूलम्</summary>
+
+स्त्रीशूद्रास्त्वत्कथादिश्रवणविरहिता आसतां ते दयार्हा  
+स्त्वत्पादासन्नयातान्द्विजकुलजनुषो हन्त शोचाम्यशान्तान् ।  
+वृत्त्यर्थं ते यजन्तो बहुकथितमपि त्वामनाकर्णयन्तो  
+दृप्ता विद्याभिजात्यैः किमु न विदधते तादृशः मा कृथा माम् ॥ ९२३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पपोऽयं कृष्ण रामेत्यभिलपति निजं गूहितुं दुश्चारित्रं  
 निर्लज्जस्यास्य वाचा बहुतरकथनीयानि मे विघ्नितानि ।  
 भ्राता मे वन्ध्यशीलो भजति किल सदा विष्णुमित्थं बुधांस्ते  
 निन्दन्त्युच्चैर्हसन्ति त्वयि निहितरतींस्तादृशं मा कृथा माम् ॥ ९२४॥
+</details>
+<details><summary>मूलम्</summary>
+
+पपोऽयं कृष्ण रामेत्यभिलपति निजं गूहितुं दुश्चारित्रं  
+निर्लज्जस्यास्य वाचा बहुतरकथनीयानि मे विघ्नितानि ।  
+भ्राता मे वन्ध्यशीलो भजति किल सदा विष्णुमित्थं बुधांस्ते  
+निन्दन्त्युच्चैर्हसन्ति त्वयि निहितरतींस्तादृशं मा कृथा माम् ॥ ९२४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्वेतच्छायं कृते त्वां मुनिवरवपुषं प्रीणयन्ते तपोभि  
 स्त्रेतायां स्रुक्स्रुवाद्यङ्कितमरुणतनुं यज्ञरूपं यजन्ते ।  
 सेवन्ते तन्त्रमार्गैर्विलसदरिगदं द्वापरे श्यामलाङ्गं  
 नीलं सङ्कीर्तनाद्यैरिह कलिसमये मानुषास्त्वां भजन्ते ॥ ९२५॥
+</details>
+<details><summary>मूलम्</summary>
+
+श्वेतच्छायं कृते त्वां मुनिवरवपुषं प्रीणयन्ते तपोभि  
+स्त्रेतायां स्रुक्स्रुवाद्यङ्कितमरुणतनुं यज्ञरूपं यजन्ते ।  
+सेवन्ते तन्त्रमार्गैर्विलसदरिगदं द्वापरे श्यामलाङ्गं  
+नीलं सङ्कीर्तनाद्यैरिह कलिसमये मानुषास्त्वां भजन्ते ॥ ९२५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोऽयं कालेयकालो जयति मुररिपो यत्र सङ्कीर्तनाद्यै  
 र्निर्यत्नैरेव मार्गैरखिलद नचिरात्त्वत्प्रसादं भजन्ते ।  
 जातास्त्रेताकृतादावपि हि किल कलौ सम्भवं कामयन्ते  
 दैवात्तत्रैव जातान्विषयविषरसैर्मा विभो वञ्चयास्मान् ॥ ९२६॥
+</details>
+<details><summary>मूलम्</summary>
+
+सोऽयं कालेयकालो जयति मुररिपो यत्र सङ्कीर्तनाद्यै  
+र्निर्यत्नैरेव मार्गैरखिलद नचिरात्त्वत्प्रसादं भजन्ते ।  
+जातास्त्रेताकृतादावपि हि किल कलौ सम्भवं कामयन्ते  
+दैवात्तत्रैव जातान्विषयविषरसैर्मा विभो वञ्चयास्मान् ॥ ९२६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भक्तास्तावत्कलौ स्युर्द्रमिलभुवि ततो भूरिशस्तत्र चोच्चैः  
 कावेरीं ताम्रपर्णीमनुकिल धृतमालाञ्च पुण्यां प्रतीचीम् ।  
 हा मामप्येतदन्तर्भवमपि च विभो किञ्चिदञ्चिद्रसं त्व  
 य्याशापाशैर्निबध्य भ्रमय न भगवन् पूरय त्वन्निषेवाम् ॥ ९२७॥
+</details>
+<details><summary>मूलम्</summary>
+
+भक्तास्तावत्कलौ स्युर्द्रमिलभुवि ततो भूरिशस्तत्र चोच्चैः  
+कावेरीं ताम्रपर्णीमनुकिल धृतमालाञ्च पुण्यां प्रतीचीम् ।  
+हा मामप्येतदन्तर्भवमपि च विभो किञ्चिदञ्चिद्रसं त्व  
+य्याशापाशैर्निबध्य भ्रमय न भगवन् पूरय त्वन्निषेवाम् ॥ ९२७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृष्ट्वा धर्मद्रुहं तं कलिमपकरुणं प्राङ्महीक्षित्परीक्षि  
 द्धन्तुं व्याकृष्टखड्गोऽपि न विनिहतवान् सारवेदी गुणांशात् ।  
 त्वत्सेवाद्याशु सिध्येदसदिह न तथा त्वत्परे चैष भीरु  
 र्यत्तु प्रागेव रोगादिभिरपहरते तत्र हा शिक्षयैनम् ॥ ९२८॥
+</details>
+<details><summary>मूलम्</summary>
+
+दृष्ट्वा धर्मद्रुहं तं कलिमपकरुणं प्राङ्महीक्षित्परीक्षि  
+द्धन्तुं व्याकृष्टखड्गोऽपि न विनिहतवान् सारवेदी गुणांशात् ।  
+त्वत्सेवाद्याशु सिध्येदसदिह न तथा त्वत्परे चैष भीरु  
+र्यत्तु प्रागेव रोगादिभिरपहरते तत्र हा शिक्षयैनम् ॥ ९२८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गङ्गा गीता च गायत्र्यपि च तुलसिका गोपिकाचन्दनं तत्  
 सालग्रामाभिपूजा परपुरुष तथैकादशी नामवर्णाः ।  
 एतान्यष्टाप्ययत्नान्ययि कलिसमये त्वत्प्रसादप्रवृद्ध्या  
 क्षिप्रं मुक्तिप्रदानीत्यभिदधुरृषयस्तेषु मां सज्जयेथाः ॥ ९२९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+गङ्गा गीता च गायत्र्यपि च तुलसिका गोपिकाचन्दनं तत्  
+सालग्रामाभिपूजा परपुरुष तथैकादशी नामवर्णाः ।  
+एतान्यष्टाप्ययत्नान्ययि कलिसमये त्वत्प्रसादप्रवृद्ध्या  
+क्षिप्रं मुक्तिप्रदानीत्यभिदधुरृषयस्तेषु मां सज्जयेथाः ॥ ९२९ ॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 देवर्षीणां पितॄणामपि न पुनरृणी किङ्गरो वा स भूमन्  
 योऽसौ सर्वात्मना त्वां शरणमुपगतः सर्वकृत्यानि हित्वा ।  
 तस्योत्पन्नं विकर्माप्यखिलमपनुदस्येव चित्तस्थितस्त्वं  
 तन्मे पापोत्थतापान्पवनपुरपते रुन्दि भक्तिं प्रणीयाः ॥ ९२१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+देवर्षीणां पितॄणामपि न पुनरृणी किङ्गरो वा स भूमन्  
+योऽसौ सर्वात्मना त्वां शरणमुपगतः सर्वकृत्यानि हित्वा ।  
+तस्योत्पन्नं विकर्माप्यखिलमपनुदस्येव चित्तस्थितस्त्वं  
+तन्मे पापोत्थतापान्पवनपुरपते रुन्दि भक्तिं प्रणीयाः ॥ ९२१०॥
+</details>
+
