--- a/laxyam/padyam/purANam/nArAyaNIyam/097.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/097.md
@@ -3,81 +3,180 @@ title: ०९७
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रैगुण्याद्भिन्नरूपं भवति हि भुवने हीनमध्योत्तमं यत्  
 ज्ञानं श्रद्धा च कर्ता वसतिरपि सुखं कर्म चाहारभेदाः ।  
 त्वत्क्षेत्रत्वन्निषेवादि तु यदिह पुनस्त्वत्परं तत्तु सर्वं  
 प्राहुर्नैर्गुण्यनिष्ठं तदनुभजनतो मङ्क्षु सिद्धो भवेयम् ॥ ९७१॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्रैगुण्याद्भिन्नरूपं भवति हि भुवने हीनमध्योत्तमं यत्  
+ज्ञानं श्रद्धा च कर्ता वसतिरपि सुखं कर्म चाहारभेदाः ।  
+त्वत्क्षेत्रत्वन्निषेवादि तु यदिह पुनस्त्वत्परं तत्तु सर्वं  
+प्राहुर्नैर्गुण्यनिष्ठं तदनुभजनतो मङ्क्षु सिद्धो भवेयम् ॥ ९७१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वय्येव न्यस्तचित्तः सुखमयि विचरन्सर्वचेष्टास्त्वदर्थं  
 त्वद्भक्तैस्सेव्यमानानपि चरितचरानाश्रयन् पुंण्यदेशान् ।  
 दस्यौ विप्रे मृगादिष्वपि च सममतिर्मुच्यमानावमान  
 स्पर्धासूयादिदोषः सततमखिलभूतेषु संपूजये त्वाम् ॥ ९७२॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वय्येव न्यस्तचित्तः सुखमयि विचरन्सर्वचेष्टास्त्वदर्थं  
+त्वद्भक्तैस्सेव्यमानानपि चरितचरानाश्रयन् पुंण्यदेशान् ।  
+दस्यौ विप्रे मृगादिष्वपि च सममतिर्मुच्यमानावमान  
+स्पर्धासूयादिदोषः सततमखिलभूतेषु संपूजये त्वाम् ॥ ९७२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्भावो यावदेषु स्फुरति न विशदं तावदेवं ह्युपास्तिं  
 कुर्वन्नैकात्म्यबोधे झटिति विकसति त्वन्मयोऽहं चरेयम् ।  
 त्वद्धर्मस्यास्य तावत्किमपि न भगवन् प्रस्तुतस्य प्रणाश  
 स्तस्मात्सर्वात्मनैव प्रदिश मम विभो भक्तिमार्गं मनोझम् ॥ ९७३॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्वद्भावो यावदेषु स्फुरति न विशदं तावदेवं ह्युपास्तिं  
+कुर्वन्नैकात्म्यबोधे झटिति विकसति त्वन्मयोऽहं चरेयम् ।  
+त्वद्धर्मस्यास्य तावत्किमपि न भगवन् प्रस्तुतस्य प्रणाश  
+स्तस्मात्सर्वात्मनैव प्रदिश मम विभो भक्तिमार्गं मनोझम् ॥ ९७३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तञ्चैनं भक्तियोगं द्रढयितुमयि मे साध्यमारोग्यमायु  
 र्दिष्ट्या तत्रापि सेव्यं तव चरणमहो भेषजायेव दुग्धम् ।  
 मार्कण्डेयो हि पूर्वं गणकनिगदितद्वादशाब्दायुरुच्चैः  
 सेवित्वा वत्सरं त्वां तव भटनिवहैर्द्रावयामास मृत्युम् ॥ ९७४॥
+</details>
+<details><summary>मूलम्</summary>
+
+तञ्चैनं भक्तियोगं द्रढयितुमयि मे साध्यमारोग्यमायु  
+र्दिष्ट्या तत्रापि सेव्यं तव चरणमहो भेषजायेव दुग्धम् ।  
+मार्कण्डेयो हि पूर्वं गणकनिगदितद्वादशाब्दायुरुच्चैः  
+सेवित्वा वत्सरं त्वां तव भटनिवहैर्द्रावयामास मृत्युम् ॥ ९७४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मार्कण्डेयश्चिरायुस्स खलु पुनरपि त्वत्परः पुष्पभद्रा  
 तीरे निन्ये तपस्यन्नतुलसुखरतिः षट् तु मन्वन्तराणि ।  
 देवेन्द्रस्सप्तमस्तं सुरयुवतिमरुन्मन्मथैर्मोहयिष्यन्  
 योगोष्मप्लुष्यमाणैर्न तु पुनरशकत्त्वज्जनं निर्जयेत् कः ॥ ९७५॥
+</details>
+<details><summary>मूलम्</summary>
+
+मार्कण्डेयश्चिरायुस्स खलु पुनरपि त्वत्परः पुष्पभद्रा  
+तीरे निन्ये तपस्यन्नतुलसुखरतिः षट् तु मन्वन्तराणि ।  
+देवेन्द्रस्सप्तमस्तं सुरयुवतिमरुन्मन्मथैर्मोहयिष्यन्  
+योगोष्मप्लुष्यमाणैर्न तु पुनरशकत्त्वज्जनं निर्जयेत् कः ॥ ९७५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रीत्या नारायणाख्यस्त्वमथ नरसखः प्राप्तवानस्य पार्श्वं  
 तुष्ट्या तोष्टूयमानः स तु विविधवरैर्लोभितो नानुमेने ।  
 द्रष्टुं मायां त्वदीयां किल पुनरवृणोद्भक्तितृप्तान्तरात्मा  
 मायादुःखानभिज्ञस्तदपि मृगयते नूनमाश्चर्यहेतोः ॥ ९७६॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रीत्या नारायणाख्यस्त्वमथ नरसखः प्राप्तवानस्य पार्श्वं  
+तुष्ट्या तोष्टूयमानः स तु विविधवरैर्लोभितो नानुमेने ।  
+द्रष्टुं मायां त्वदीयां किल पुनरवृणोद्भक्तितृप्तान्तरात्मा  
+मायादुःखानभिज्ञस्तदपि मृगयते नूनमाश्चर्यहेतोः ॥ ९७६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_07.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 याते त्वय्याशु वाताकुलजलदगलत्तोयपूर्णातिघूर्ण  
 त्सप्तार्णोराशि मग्ने जगति स तु जले सम्भ्रमन्वर्षकोटीः ।  
 दीनः प्रैक्षिष्ट दूरे वटदलशयनं कञ्चिदाश्चर्यबालं  
 त्वामेव श्यामलाङ्गं वदनसरसिजन्यस्तपादाङ्गुलीकम् ॥ ९७७॥
+</details>
+<details><summary>मूलम्</summary>
+
+याते त्वय्याशु वाताकुलजलदगलत्तोयपूर्णातिघूर्ण  
+त्सप्तार्णोराशि मग्ने जगति स तु जले सम्भ्रमन्वर्षकोटीः ।  
+दीनः प्रैक्षिष्ट दूरे वटदलशयनं कञ्चिदाश्चर्यबालं  
+त्वामेव श्यामलाङ्गं वदनसरसिजन्यस्तपादाङ्गुलीकम् ॥ ९७७॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृष्ट्वा त्वां हृष्टरोमा त्वरितमभिगतः स्प्रष्टुकामो मुनीन्द्रः  
 श्वासेनान्तर्निविष्टः पुनरिह सकलं दृष्टवान् विष्टपौघम् ।  
 भूयोऽपि श्वासवातैर्बहिरनुपतितो वीक्षितस्त्वत्कटाक्षै  
 र्मोदादाश्लेष्टुकामस्त्वयि पिहिततनौ स्वाश्रमे प्राग्वदासीत् ॥ ९७८॥
+</details>
+<details><summary>मूलम्</summary>
+
+दृष्ट्वा त्वां हृष्टरोमा त्वरितमभिगतः स्प्रष्टुकामो मुनीन्द्रः  
+श्वासेनान्तर्निविष्टः पुनरिह सकलं दृष्टवान् विष्टपौघम् ।  
+भूयोऽपि श्वासवातैर्बहिरनुपतितो वीक्षितस्त्वत्कटाक्षै  
+र्मोदादाश्लेष्टुकामस्त्वयि पिहिततनौ स्वाश्रमे प्राग्वदासीत् ॥ ९७८॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गौर्या सार्धं तदग्रे पुरभिदथ गतस्त्वत्प्रियप्रेक्षणार्थी  
 सिद्धानेवास्य दत्त्वा स्वयमयमजरामृत्युतादीन् गतोऽभूत् ।  
 एवं त्वत्सेवयैव स्मररिपुरपि स प्रीयते येन तस्मा  
 न्मूर्तित्रय्यात्मकस्त्वं ननु सकलनियन्तेति सुव्यक्तमासीत् ॥ ९७९॥
+</details>
+<details><summary>मूलम्</summary>
+
+गौर्या सार्धं तदग्रे पुरभिदथ गतस्त्वत्प्रियप्रेक्षणार्थी  
+सिद्धानेवास्य दत्त्वा स्वयमयमजरामृत्युतादीन् गतोऽभूत् ।  
+एवं त्वत्सेवयैव स्मररिपुरपि स प्रीयते येन तस्मा  
+न्मूर्तित्रय्यात्मकस्त्वं ननु सकलनियन्तेति सुव्यक्तमासीत् ॥ ९७९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्र्यंशेऽस्मिन्सत्यलोके विधिहरिपुरभिन्मन्दिराण्यूर्ध्वमूर्ध्वं  
 तेभ्योऽप्यूर्ध्वं तु मायाविकृतिविरहितो भाति वैकुण्ठलोकः ।  
 तत्र त्वं कारणाम्भस्यपि पशुपकुले शुद्धसत्त्वैकरूपी  
 सच्चिद्ब्रह्माद्वयात्मा पवनपुरपते पाहि मां सर्वरोगात् ॥ ९७१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+त्र्यंशेऽस्मिन्सत्यलोके विधिहरिपुरभिन्मन्दिराण्यूर्ध्वमूर्ध्वं  
+तेभ्योऽप्यूर्ध्वं तु मायाविकृतिविरहितो भाति वैकुण्ठलोकः ।  
+तत्र त्वं कारणाम्भस्यपि पशुपकुले शुद्धसत्त्वैकरूपी  
+सच्चिद्ब्रह्माद्वयात्मा पवनपुरपते पाहि मां सर्वरोगात् ॥ ९७१०॥
+</details>
+
