--- a/laxyam/padyam/purANam/nArAyaNIyam/100.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/100.md
@@ -3,52 +3,112 @@ title: १००
 
 ---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_01.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्रे पश्यामि तेजो निबिडतरकलायावलीलोभनीयं  
 पीयूषाप्लावितोऽहं तदनु तदुदरे दिव्यकैशोरवेषम् ।  
 तारुण्यारम्भरम्यं परमसुखरसास्वादरोमाञ्चिताङ्गै  
 रावीतं नारदाद्यैविलसदुपनिषत्सुन्दरीमण्डलैश्च ॥ १००१॥
+</details>
+<details><summary>मूलम्</summary>
+
+अग्रे पश्यामि तेजो निबिडतरकलायावलीलोभनीयं  
+पीयूषाप्लावितोऽहं तदनु तदुदरे दिव्यकैशोरवेषम् ।  
+तारुण्यारम्भरम्यं परमसुखरसास्वादरोमाञ्चिताङ्गै  
+रावीतं नारदाद्यैविलसदुपनिषत्सुन्दरीमण्डलैश्च ॥ १००१॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_02.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नीलाभं कुञ्चिताग्रं घनममलतरं संयतं चारुभङ्ग्या  
 रत्नोत्तंसाभिरामं वलयितमुदयच्चन्द्रकैः पिञ्छजालैः ।  
 मन्दारस्रङ्निवीतं तव पृथुकबरीभारमालोकयेऽहं  
 स्निग्धश्चेतोर्ध्वपुण्ड्रामपि च सुललितां फालबालेन्दुवीथीम् ॥ १००२॥
+</details>
+<details><summary>मूलम्</summary>
+
+नीलाभं कुञ्चिताग्रं घनममलतरं संयतं चारुभङ्ग्या  
+रत्नोत्तंसाभिरामं वलयितमुदयच्चन्द्रकैः पिञ्छजालैः ।  
+मन्दारस्रङ्निवीतं तव पृथुकबरीभारमालोकयेऽहं  
+स्निग्धश्चेतोर्ध्वपुण्ड्रामपि च सुललितां फालबालेन्दुवीथीम् ॥ १००२॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_03.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हृद्यं पूर्णानुकम्पार्णवमृदुलहरीचञ्चलभ्रूविलासै  
 रानीलस्निग्धपक्ष्मावलिपरिलसितं नेत्रयुग्मं विभो ते ।  
 सान्द्रच्छायं विशालारुणकमलदलाकारमामुग्धतारं  
 कारुण्यालोकलीलाशिशिरितभुवनं क्षिप्यतां मय्यनाथे ॥ १००३॥
+</details>
+<details><summary>मूलम्</summary>
+
+हृद्यं पूर्णानुकम्पार्णवमृदुलहरीचञ्चलभ्रूविलासै  
+रानीलस्निग्धपक्ष्मावलिपरिलसितं नेत्रयुग्मं विभो ते ।  
+सान्द्रच्छायं विशालारुणकमलदलाकारमामुग्धतारं  
+कारुण्यालोकलीलाशिशिरितभुवनं क्षिप्यतां मय्यनाथे ॥ १००३॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_04.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तुङ्गोल्लासिनासं हरिमणिमुकुरप्रोल्लसद्गण्डपाली  
 व्यालोलत्कर्णपाशाञ्चितमकरमणीकुण्डलद्वन्द्वदीप्रम् ।  
 उन्मीलद्दन्तपङ्क्तिस्फुरदरुणतरच्छायबिम्बाधरान्तः  
 प्रीतिप्रस्यन्दिमन्दस्मितशिशिरतरं वक्त्रमुद्भासतां मे ॥ १००४॥
+</details>
+<details><summary>मूलम्</summary>
+
+उत्तुङ्गोल्लासिनासं हरिमणिमुकुरप्रोल्लसद्गण्डपाली  
+व्यालोलत्कर्णपाशाञ्चितमकरमणीकुण्डलद्वन्द्वदीप्रम् ।  
+उन्मीलद्दन्तपङ्क्तिस्फुरदरुणतरच्छायबिम्बाधरान्तः  
+प्रीतिप्रस्यन्दिमन्दस्मितशिशिरतरं वक्त्रमुद्भासतां मे ॥ १००४॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_05.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बाहुद्वन्द्वेन रत्नोज्वलवलयभृता शोणपाणिप्रवाले  
 नोपात्तां वेणुनालीं प्रसृतनखमयूखाङ्गुलीसङ्गशाराम् ।  
 कृत्वा वक्त्रारविन्द्रे सुमधुरविकसद्रागमुद्भाव्यमानैः  
 शब्दब्रह्मामृतैस्त्वं शिशिरितभुवनैस्सिञ्च मे कर्णवीथीम् ॥ १००५॥
+</details>
+<details><summary>मूलम्</summary>
+
+बाहुद्वन्द्वेन रत्नोज्वलवलयभृता शोणपाणिप्रवाले  
+नोपात्तां वेणुनालीं प्रसृतनखमयूखाङ्गुलीसङ्गशाराम् ।  
+कृत्वा वक्त्रारविन्द्रे सुमधुरविकसद्रागमुद्भाव्यमानैः  
+शब्दब्रह्मामृतैस्त्वं शिशिरितभुवनैस्सिञ्च मे कर्णवीथीम् ॥ १००५॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_06.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्सर्पत्कौस्तुभश्रीततिभिररुणितं कोमलं कण्ठदेशं  
 वक्षः श्रीवत्सरम्यं तरलतरसमुद्दीप्रहारप्रतानम् ।  
 नानावर्णप्रसूनावलिकिसलयिनीं वन्यमालां विलोल  
 ल्लोलम्बां लम्बमानामुरसि तव तथा भावये रत्नमालाम् ॥ १००६॥
+</details>
+<details><summary>मूलम्</summary>
+
+उत्सर्पत्कौस्तुभश्रीततिभिररुणितं कोमलं कण्ठदेशं  
+वक्षः श्रीवत्सरम्यं तरलतरसमुद्दीप्रहारप्रतानम् ।  
+नानावर्णप्रसूनावलिकिसलयिनीं वन्यमालां विलोल  
+ल्लोलम्बां लम्बमानामुरसि तव तथा भावये रत्नमालाम् ॥ १००६॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_07.mp3"></div>
 
@@ -63,25 +123,54 @@ title: १००
 च्छायां जानुद्वयं च क्रमपृथुलमनोज्ञे च जङ्घे निषेवे ॥ १००८,॥
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_08.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मञ्जीरं मञ्जुनादैरिव पदभजनं श्रेय इत्यालपन्तं  
 पादाग्रं भ्रान्तिमज्जत्प्रणतजनमनोमन्दरोद्धारकूर्मम् ।  
 उत्तुङ्गाताम्रराजन्नखरहिमकरज्योत्स्नया चाऽश्रितानां  
 सन्तापध्वान्तहत्त्रीं ततिमनुकलये मङ्गलामङ्गुलीनाम् ॥ १००९॥
+</details>
+<details><summary>मूलम्</summary>
+
+मञ्जीरं मञ्जुनादैरिव पदभजनं श्रेय इत्यालपन्तं  
+पादाग्रं भ्रान्तिमज्जत्प्रणतजनमनोमन्दरोद्धारकूर्मम् ।  
+उत्तुङ्गाताम्रराजन्नखरहिमकरज्योत्स्नया चाऽश्रितानां  
+सन्तापध्वान्तहत्त्रीं ततिमनुकलये मङ्गलामङ्गुलीनाम् ॥ १००९॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_09.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 योगीन्द्राणां त्वदङ्गेष्वधिकसुमधुरं मुक्तिभाजां निवासो  
 भक्तानां कामवर्षद्युतरुकिसलयं नाथ ते पादमूलम् ।  
 नित्यं चित्तस्थितं मे पवनपुरपते कृष्ण कारुण्यसिन्धो  
 हृत्वा निःशेषतापान्प्रदिशतु परमानन्दसन्दोहलक्ष्मीम् ॥ १००१०॥
+</details>
+<details><summary>मूलम्</summary>
+
+योगीन्द्राणां त्वदङ्गेष्वधिकसुमधुरं मुक्तिभाजां निवासो  
+भक्तानां कामवर्षद्युतरुकिसलयं नाथ ते पादमूलम् ।  
+नित्यं चित्तस्थितं मे पवनपुरपते कृष्ण कारुण्यसिन्धो  
+हृत्वा निःशेषतापान्प्रदिशतु परमानन्दसन्दोहलक्ष्मीम् ॥ १००१०॥
+</details>
+
+
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_10.mp3"></div>
-
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अज्ञात्वा ते महत्त्वं यदिह निगदितं विश्वनाथ क्षमेथाः  
 स्तोत्रं चैतत्सहस्रोत्तरमधिकतरं त्वत्प्रसादाय भूयात् ।  
 द्वेधा नारायणीयं श्रुतिषु च जनुषा स्तुत्यतावर्णनेन  
 स्फीतं लीलावतारैरिदमिह कुरुतामायुरारोग्यसौख्यम् ॥ १००११॥
+</details>
+<details><summary>मूलम्</summary>
+
+अज्ञात्वा ते महत्त्वं यदिह निगदितं विश्वनाथ क्षमेथाः  
+स्तोत्रं चैतत्सहस्रोत्तरमधिकतरं त्वत्प्रसादाय भूयात् ।  
+द्वेधा नारायणीयं श्रुतिषु च जनुषा स्तुत्यतावर्णनेन  
+स्फीतं लीलावतारैरिदमिह कुरुतामायुरारोग्यसौख्यम् ॥ १००११॥
+</details>
+
